Updated localization files.

--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -3,6 +3,7 @@ bg:
     share: "Сподели"
     my connections: "Свързани профили"
     connected as: "Свързани сте през %{connection} като %{username}."
+    remove connection: "Премахни тази връзка"
     connection friends: "Ето няколко потребителя от YouVersion с които сте свръзани през %{connection}:"
     errors:
       no friends: "Никой от твоите %{connection} приятели не е на YouVersion."
@@ -13,30 +14,41 @@ bg:
       name: "Туитър"
     facebook:
       name: "Фейсбук"
+      errors:
+        expired access: "Вашият символичен токен за достъп е изтекъл във Facebook. Моля, премахнете връзката си и се свържете отново към Facebook."
   api:
     users agree bool: "Трябва да се съгласите с условията за създаване на акаунт"
     users confirm password matches: "Новата парола не съвпада."
-    users email email: "Ел.поща е невалидна"
-    users email email rfc: "Ел.поща е невалидна"
-    users email not available: "Вече има профил с тази ел.поща"
-    users email not found: "Няма профил с тази ел.поща"
-    users email required: "Трябва да въведете email адрес"
+    users email email: "Имейлът е невалидна"
+    users email email rfc: "Имейлът, който въведохте е невалиден."
+    users email not available: "Вече има профил с този имейл адрес."
+    users email not found: "Няма профил с този имейл адрес."
+    users email required: "Трябва да въведете имейл адрес"
     users hash verified: "Профилът е проверен"
     users password change: "Новата ви парола трябва да бъде различна от старата."
     users password length: "Паролата трябва да съдържа най-малко 6 символа"
     users password required: "Трябва да въведете парола."
-    users username alpha numeric extra: "Потребителското може трябва да съдържа букви, цифри или тирета"
+    users username alpha numeric extra: "Потребителското име трябва да съдържа букви, цифри или тирета"
     users username not available: "Няма такъв потребител"
     users username or password invalid: "Името или паролата са невалидни"
     users username required: "Трябва да въведете потребителско име"
+    users first name required: "Трябва да въведете първото си име."
+    users last name required: "Трябва да въведете фамилия."
   meta:
+    kids_app:
+      title: "Приложението Bible за деца"
+      description: "..."
     100million:
       title: "Започва със 100 милиона"
+      description: "Приложението Bible е инсталирано почти 100 милиона пъти - едно невероятно постижение! Но ние сме само в началото. Изтеглете безплатното приложение Bible сега и след това го споделете с приятелите си. Нека правим история заедно."
     mobile:
       title: "Библията"
+      description: "Десетки милиони хора използват приложението Bible, за да четат, слушат, гледат и споделят Божието Слово, като го правят част от тяхното ежедневие. Изтеглете безплатното приложение и получете достъп до вашите отметки, бележки и планове за четене от всяко място. Насладете се на стотици версии, включително аудио, всички на вашето мобилно устройство."
     connections:
       index:
         title: "Свързани профили"
+  ui:
+    loading indicator text: "Зареждане..."
   now: "Сега"
   celebrating 50MM: "С над 50 милиона инсталирани приложения"
   link: "Връзка"
@@ -113,18 +125,17 @@ bg:
   search: "Търси"
   book: "Книга"
   filter book: "Филтър книги..."
-  save: "Запиши"
+  save: "Запази"
   cancel: "Откажи"
   try the beta: "Опитай БЕТА версията"
   welcome to the beta: "Добре дошли в новата YouVersion.com!"
-  highlight: "Маркирай"
+  highlight: "Маркирай стих"
   comment: "Нов коментар"
   note: "Нова бележка"
   selected: "Избрани"
   chapter: "Глава"
   bible: "Библия"
   notes title: "Бележки"
-  friends: "Приятели"
   groups: "Групи"
   mobile: "Мобилен"
   live: "На живо/групи"
@@ -145,13 +156,97 @@ bg:
   or:
     lower: "или"
     upper: "ИЛИ"
+  moments:
+    vod:
+      title: "Стих за деня"
+    friendship:
+      now friends: "Вече сте приятели с "
+    cta:
+      profile update text: "Помогнете на приятелите си да ви намерят"
+      profile update button: "Обнови профила"
+      sharing text: "Сподели стихове в социалните мрежи"
+      sharing button: "Активирай споделяне"
+      friends text: "Виж моменти на вашите приятели в Библията."
+      friends button: "Открии приятели"
+    action:
+      go to scripture: "Подобни стихове"
+      load more: "Зареди още"
+      like: "Харесай"
+      like title: "Харесайте това"
+      share: "Сподели"
+      share title: "Сподели с приятели"
+      comment: "Kоментар"
+      comment title: "Виж всички коментари"
+      edit: "Редактирай"
+      edit highlight title: "Редактиране на този акцент"
+      edit bookmark title: "Редактирай отбелязаното"
+      edit note title: "Редактирай"
+      delete: "Изтрий"
+      delete confirm: "Сигурни ли сте?"
+      delete highlight title: "Изтриване на този акцент"
+      delete bookmark title: "Изтрий тези отбелязвания"
+      delete note title: "Изтрий тази бележка"
+  notifications:
+    title: "Съобщения"
+    none: "Все още нямате никакви бележки"
+    no new: "Няма нови уведомления"
+    view all: "Виж всички Съобщения"
+  comments:
+    post comment: "Публикувай коментар"
+    create success: "Коментарът беше публикуван"
+    create failure: "Коментарът не може да бъде публикуван"
+    form:
+      save button: "Публикувай на"
+  friends:
+    you have N friends: "Имате %{count} приятели"
+    none me: "Споделете вашите моменти в Библията като отметки, акценти и бележки с най-близките си приятели и семейството си."
+    blank slate:
+      heading: "В момента не сте приятели"
+      description: "Вие трябва да сте приятели с този човек, за да видите неговите приятели."
+    limit notice: "Можете да имате най-много 150 приятели"
+    limit description: "Ограничаването на вашето приложение за Библията до приятелства с хора, които познавате добре, създава среда за честни разговори и споделени открития с доверени приятели."
+  friendships:
+    offer success: "Искането за приятелство е изпратено"
+    offer failure: "Грешка при изпращането на искането за приятелство"
+    create success: "Вече сте приятели"
+    create failure: "Грешка при създаване на приятелство"
+    destroy success: "Искането беше отказано"
+    destroy failure: "Грешка при отказването на искане"
+    requests title: "Покани за приятелство"
+    requests view all: "Виж всички Покани за приятелство"
+    requests none: "Вие нямате никакви молби за приятелство"
+    requests no new: "Няма нови искания"
+    status:
+      pending: "Искането е чакащо"
+      friends: "Моите приятели"
+    user wants friendship: "%{name} иска да ви бъде приятел"
+    user wants friendship partial: "иска да ви бъде приятел"
+    form:
+      remove friend button: "Премахнете приятел"
+      remove friend button title: "Премахнете този човек от списъка ви с приятели"
+      add friend button: "Добавяне на приятел"
+      add friend button title: "Изпрати на %{user} покана за приятелство"
+      accept button: "Приемете"
+      accept request button: "Приемете"
+      ignore button: "Игнориране"
+      ignore request button: "Игнориране"
   notes:
+    none user: "%{username} няма бележки."
+    blank slate:
+      heading: "Все още нямате никакви бележки"
+      description: "Като четете Библията, когато чувствате, че тихият и спокоен глас на Бог ви говори, можете бързо да добавите тези мисли тук. Вашите бележки ще бъдат маркирани като <em>лични</em> по подразбиране. Ако искате да споделите бележка с приятелите си, просто я отворете и я променете на <em>публична.</em>"
+    form:
+      title field: "Заглавие:"
+      content field: "Съдържание:"
+      reference field: "Препратка:"
+      status field: "Статут:"
+      save button: "Запази"
     list title: "Бележки"
     loading community: "Зареждане на общите бележки..."
     no community notes: "Няма бележки към ибзраните стихове. За да създадеш бележка, избери стих в Библията и натисни бутона Избран в горната част на екрана."
     public: "Публична"
     private: "Поверително"
-    is private: "Коментарът е личен"
+    is private: "Посочената бележка е лична."
     draft: "Чернова"
     creation form errors: "Следните грешки не позволяват да се създаде бележката ви:"
     reference field: "Препратка:"
@@ -173,7 +268,10 @@ bg:
     cancel: "Откажи"
     pop out: "Нов прозорец"
     none found: "Не са открити бележки..."
-    successfully deleted: "Премахнати бележки"
+    create success: "Бележката е записана."
+    create failure: "Грешка при запис на бележка"
+    destroy success: "Бележката е изтрита"
+    destroy failure: "Грешка при изтриване на бележка"
   ref:
     loading secondary: "Зареждане във вторичната версия"
     clear verses: "Изчисти избраните стихове"
@@ -204,6 +302,8 @@ bg:
     profile form errors: "Следните грешки не позволяват обновяването на профила:"
     email address: "Ел.поща"
     user name: "Поребителско име"
+    first name: "Име"
+    last name: "Фамилия"
     agreement: "Съгласявам се с %{terms_link} на YouVersion."
     terms and conditions: "условия за ползване"
     facebook sign up success: "Оторизирани сте чрез Facebook. Изберете име и парола за YouVersion за да продължите."
@@ -233,7 +333,7 @@ bg:
     edit account_existence: "Изтрий профила"
     delete account button: "Изтрий профила ми с YouVersion "
     no devices: "YouVersion профила ти няма свързано устройство "
-    no devices download copy: "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices download copy: "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit  <a href='https://www.bible.com/app'>bible.com/app</a> from your mobile device to download the Bible App and connect your account!"
     yes delete: "Да, изтрий профила ми"
     account delete success: "Твоят профил с YouVersion е изтрит. Надяваме се да продължиш да използваш Библията чрез следните приложения: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Ако изтриете профила си, губите всичката си информация, история и персонализиране (като бележки, отбелязвания, маркиране и т.н.) в YouVersion.com и Библията. Това действие е небратимо. Продължете само ако сте сигурни, че искате да направите това."
@@ -347,6 +447,16 @@ bg:
       general title: "Обща информация"
       general text: "Entire Agreement. This TERMS OF USE constitutes the entire agreement between you and LifeChurch.tv and governs your use of YouVersion, superseding any prior agreements between you and LifeChurch.tv with respect to YouVersion. You also may be subject to additional terms and conditions.%{line_break}Choice of Law and Forum. The TERMS OF USE and the relationship between you and LifeChurch.tv shall be governed by the laws of the State of Oklahoma without regard to its conflict of law provisions. You and LifeChurch.tv agree to submit to the personal and exclusive jurisdiction of the courts located within the county of Oklahoma County, Oklahoma.%{line_break}Waiver and Severability of Terms. The failure of LifeChurch.tv to exercise or enforce any right or provision of these TERMS OF USE shall not constitute a waiver of such right or provision. If any provision of these TERMS OF USE is found by a court of competent jurisdiction to be invalid, the parties nevertheless agree that the court should endeavor to give effect to the parties' intentions as reflected in the provision, and the other provisions of these TERMS OF USE remain in full force and effect.%{line_break}No Right of Survivorship and Non-Transferability. You agree that your LifeChurch.tv account is non-transferable, and any rights to your LifeChurch.tv ID or contents within your account terminate upon your death. Upon receipt of a copy of a death certificate, LifeChurch.tv may terminate your account and permanently delete all contents therein.%{line_break}Statute of Limitations. You understand and agree that regardless of any statute or law to the contrary, any claim or cause of action arising out of or related to use of YouVersion or these TERMS OF USE must be filed within one (1) year after such claim or cause of action arose or be forever barred.%{line_break}The section titles within these TERMS OF USE are for convenience only and have no legal or contractual effect."
     profile:
+      blank slate:
+        heading: "Продължете, няма какво да се види тук (все още)"
+        description: "Започнете да четете Библията, или вашите приятели, и тази страница ще покаже историята на това, което сте правили."
+      visit friend: "Посетете профила на %{friend}"
+      tab activity: "Дейност"
+      tab friends: "Моите приятели"
+      tab notes: "Бележки"
+      tab bookmarks: "Отбелязвания"
+      tab highlights: "Маркирани"
+      tab badges: "Значки"
       first name: "Име"
       last name: "Фамилия"
       email: "Ел.поща"
@@ -386,6 +496,9 @@ bg:
       reading_plans: "Изпращай ми информация за започнатия план за четене."
       publishing partners: "Изпращай ми новини за партньорите на YouVersion"
       update: "Актуализация на известията"
+      friendships: "Уведомете ме за молби за приятелство"
+      moments: "Уведомете ме за дейността на приятели"
+      comments: "Коментари за моята дейност"
   bookmarks:
     new: "Ново отбелязване"
     edit: "Редактирай"
@@ -399,9 +512,10 @@ bg:
     not found: "Отбелязването дава бърза препратка към любимите ти пасажи или последната прочетена глава в дадена книга. За да отбележиш, избери стих в Библията и натисни Избран в горната част на екрана."
     other user not found: "%{username} няма запазени отбелязвания"
     creation form errors: "Маркерът не може да бъде създаден заради следните грешки:"
-    successfully created: "Bookmark добавяне"
-    successfully deleted: "Отбелязването е премахнато"
-    successfully updated: "Отбелязването е добавено"
+    create success: "Създаден маркер"
+    destroy success: "Отбелязването е премахнато"
+    destroy failure: "Грешка при изтриване на отметка"
+    update success: "Отбелязването е добавено"
     labels placeholder: "Раздели етикетите с запетая."
     save: "Запиши отбелязването"
     confirm delete: "Потвърждавам"
@@ -412,9 +526,23 @@ bg:
     update: "Обнови"
     color: "Цвят:"
     version field: "Версия:"
+    none user: "%{username} няма отметки"
+    blank slate:
+      heading: "Отбележете с отметка важни стихове"
+      description: "Отметките ви помагат да следите стиховете, които искате да запомните, да споделите или да маркирате като предпочитани. Върнете се тук, за да видите, редактирате или изтриете отметки."
+    form:
+      title field: "Заглавие:"
+      reference field: "Препратка:"
+      labels field: "Етикети (разделени със запетая):"
+      colors field: "Цвят:"
+      update button: "Актуализиране на отметка"
+      save button: "Запиши отбелязването"
   badges:
     earned a badge: "Полузи значка"
     user badges: "Значките на %{user}"
+    earned date: "Спечелени от %{username} преди %{ago}"
+    none me: "Нямате значки."
+    none user: "%{username} не е получил значки."
   plans:
     title: "План за четене"
     browse by category: "Разгледай по категории"
@@ -458,7 +586,7 @@ bg:
     no verses: "Няма стих за днес"
     no content: "Твоят план няма плануван текст за днес и е отбелязан като завършен."
     read today: "Виж днешнич план за четене"
-    devotional: "Devotional"
+    devotional: "Посвещение"
     completion status _ below percentage: "Завърши"
     current progress html: "Ден <b>%{day}</b> от общо <b>%{total_days}</b>"
     start date _ before date string: "Начална дата:"
@@ -519,6 +647,7 @@ bg:
     loading sidebar content: "Зареждане на съдържанието..."
   videos:
     title: "Видеа"
+    all: "Всички видеа"
     related scripture: "Подобни стихове"
   licenses:
     authorized:
@@ -558,7 +687,15 @@ bg:
     chapter only: "Все още няма аудио към тези стихове."
     close player menu: "Затвори"
   highlights:
+    blank slate:
+      heading: "Маркирай стих"
+      description: "Отметките ви помагат да следите стиховете, които искате да запомните, да споделите или да маркирате като предпочитани. Върнете се тук, за да видите, редактирате или изтриете отметки."
+    none user: "%{username} няма акценти"
     choose color: "Избери цвят"
+    create success: "Акцентът е записан"
+    create failure: "Грешка при запазване на акцент"
+    destroy success: "Акцентът е изтрит"
+    destroy failure: "Грешка при изтриване на акцент"
     creation error: "Не може да се подчертае."
     delete error: "Подчертаването не може да се премахне."
   searching:
@@ -578,6 +715,10 @@ bg:
     headline: "Всеки се нуждае от Божието слово"
     subhead: "Помогни на хората по света да имат Библията в ръката си"
     copy: "Представи си какво би било ако можеш да дадеш на всеки човек в света Библия. Давайки на YouVersion, ти правиш точно това. Живеем във време, за което мнозина само са мечтали, в което всеки, които има телефон може да получи Библията и лично да преживее историята на Божията любов към нас. Вашата подкрепа ни помага да продължим да помагаме на повече хора да прекарват повече време с Писанията."
+    amount: "Дарена сума"
+    option once: "Еднократно"
+    option monthly: "Месечно"
+    alert empty amount: "Моля, въведете сумата на дарението."
     name: "Име"
     card number: "Кредитна карта"
     card exp date: "Срок на годност (ММГГ)"
@@ -644,6 +785,7 @@ bg:
     h3: "YouVersion е глобална"
     h3 sub: "Вече на над 100 езика по целия свят"
     main: "Десетки милиони хора изпозлват Библията&trade; като приложение правейки Божието слово част от тяхното ежедневие. Изтегли безплатното приложение и използвай своите бележки, маркировки и план от всяко място. Използвай стотици версии на Библията, както и аудио записи директно на мобилното си устроийство."
+    button h4: "Иди на Bible.com/app"
     button h4 sub: "На мобилно устройство"
     download now: "Изтегли БИБЛИЯТА сега"
     what people: "Какво казват другите за Библията"
@@ -757,6 +899,8 @@ bg:
         p2: "Но дори по-голямо? С твоя помощ, това е денят, в който приложение Библията достигна 100 милиона сваляния."
         p3: "Научихме, че Бог използва събития, за да подхрани дори по-голям растеж."
         p4: "Нека правим история заедно."
+        after p1: "YouVersion представлява глобална коалиция от хора, ентусиазирани да помагат на другите да се запознаят с Божието Слово. До всички общества и издатели на Библията, църкви, пастори и доброволци: благодарим ви за вашата щедрост!"
+        after p2: "Най-вълнуващото за този важен момент е това, което представлява той: днес хората си взаимодействат с Библията до степен, която никога не сме виждали преди. Внушаващо благоговение е да видите какво прави Бог. И ние вярваме, че това е само началото. <em>Това започва с 100 милиона.</em>"
       ad:
         title: "Приложение Библията е напълни безплатно и е прекрасен начин за иследване на Писанието."
         copy: "Чети, Слушай, Гледай, Споделяй. Вземи приложение Библията за твоя смартфон или таблет: <a href='http://bible.com/app'>Свали сега</a> "
