--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -32,7 +32,12 @@ en-GB:
     users username not available: "The username you supplied is not available."
     users username or password invalid: "The username or password you supplied is invalid."
     users username required: "You must enter a username."
+    users first name required: "You must enter a first name."
+    users last name required: "You must enter a last name."
   meta:
+    kids_app:
+      title: "The Bible App for Kids"
+      description: "..."
     100million:
       title: "It Starts with 100 million"
       description: "The Bible App has been installed almost 100 million times - an incredible milestone! But we are just getting started. Download the free Bible App today - and then share the app with your friends. Let’s make history together."
@@ -42,6 +47,8 @@ en-GB:
     connections:
       index:
         title: "Connected Accounts"
+  ui:
+    loading indicator text: "Loading ..."
   now: "Now"
   celebrating 50MM: "Celebrating 50 Million App Installations!"
   link: "Link"
@@ -74,7 +81,7 @@ en-GB:
   bookmark: "Bookmark"
   earned badge date: "Earnt by %{username} %{ago} ago"
   badges title: "Badges"
-  currently selected: "Currently selected:"
+  currently selected: "Currently Selected:"
   read reference: "Read %{reference}"
   compare all versions: "Compare all versions"
   link will be added: "Will be added"
@@ -129,7 +136,6 @@ en-GB:
   chapter: "Chapter"
   bible: "Bible"
   notes title: "Notes"
-  friends: "Friends"
   groups: "Groups"
   mobile: "Mobile"
   live: "Live/groups"
@@ -150,7 +156,91 @@ en-GB:
   or:
     lower: "or"
     upper: "OR"
+  moments:
+    vod:
+      title: "Verse of the day"
+    friendship:
+      now friends: "You are now friends with"
+    cta:
+      profile update text: "Help your friends find you."
+      profile update button: "Update your profile"
+      sharing text: "Share verses with social networks"
+      sharing button: "Enable sharing"
+      friends text: "See your friends’ moments in the Bible."
+      friends button: "Find friends"
+    action:
+      go to scripture: "Go to scripture"
+      load more: "Load more"
+      like: "Like"
+      like title: "Like this"
+      share: "Share"
+      share title: "Share this with friends or family"
+      comment: "Comment"
+      comment title: "See all comments"
+      edit: "Edit"
+      edit highlight title: "Edit this highlight"
+      edit bookmark title: "Edit this bookmark"
+      edit note title: "Edit this note"
+      delete: "Delete"
+      delete confirm: "Are you sure?"
+      delete highlight title: "Delete this highlight"
+      delete bookmark title: "Delete this bookmark"
+      delete note title: "Delete this note"
+  notifications:
+    title: "Notifications"
+    none: "You don't have any notifications"
+    no new: "No new notifications"
+    view all: "View all notifications"
+  comments:
+    post comment: "Post a comment"
+    create success: "Comment posted"
+    create failure: "Comment could not be posted"
+    form:
+      save button: "Post"
+  friends:
+    you have N friends: "You have %{count} friends"
+    none me: "Share your moments in the Bible such as bookmarks, highlights, and notes with your closest friends and family."
+    blank slate:
+      heading: "Not currently friends"
+      description: "You must be friends with this person in order to view their friends."
+    limit notice: "You can have as many as 150 friends"
+    limit description: "Limiting your Bible App friendships to people you know well creates an environment for honest conversations and shared discoveries with trusted friends."
+  friendships:
+    offer success: "Friendship request sent"
+    offer failure: "Error sending friendship request"
+    create success: "You're now friends"
+    create failure: "Error creating friendship"
+    destroy success: "Request declined"
+    destroy failure: "Error declining request"
+    requests title: "Friend requests"
+    requests view all: "View all friend requests"
+    requests none: "You don't have any friend requests"
+    requests no new: "No new requests"
+    status:
+      pending: "Request pending"
+      friends: "Friends"
+    user wants friendship: "%{user} wants to be your friend"
+    user wants friendship partial: "wants to be your friend"
+    form:
+      remove friend button: "Remove friend"
+      remove friend button title: "Remove this person from your friend list"
+      add friend button: "Add friend"
+      add friend button title: "Send %{user} a friend request"
+      accept button: "Accept"
+      accept request button: "Accept request"
+      ignore button: "Ignore"
+      ignore request button: "Ignore request"
   notes:
+    none user: "%{username} hasn't taken any notes yet."
+    blank slate:
+      heading: "You don’t have any notes yet"
+      description: "As you’re reading the Bible, when you feel God’s small, still voice speaking you can quickly add those thoughts here. Your notes will be marked as <em>private</em> by default. If you’d like to share a note with your friends, simply open it and change it to <em>public</em>."
+    form:
+      title field: "Title:"
+      content field: "Content:"
+      reference field: "Reference(s):"
+      status field: "Status:"
+      save button: "Save"
     list title: "Notes"
     loading community: "Loading community notes..."
     no community notes: "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
@@ -178,7 +268,10 @@ en-GB:
     cancel: "Cancel"
     pop out: "Pop out"
     none found: "No notes found..."
-    successfully deleted: "Note removed"
+    create success: "Note saved"
+    create failure: "Error saving note"
+    destroy success: "Note deleted"
+    destroy failure: "Error deleting note"
   ref:
     loading secondary: "Loading reference in secondary version..."
     clear verses: "Clear selected verses"
@@ -209,6 +302,8 @@ en-GB:
     profile form errors: "The following error(s) prevented updating your profile:"
     email address: "E-mail address"
     user name: "Username"
+    first name: "First name"
+    last name: "Last name"
     agreement: "I agree to the YouVersion %{terms_link}."
     terms and conditions: "terms and conditions"
     facebook sign up success: "Great! You've authorised with Facebook. Pick a YouVersion username and password to continue."
@@ -238,7 +333,7 @@ en-GB:
     edit account_existence: "Delete account"
     delete account button: "Delete my YouVersion account"
     no devices: "No devices connected to your YouVersion account"
-    no devices download copy: "Based on the on-line Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favourite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> from your mobile device to download the Bible App and connect your account!"
+    no devices download copy: "Based on the online Bible, YouVersion, the Bible App is a free mobile Bible that can be installed on almost any mobile device. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favourite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle. Visit <a href='https://www.bible.com/app'>bible.com/app</a> from your mobile device to download the Bible App and connect your account!"
     yes delete: "Yes, delete my account"
     account delete success: "Your YouVersion account has been successfully deleted. We hope you continue to find meaningful ways to interact with the Bible. Some of these apps might be helpful as you move forward: <a href='https://www.bible.com/free-bible-apps'>http://www.bible.com/free-bible-apps</a>"
     delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within YouVersion.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
@@ -353,6 +448,16 @@ en-GB:
       general title: "General Information"
       general text: "Entire Agreement. This TERMS OF USE constitutes the entire agreement between you and LifeChurch.tv and governs your use of YouVersion, superseding any prior agreements between you and LifeChurch.tv with respect to YouVersion. You also may be subject to additional terms and conditions.<br><br>Choice of law and forum. The TERMS OF USE and the relationship between you and LifeChurch.tv shall be governed by the laws of the state of Oklahoma without regard to conflict of law provisions. You and LifeChurch.tv agree to submit to the personal and exclusive jurisdiction of the courts located within the county of Oklahoma county, Oklahoma.<br><br>Waiver and severability of terms. The failure of LifeChurch.tv to exercise or enforce any right or provision of these TERMS OF USE shall not constitute a waiver of such right or provision. If any provision of these TERMS OF USE is found by a court of competent jurisdiction to be invalid, the parties nevertheless agree that the court should endeavor to give effect to the parties' intentions as reflected in the provision, and the other provisions of these TERMS OF USE remain in full force and effect.<br><br>No right of survivorship and non-transferability. You agree that your LifeChurch.tv account is non-transferable, and any rights to your LifeChurch.tv ID or contents within your account terminate upon your death. Upon receipt of a copy of a death certificate, LifeChurch.tv may terminate your account and permanently delete all contents therein.<br><br>Statute of limitations. You understand and agree that regardless of any statute or law to the contrary, any claim or cause of action arising out of or related to use of YouVersion or these TERMS OF USE must be filed within one (1) year after such claim or cause of action arose or be forever barred.<br><br>The section titles within these TERMS OF USE are for convenience only and have no legal or contractual effect."
     profile:
+      blank slate:
+        heading: "Move along, nothing to see here (yet)"
+        description: "Start engaging with the Bible, or your friends, and this page will display a history of what you’ve been up to."
+      visit friend: "Visit %{friend}'s profile"
+      tab activity: "Activity"
+      tab friends: "Friends"
+      tab notes: "Notes"
+      tab bookmarks: "Bookmarks"
+      tab highlights: "Highlights"
+      tab badges: "Badges"
       first name: "First name"
       last name: "Surname"
       email: "E-mail address"
@@ -392,6 +497,9 @@ en-GB:
       reading_plans: "Notify me about information for reading plans I've started."
       publishing partners: "Keep me updated on news from YouVersion's content partners."
       update: "Update notifications"
+      friendships: "Notify me about friend requests"
+      moments: "Notify me about friends' activity"
+      comments: "Notify me about comments on my activity"
   bookmarks:
     new: "New bookmark"
     edit: "Edit"
@@ -405,9 +513,10 @@ en-GB:
     not found: "Bookmarks give you a quick reference guide to your favourite passages or to the last chapter you read in a particular book. To add a bookmark, select a verse in the Bible reader and then click the selected button at the top of the reader."
     other user not found: "%{username} hasn't saved any bookmarks yet."
     creation form errors: "The following error(s) prevented creation of your bookmark:"
-    successfully created: "Bookmark added"
-    successfully deleted: "Bookmark removed"
-    successfully updated: "Bookmark updated"
+    create success: "Bookmark saved"
+    destroy success: "Bookmark removed"
+    destroy failure: "Error deleting bookmark"
+    update success: "Bookmark updated"
     labels placeholder: "Separate multiple labels with commas."
     save: "Save bookmark"
     confirm delete: "Yes, I'm sure"
@@ -418,9 +527,23 @@ en-GB:
     update: "Update"
     color: "Colour:"
     version field: "Version:"
+    none user: "%{username} has no bookmarks"
+    blank slate:
+      heading: "Bookmark meaningful verses"
+      description: "While reading the Bible, select a verse and bookmark it. Return here to view, edit, or delete your bookmark."
+    form:
+      title field: "Title:"
+      reference field: "Reference:"
+      labels field: "Labels (comma-separated):"
+      colors field: "Colour:"
+      update button: "Update bookmark"
+      save button: "Save bookmark"
   badges:
     earned a badge: "Earnt a badge"
     user badges: "%{user}'s badges"
+    earned date: "Earnt by %{username} %{ago} ago"
+    none me: "You haven't earnt any badges yet."
+    none user: "%{username} hasn't earnt any badges yet."
   plans:
     title: "Reading plans"
     browse by category: "Browse by category"
@@ -565,7 +688,15 @@ en-GB:
     chapter only: "Sorry, audio isn't available for verses. View in the reader for chapter audio."
     close player menu: "Close"
   highlights:
+    blank slate:
+      heading: "Highlight meaningful verses"
+      description: "While reading the Bible, select a verse and highlight it. Return here to view, edit, or delete your highlight."
+    none user: "%{username} has no highlights"
     choose color: "Choose colour"
+    create success: "Highlight saved"
+    create failure: "Error saving highlight"
+    destroy success: "Highlight deleted"
+    destroy failure: "Error deleting highlight"
     creation error: "Sorry, couldn't highlight."
     delete error: "Sorry, couldn't remove highlighting."
   searching:
