--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -32,7 +32,12 @@ fi:
     users username not available: "Syöttämäsi käyttäjänimi ei ole vapaana."
     users username or password invalid: "Syöttämäsi käyttäjänimi tai salasana on virheellinen."
     users username required: "Käytäjänimi täytyy syöttää."
+    users first name required: "Etunimi täytyy syöttää."
+    users last name required: "Sukunimi täytyy syöttää."
   meta:
+    kids_app:
+      title: "Raamattusovellus lapsille"
+      description: "..."
     100million:
       title: "Se alkaa 100 miljoonalla"
       description: "Raamattusovellus on asennettu lähes 100 miljoonaa kertaa - hieno merkkipaalu! Mutta me olemme vasta pääsemässä alkuun. Lataa ilmainen Raamattusovellus tänään - ja jaa se kavereidesi kanssa. Tehdään historiaa yhdessä."
@@ -42,6 +47,8 @@ fi:
     connections:
       index:
         title: "Yhdistetyt tilit"
+  ui:
+    loading indicator text: "Ladataan ..."
   now: "Nyt"
   celebrating 50MM: "Juhlimme 50 miljoonatta asennettua sovellusta!"
   link: "Linkki"
@@ -64,8 +71,8 @@ fi:
   connect to: "Yhdistä %{connection} -tiliisi"
   deleted connection: "Yhteytesi on poistettu onnistuneesti kohteesta %{connection}."
   deleted connection error: "Valitettavasti %{connection}  -yhteytesi poistaminen epäonnistui."
-  connection marketing: "YouVersion on hauskempi ystävien kanssa! Linkitä YouVersion-tilisi muiden sosiaalisen median palveluiden kanssa ja löydä ystäväsi, jotka ovat myös YouVersionissa. Tilien linkitys mahdollistaa myös sisällön jakamisen vain muutamalla klikkauksella. Emme koskaan julkaise mitään ilman sinun hyväksyntääsi."
-  next step connections: "Seuraavaksi: Linkitä tilisi ja löydä ystäväsi"
+  connection marketing: "YouVersion on hauskempi ystävien kanssa! Linkitä YouVersion-tilisi muiden sosiaalisen median palveluiden kanssa ja etsi ystäväsi, jotka ovat myös YouVersionissa. Tilien linkitys mahdollistaa myös sisällön jakamisen vain muutamalla klikkauksella. Emme koskaan julkaise mitään ilman sinun hyväksyntääsi."
+  next step connections: "Seuraavaksi: Linkitä tilisi ja etsi ystäviä"
   no notes found: "Käyttäjällä %{username} ei ole muistiinpanoja."
   no recent activity: "Käyttäjällä %{username} ei ole viimeaikaisia toimintoja."
   no badges found yourself: "Et ole vielä ansainnut yhtään ansiomerkkiä."
@@ -113,7 +120,7 @@ fi:
   settings: "Asetukset"
   profile: "Profiili"
   sign out: "Kirjaudu ulos"
-  find friends: "Löydä ystäviä"
+  find friends: "Etsi ystäviä"
   search placeholder: "Haku..."
   search: "Hae"
   book: "Kirja"
@@ -129,7 +136,6 @@ fi:
   chapter: "Luku"
   bible: "Raamattu"
   notes title: "Muistiinpanot"
-  friends: "Ystävät"
   groups: "Ryhmät"
   mobile: "Mobiili"
   live: "Live/Ryhmät"
@@ -150,7 +156,91 @@ fi:
   or:
     lower: "tai"
     upper: "TAI"
+  moments:
+    vod:
+      title: "Päivän jae"
+    friendship:
+      now friends: "Seuraavan käyttäjä on nyt ystäväsi:"
+    cta:
+      profile update text: "Auta ystäviäsi löytämään sinut."
+      profile update button: "Päivitä profiilisi"
+      sharing text: "Jaa kohtia sosiaalisissa verkostoissa"
+      sharing button: "Salli jakaminen"
+      friends text: "Näe ystäviesi hetket Raamatussa."
+      friends button: "Löydä ystäviä"
+    action:
+      go to scripture: "Mene raamatunkohtaan"
+      load more: "Lataa lisää"
+      like: "Tykkää"
+      like title: "Tykkää tästä"
+      share: "Jaa"
+      share title: "Jaa ystävien tai perheen kanssa"
+      comment: "Kommentoi"
+      comment title: "Näytä kaikki kommentit"
+      edit: "Muokkaa"
+      edit highlight title: "Muokkaa tätä korostusta"
+      edit bookmark title: "Muokkaa tätä kirjanmerkkiä"
+      edit note title: "Muokkaa tätä muistiinpanoa"
+      delete: "Poista"
+      delete confirm: "Oletko varma?"
+      delete highlight title: "Poista tämä korostus"
+      delete bookmark title: "Poista tämä kirjanmerkki"
+      delete note title: "Poista tämä muistiinpano"
+  notifications:
+    title: "Ilmoitukset"
+    none: "Ei ilmoituksia"
+    no new: "Ei uusia ilmoituksia"
+    view all: "Näytä kaikki ilmoitukset"
+  comments:
+    post comment: "Lähetä kommentti"
+    create success: "Kommentti lähetetty"
+    create failure: "Kommenttia ei voitu lähettää"
+    form:
+      save button: "Lähetä"
+  friends:
+    you have N friends: "Sinulla on %{count}  ystävää"
+    none me: "Jaa merkintäsi Raamatussa, kuten kirjanmerkit, korostukset ja muistiinpanot lähimpien ystäviesi ja perheenjäsentesi kanssa."
+    blank slate:
+      heading: "Ei ystäviä tällä hetkellä"
+      description: "Sinun täytyy olla tämän henkilön ystävä nähdäksesi hänen ystävänsä."
+    limit notice: "Sinulla voi olla jopa 150 ystävää"
+    limit description: "Voit rajata ystävyyssuhteet Raamattusovelluksessa ihmisiin jotka tunnet hyvin. Näin syntyy ympäristö jossa voi keskustella ja jakaa oivalluksia avoimesti luotettujen ystävien kanssa."
+  friendships:
+    offer success: "Kaveripyyntö lähetetty"
+    offer failure: "Kaveripyynnön lähetys epäonnistui"
+    create success: "Olette nyt ystäviä"
+    create failure: "Ystävyyden muodostaminen epäonnistui"
+    destroy success: "Pyyntö hylätty"
+    destroy failure: "Pyynnön hylkäys epäonnistui"
+    requests title: "Ystäväpyynnöt"
+    requests view all: "Näytä kaikki kaveripyynnöt"
+    requests none: "Ei kaveripyyntöjä"
+    requests no new: "Ei uusia pyyntöjä"
+    status:
+      pending: "Pyyntö odottaa"
+      friends: "Ystävät"
+    user wants friendship: "%{user} haluaa olla ystäväsi"
+    user wants friendship partial: "haluaa olla ystäväsi"
+    form:
+      remove friend button: "Poista ystävä"
+      remove friend button title: "Poista tämä henkilö ystävälistaltasi"
+      add friend button: "Lisää ystävä"
+      add friend button title: "Lähetä %{user}:lle ystäväpyyntö"
+      accept button: "Hyväksy"
+      accept request button: "Hyväksy pyyntö"
+      ignore button: "Hylkää"
+      ignore request button: "Hylkää pyyntö"
   notes:
+    none user: "%{username} ei ole vielä tehnyt muistiinpanoja."
+    blank slate:
+      heading: "Sinulla ei vielä ole muistiinpanoja."
+      description: "Kun luet Raamattua ja tunnet Jumalan puhuvan sinulle, voit samalla kirjoittaa ajatuksesi tähän. Merkintäsi lisätään <em>yksityisinä</em>. Jos kuitenkin haluat jakaa merkinnän ystäviesi kanssa, avaa se ja muuta se <em>julkiseksi</em>."
+    form:
+      title field: "Otsikko:"
+      content field: "Sisältö:"
+      reference field: "Viitteet:"
+      status field: "Tila:"
+      save button: "Tallenna"
     list title: "Muistiinpanot"
     loading community: "Yhteisön tekemiä muistiinpanoja ladataan..."
     no community notes: "Yksikään yhteisön tekemä muistiinpano ei viittaa löytämiimme versioihin. Luodaksesi muistiinpanon, valitse Raamatun jae lukijassa ja klikkaa Valittu-painiketta lukijan yläosassa."
@@ -178,7 +268,10 @@ fi:
     cancel: "Peruuta"
     pop out: "Näytä"
     none found: "Muistiinpanoja ei löytynyt..."
-    successfully deleted: "Muistiinpano poistettu"
+    create success: "Muistiinpano tallennettu"
+    create failure: "Muistiinpanon tallennus epäonnistui"
+    destroy success: "Muistiinpano poistettu"
+    destroy failure: "Muistiinpanon poistaminen epäonnistui"
   ref:
     loading secondary: "Ladataan kohtaa toisesta käännöksestä..."
     clear verses: "Tyhjennä valitut jakeet"
@@ -209,6 +302,8 @@ fi:
     profile form errors: "Profiilin päivityksessä tapahtui virhe/virheitä:"
     email address: "Sähköpostiosoite"
     user name: "Käyttäjänimi"
+    first name: "Etunimi"
+    last name: "Sukunimi"
     agreement: "Hyväksyn YouVersionin ehdot %{terms_link}."
     terms and conditions: "Käyttöehdot"
     facebook sign up success: "Mahtavaa! Olet valtuuttanut Facebookin. Valitse YouVersion-käyttäjänimi ja salasana jatkaaksesi."
@@ -238,7 +333,7 @@ fi:
     edit account_existence: "Poista tili"
     delete account button: "Poista YouVersion-tilini"
     no devices: "Ei laitteita kytkettynä YouVersion-tiliisi"
-    no devices download copy: "YouVersion.comin verkkoraamattuun perustuva Raamattusovellus on ilmainen Raamattu, jonka voi asentaa lähes jokaiseen mobiililaitteeseen. Raamattusovellus mahdollistaa Raamatun lukemisen, jakeiden jakamisen yhteisöpalveluihin, kirjanmerkkienn luomisen lempikappaleisiin ja enemmän&mdash;kaikki tämä tavalla, joka mukautuu heidän yhä liikkuvampaan elämäntapaansa. Siirry osoitteeseen <a href='http://www.youversion.com/download'>youversion.com/download</a> mobiililaitteellasi ladataksesi Raamattusovelluksen ja yhdistä laitteesi tiliisi!"
+    no devices download copy: "YouVersionin verkkoraamattuun perustuva Raamattusovellus on ilmainen Raamattu, jonka voi asentaa lähes kaikkiin mobiililaitteisiin. Raamattusovelluksessa voit lukea Raamattua, jakaa jakeita yhteisöpalveluihin, lisätä kirjanmerkkejä lempikohtiin ja paljon muuta&mdash;kaikki tämä on saatavilla paikasta riippumatta. Lataa Raamattusovellus mobiililaitteellesi osoitteesta <a href='https://www.bible.com/app'>bible.com/app</a> ja yhdistä laite tiliisi!"
     yes delete: "Kyllä, poista tilini"
     account delete success: "YouVersion-tilisi poistettiin onnistuneesti. Toivomme, että löydät jatkossakin merkityksellisiä tapoja olla tekemisissä Raamatun kanssa. Joku näistä sovelluksista voi olla avuksi siirtyessäsi eteenpäin: <a href= http://www.youversion.com/free-bible-apps> www.youversion.com/free-bible-apps </a>"
     delete account description: "Jos poistat tilisi, kaikki tiedot, historia ja personointi häviää (kuten muistiinpanot, kirjanmerkit, korostukset jne.) YouVersion.comista ja Raamattusovelluksesta. Tätä toimintoa et itse, eikä tiimisi, voi perua. Jos varmasti haluat edetä, voit tehdä niin alla."
@@ -353,6 +448,16 @@ fi:
       general title: "Yleistiedot"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Siirry eteenpäin, täällä ei ole (vielä) sisältöä"
+        description: "Aloita kanssakäyminen Raamatun tai ystäviesi kanssa, niin tällä sivulla näet menneet tapahtumasi."
+      visit friend: "Siirry %{friend}:n profiiliin"
+      tab activity: "Toiminta"
+      tab friends: "Ystävät"
+      tab notes: "Muistiinpanot"
+      tab bookmarks: "Kirjanmerkit"
+      tab highlights: "Korostukset"
+      tab badges: "Ansiomerkit"
       first name: "Etunimi"
       last name: "Sukunimi"
       email: "Sähköpostiosoite"
@@ -392,6 +497,9 @@ fi:
       reading_plans: "Ilmoita minulle aloittamieni lukusuunnitelmien tiedot."
       publishing partners: "Pidä minut ajantasalla YouVersionin sisältökumppanien uutisista."
       update: "Päivitä ilmoitukset"
+      friendships: "Ilmoita minulle ystäväpyynnöistä"
+      moments: "Ilmoita minulle ystävien toiminnasta"
+      comments: "Ilmoita kommenteista toiminnalleni"
   bookmarks:
     new: "Uusi kirjanmerkki"
     edit: "Muokkaa"
@@ -405,9 +513,10 @@ fi:
     not found: "Kirjanmerkit toimivat pikaoppaana suosikkikappaleisiisi tai viimeisimpään lukemaasi lukuun jossakin tietyssä kirjassa. Lisätäksesi kirjanmerkin, valitse jae lukijassa ja klikkaa Valittu-nappia lukijan yläosassa."
     other user not found: "%{username} ei ole vielä tallentanut kirjanmerkkejä."
     creation form errors: "Kirjanmerkin luominen estyi seuraavien virheiden takia:"
-    successfully created: "Kirjanmerkki lisätty"
-    successfully deleted: "Kirjanmerkki poistettu"
-    successfully updated: "Kirjanmerkki päivitetty"
+    create success: "Kirjanmerkki tallennettu"
+    destroy success: "Kirjanmerkki poistettu"
+    destroy failure: "Kirjanmerkin poisto epäonnistui"
+    update success: "Kirjanmerkki päivitetty"
     labels placeholder: "Erota useat etiketit pilkuilla."
     save: "Tallenna kirjanmerkki"
     confirm delete: "Kyllä, olen varma"
@@ -418,9 +527,23 @@ fi:
     update: "Päivitä"
     color: "Väri:"
     version field: "Käännös:"
+    none user: "%{username}:lla ei ole kirjanmerkkejä"
+    blank slate:
+      heading: "Lisää kirjanmerkkejä tärkeille jakeille"
+      description: "Lukiessasi Raamattua, valitse jae ja merkitse se kirjanmerkillä. Palaa tänne kun haluat katsoa, muokata tai poistaa kirjanmerkkejä."
+    form:
+      title field: "Otsikko:"
+      reference field: "Lähde:"
+      labels field: "Nimikkeet (pilkulla erotettuna):"
+      colors field: "Väri:"
+      update button: "Päivitä kirjanmerkki"
+      save button: "Tallenna kirjanmerkki"
   badges:
     earned a badge: "Ansaitsit ansiomerkin"
     user badges: "Käyttäjän %{user} ansiomerkit"
+    earned date: "Ansainnut %{username} %{ago} sitten"
+    none me: "Et ole vielä ansainnut yhtään ansiomerkkiä."
+    none user: "%{username} ei ole ansainnut yhtään ansiomerkkiä."
   plans:
     title: "Lukusuunnitelmat"
     browse by category: "Selaa aiheittain"
@@ -550,7 +673,7 @@ fi:
       email: "Syötä sähköpostiosoitteesi"
       username: "Syötä käyttäjänimesi"
       password: "Syötä salasanasi"
-    with email: "Kirjaudu sähköpostiosoitteellasi"
+    with email: "Rekisteröidy sähköpostiosoitteellasi"
     with facebook: "Rekisteröidy Facebook-tunnuksilla"
     benefits title: "Ota kaikki irti"
     benefits blurb: "Luomalla YouVersion-tilin saat paljon lisäominaisuuksia, kuten kirjanmerkit ja mahdollisuuden tehdä omia muistiinpanoja. Ne näkyvät kaikissa laitteissasi, joilla olet sisäänkirjautuneena. Tilin avulla on myös helpompaa jakaa Raamatun sanaa ystäviesi kanssa. Rekisteröityminen vie vain pari minuuttia!"
@@ -565,7 +688,15 @@ fi:
     chapter only: "Valitettavasti ääntä ei ole saatavissa jaekohtaisesti. Luku on kuunneltavissa lukijan kautta."
     close player menu: "Sulje"
   highlights:
+    blank slate:
+      heading: "Korosta tärkeitä jakeita"
+      description: "Lukiessasi Raamattua, valitse jae ja lisää siihen korostus. Palaa tänne kun haluat katsoa, muokata tai poistaa korostuksia."
+    none user: "%{username}:lla ei ole korostuksia"
     choose color: "Valitse väri"
+    create success: "Korostus tallennettu"
+    create failure: "Korostuksen tallennus epäonnistui"
+    destroy success: "Korostus poistettu"
+    destroy failure: "Korostuksen poisto epäonnistui"
     creation error: "Valitettavasti korostaminen ei onnistunut."
     delete error: "Valitettavasti korostuksen poistaminen ei onnistunut."
   searching:
