--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -32,7 +32,12 @@ hi:
     users username not available: "प्रस्तुत username उपलब्ध नहीं हैं।"
     users username or password invalid: "आपके द्वारा उपलब्धित उपयोगकर्ता नाम या पासवर्ड अमान्य हैं।"
     users username required: "username इंटर करना अनिवार्य हैं। "
+    users first name required: "पहला नाम इंटर करना अनिवार्य हैं। "
+    users last name required: "आखरी नाम इंटर करना अनिवार्य हैं। "
   meta:
+    kids_app:
+      title: "नन्हे-मुन्ने बच्चों के लिए बाइबिल App "
+      description: "..."
     100million:
       title: "100 मिलियन से शुभारंभ हुआ। "
       description: "100 मिलियन से अधिक इन्स्टाल के साथ एक नया कीर्तिमान रचित हुआ। यह मात्र शुरुआत हैं। निशुल्क बाइबिल App आज ही डाउनलोड कर अपने  मित्रों के  साथ शेयर करे। आओ हम साथ मिलकर इतिहास की रचना करे। "
@@ -42,6 +47,8 @@ hi:
     connections:
       index:
         title: "कनेक्टेड अकाउंट"
+  ui:
+    loading indicator text: "लोडिंग......"
   now: "अभी "
   celebrating 50MM: "50 मिलियन app स्थापना उत्सव!"
   link: "लिंक"
@@ -129,7 +136,6 @@ hi:
   chapter: "अध्याय"
   bible: "बाइबिल"
   notes title: "टिप्पणियाँ"
-  friends: "मित्रों "
   groups: "समूह"
   mobile: "मोबाइल"
   live: "लाइव/समूह"
@@ -150,7 +156,91 @@ hi:
   or:
     lower: "या   "
     upper: "या "
+  moments:
+    vod:
+      title: "आज का पद्य "
+    friendship:
+      now friends: "अभी आप मित्र हुए "
+    cta:
+      profile update text: "अपने मित्रों को आप तक पहुँचने में मदद करे "
+      profile update button: "प्रोफाइल अपडेट करे"
+      sharing text: "सामाजिक नेटवर्क पर वचन शेयर करे "
+      sharing button: "शेयरिंग इनेबल करे "
+      friends text: "अपने मित्र की बाइबिल में गतिविधियों को देखे "
+      friends button: "मित्रों को खोजे"
+    action:
+      go to scripture: "सीधा वचनों पर जाइए "
+      load more: "अधिक लोड करे "
+      like: "पसंद करे "
+      like title: "इसे पसंद करे "
+      share: "शेयर"
+      share title: "इसे अपने मित्रों और परिवार के साथ शेयर करे "
+      comment: "टिप्पणी"
+      comment title: "समस्त टिपण्णी देखे "
+      edit: "Edit"
+      edit highlight title: "यह हाईलाइट संपादित कीजिए "
+      edit bookmark title: "यह बुकमार्क संपादन करे "
+      edit note title: "टिप्पणी सम्पादित करे"
+      delete: "डिलीट "
+      delete confirm: "क्या आप सुनिश्चित हैं?"
+      delete highlight title: "यह हाईलाइट डिलीट करे "
+      delete bookmark title: "यह नोट बुकमार्क करे "
+      delete note title: "यह नोट डिलीट करे "
+  notifications:
+    title: "अधिसूचनाऍ"
+    none: "आप के लिए कोई अधिसूचनाएँ नहीं हैं"
+    no new: "नई अधिसूचनाएँ नहीं हैं "
+    view all: "समस्त अधिसूचनाऍ देखे "
+  comments:
+    post comment: "कमेंट पोस्ट करे "
+    create success: "कमेंट पोस्ट हुआ "
+    create failure: "कमेंट पोस्ट नहीं हो सका "
+    form:
+      save button: "पोस्ट "
+  friends:
+    you have N friends: "आपके %{count}मित्र हैं "
+    none me: "अपने करीबी मित्रों और परिवार सदस्यों के साथ बाइबिल अध्ययन के दौरान अनुभव किया गया अद्भुत एहसास को बुकमार्क,हाईलाइट और नोट के रूप में शेयर करे। "
+    blank slate:
+      heading: "वर्त्तमान में आप मित्र नहीं हैं "
+      description: "आपको इस व्यक्ति के मित्रों की जानकारी के लिए उनसे मित्रता अनिवार्य हैं। "
+    limit notice: "अधिकतम मित्र 150 "
+    limit description: "बाइबिल App मित्रता अपने जाने पहचाने मित्रों के मध्य सीमित रखने से बाइबिल के बारे में खरा संवाद एवं उसके अध्ययन नए दृष्टिकोण के साथ करने का माहौल बनाया जा सकता हैं। "
+  friendships:
+    offer success: "मित्रता अनुरोध भेजा गया "
+    offer failure: "मित्रता अनुरोध भेजने में त्रुटि पाया गया "
+    create success: "अभी आप मित्र हुए "
+    create failure: "मित्रता बनाने में त्रुटि "
+    destroy success: "अनुरोध अस्वीकार "
+    destroy failure: "अनुरोध अस्वीकार करने में त्रुटि "
+    requests title: "मित्र के अनुरोध "
+    requests view all: "समस्त मित्र अनुरोध देखे "
+    requests none: "आप के लिए कोई मित्रता अनुरोध नहीं हैं "
+    requests no new: "नया अनुरोध नहीं पाया गया "
+    status:
+      pending: "अनुरोध विचाराधीन "
+      friends: "मित्र"
+    user wants friendship: "{name} आपके मित्र बनने के इच्छुक हैं"
+    user wants friendship partial: "आपके मित्र बनने में इच्छुक हैं। "
+    form:
+      remove friend button: "मित्र को हटाइए "
+      remove friend button title: "इस व्यक्ति को अपने मित्रता लिस्ट से हटाए "
+      add friend button: "मित्र बनाए "
+      add friend button title: "%{user} को मित्र अनुरोध भेजे "
+      accept button: "सहमत होना"
+      accept request button: "मित्रता कबूल करे "
+      ignore button: "अनदेखा करना "
+      ignore request button: "अनुरोध अनदेखा करिए "
   notes:
+    none user: "%{username} के द्वारा कोई नोट्स निर्मित नहीं किया गया हैं। "
+    blank slate:
+      heading: "आप के लिए कोई नोट्स उपलब्ध नहीं हैं "
+      description: "अपने बाइबिल अध्ययन के दौरान जब आप को परमेश्वर की अचल वाणी सुनाई दे,उस वक्त उन विचारों को यहाँ पर तुरंत नोट के रूप में जोड़ सकते हैं।आपके द्वारा बनाया गया नोट डिफ़ॉल्ट <em>नीजी<em>रेखांकित हैं। यदि आप इस नोट को मित्रों के साथ शेयर करना चाहते हैं,कृपया नोट क्लिक करे और <em>सार्वजनिक<em>रेखाकिंत करे। "
+    form:
+      title field: "टाइटिल"
+      content field: "विषय सूची:"
+      reference field: "Reference(s):"
+      status field: "स्टेटस:"
+      save button: "Save"
     list title: "टिप्पणियां "
     loading community: "सामाजिक टिप्पणीयां.............. लोड किया जा रहा हैं।"
     no community notes: "आपके द्वारा सेलेक्टेड पध्य से संदर्भित समुदाय नोट्स नहीं पाया गया हैं। टिप्पणी बनाने हेतु बाइबिल से एक पध्य को बाइबिल रीडर में सेलेक्ट करे तथा रीडर के ऊपर दर्शाए गए सेलेक्ट बटन को क्लिक करिए। "
@@ -178,7 +268,10 @@ hi:
     cancel: "कैंसिल "
     pop out: "पाप आउट  "
     none found: "कोई टिप्पणीयाँ नहीं पाया गया हैं..."
-    successfully deleted: "टिपण्णी हटाई गयी हैं"
+    create success: "नोट सेव हुआ "
+    create failure: "नोट सेविंग में त्रुटि "
+    destroy success: "नोट डिलीट हुआ"
+    destroy failure: "नोट डिलीट करने में त्रुटि "
   ref:
     loading secondary: "माध्यमिक संस्करण में रिफरेन्स लोड किया जा रहा हैं ......."
     clear verses: "चयनित पधों को क्लियर करें"
@@ -209,6 +302,8 @@ hi:
     profile form errors: "निम्नलिखित error(s) ने आपके प्रोफाइल अपडेट करने में बाधा डाली:"
     email address: "इमेल अड्रेस "
     user name: "Username"
+    first name: "पहला नाम "
+    last name: "आखरी नाम"
     agreement: "मैं YouVersion के %{terms_link} से सहमत हूँ।"
     terms and conditions: "संधर्भ और शर्तें"
     facebook sign up success: "आप फेसबुक द्वारा अधिकृत हैं। YouVersion username और पासवर्ड चुनिए।"
@@ -238,7 +333,7 @@ hi:
     edit account_existence: "अकाउंट डिलीट करें"
     delete account button: "मेरा YouVersion अकाउंट डिलीट कीजिए"
     no devices: "आपके YouVersion अकाउंट से कोई डिवैसिस कनेक्टेड नहीं हैं"
-    no devices download copy: "बाइबिल app ऑनलाइन बाइबिल YouVersion पर आधारित एक मुफ्त मोबाइल बाइबिल हैं जो लगभग किसी भी फ़ोन पर इन्स्टॉल किया जा सकता हैं।बाइबिल  App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर शेयर करने ,बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं Visit <a href='http://www.youversion.com/download'>youversion.com/download</a> अपने मोबाइल डिवैसिस पर बाइबिल App डाउनलोड करने के लिए और अपने अकाउंट कनेक्ट करने हेतु विवरण।"
+    no devices download copy: "ऑनलाइन बाइबिल पर आधारित  YouVersion एक निशुल्क: बाइबिल App, जो मोबाइल बाइबिल हैं जिसे लगभग किसी भी फ़ोन पर इनस्टॉल किया जा सकता हैं। बाइबिल  App उपयोगकर्ता को बाइबिल पढने में तथा पद्य को अपने सामाजिक नेटवर्क पर शेयर करने ,बुकमार्क और कई ज्यादा सुविधा एक ही स्वरुप में तेजी से वर्दित मोबाइल जीवन शैली के लिए उपलब्ध कराता हैं। विजिट करे अपने मोबाइल डिवाइस पर बाइबिल App डाउनलोड करने के लिए और अपने अकाउंट कनेक्ट करने हेतु विवरण के लिए <a href='https://www.bible.com/app'>bible.com/app</a> "
     yes delete: "हाँ, मेरा अकाउंट डिलीट कीजिए"
     account delete success: "आपका YouVersion अकाउंट सफलतापूर्वक डिलीट किया गया हैं। हम आशा करते हैं की आप बाइबिल से जुड़े रहने की अन्य कोशिश करेंगे| आप अभी भी कुछ app उपयोग कर सकते हैं जैसे <a href=http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "यदि आप अपने अकाउंट को डिलीट करते हैं तो आप स्थायी रूप से आपकी जानकारी, इतिहास और नीजी कार्य (जैसे टिपण्णी, बुकमार्क और  हाइलाइट आदि) जो YouVersion.com के अन्तर्गत हैं, हट जाएगी। यह कारवाई आप के द्वारा या हमारी टीम के द्वारा पुन: प्रारंभ करने में नामुमकिन हैं। यदि आप निश्चित हैं, कृपया अपनी कारवाई जारी रखे।"
@@ -294,6 +389,7 @@ hi:
       information use title: " आपके द्वारा उपलब्ध जानकारी का हम कैसे उपयोग करते हैं? "
       information use text: "do not translate"
       information security title: "जानकारियों की सुरक्षा"
+      information security text: "LifeChurch.tv आपकी व्यक्तिगत जानकारी आपकी स्पष्ट सहमति के बिना LifeChurch.tv के बाहर अन्य संस्थानों के साथ शेयर नहीं करेगा। LifeChurch.tv केवल इसे अति आवश्यक होने पर एक अच्छा विश्वास के साथ, उपयोग, संरक्षण या ऐसी जानकारी का प्रकटीकरण यथोचित (a) किसी लागू कानून, विनियम, कानूनी प्रक्रिया या प्रवर्तनीय सरकारी अनुरोध को संतुष्ट करने, (ख) लागू उपयोग की शर्तें तत्संबंधी संभावित उल् लंघनों की जांच सहित, लागू करने, (ग) का पता लगाने, के लिए आवश्यक है आपकी व्यक्तिगत जानकारी शेयर कर सकता हैं।अन्यथा धोखाधड़ीरोकने के लिए, सुरक्षा या तकनीकी मुद्दों का पता, या (घ) अधिकारों, संपत्ति या सुरक्षा LifeChurch.tv, इसके उपयोगकर्ताओं या जनता के रूप में अपेक्षित या कानून द्वारा अनुमति दी गई के लिए आसन्न नुकसान के खिलाफ की रक्षा के लिए भी इस्तेमाल कर सकता हैं ।LifeChurch.tv अनधिकृत पहुँच या अनधिकृत परिवर्तन, प्रकटीकरण या डाटा के विनाश के खिलाफ तथा हमारे डाटा संग्रहण, भंडारण और संसाधन प्रथाओं और सुरक्षा उपायों, ही सिस्टम जहाँ हम निजी डाटा संग्रह करने के लिए अनाधिकृत उपयोग के खिलाफ  भौतिक सुरक्षा उपायों की आंतरिक समीक्षा सहित की रक्षा के लिए उपयुक्त सुरक्षा उपाय लेता है।जब तक कि स्पष्ट अनुमति आप से नहीं उपलब्ध नहीं होती LifeChurch.tv इसके कर्मचारियों, ठेकेदारों और एजेंटों जो संचालित, विकसित करने या हमारी सेवाओं में सुधार करने के लिए आपकी व्यक्तिगत जानकारी तक पहुँच प्रतिबंधित हैं। इन व्यक्तियों द्वारा गोपनीयता के दायित्वों से आबद्ध होते हैं और अगर वे इन कर्तव्यों को पूरा करने के लिए असफल होते हैं बर्खास्तगी और आपराधिक मामलों सहित, अनुशासनित कारवाही के लिए बाध्य हैं।"
       data integrity title: "डाटा की सम्पूर्णता "
       data integrity text: "do not translate"
       information access title: "व्यक्तिगत जानकारी का accessing और updation कार्य प्रगति पर हैं"
@@ -352,6 +448,16 @@ hi:
       general title: "सामान्य जानकारियाँ"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "आगे बढे,(अभी) यहाँ पर देखने लायक कुछ नहीं हैं। "
+        description: "अपने आप में और मित्रों के संग बाइबिल अध्ययन दिलचस्प हैं। आपके गतिविधियों का इतिहास यहाँ दर्शाया जायेगा। "
+      visit friend: "%{friend}'s प्रोफाइल मुआइना करे "
+      tab activity: "मेरी गतिविधियाँ "
+      tab friends: "मित्र"
+      tab notes: "टिप्पणीयाँ "
+      tab bookmarks: "बुकमार्क्स"
+      tab highlights: "हाइलाइट"
+      tab badges: "Badges"
       first name: "पहला नाम"
       last name: "आखरी नाम"
       email: "इमेल अड्रेस "
@@ -391,6 +497,9 @@ hi:
       reading_plans: "मेरे द्वारा शुरू की गयी YouVersion पाठक योजना  की जानकारी सूचित करे। "
       publishing partners: "कृपया मुझे YouVersion सामग्री भागीदरों के समाचारों से अप्डैटड रखे।"
       update: "सूचनाए अपडेट करें"
+      friendships: "मुझे मेरे मित्र अनुरोध सूचित करे "
+      moments: "मेरे मित्रों के गतिविधियों से मुझे अवगत कराए "
+      comments: "मेरी गतिविधि पर कमेंट मुझे सूचित कराये "
   bookmarks:
     new: "नया बुकमार्क "
     edit: "संपादन"
@@ -404,9 +513,10 @@ hi:
     not found: "बुकमार्क्स आपको तुरंत आपके पसंदीदा पद्य या आपके द्वारा पढ़ा हुआ विशेष किताब के आखरी अध्याय पर ले जायेगा । बुकमार्क से जुड़ने के लिए बाइबिल रीडर से पध्यों सेलेक्ट करे और रीडर के ऊपर दर्शाए गए सेलेक्टेड बटन क्लिक कीजिए।"
     other user not found: "%{username} के द्वारा कोई बुकमार्क्स save नहीं किया गया हैं।"
     creation form errors: "निम्नलिखित error(s) के कारण बुकमार्क निर्माण विफल हुआ:"
-    successfully created: "बुकमार्क पाया गया "
-    successfully deleted: "बुकमार्क हटा दिया गया हैं"
-    successfully updated: "बुकमार्क अपडेट हुआ "
+    create success: "बुकमार्क सेव हुआ "
+    destroy success: "बुकमार्क हटा दिया गया हैं"
+    destroy failure: "बुकमार्क डिलीट करने में त्रुटि पाया गया "
+    update success: "बुकमार्क अपडेट हुआ "
     labels placeholder: "विभिन्न लेबेल को अल्पविराम द्वारा अलग-अलग दर्शाए।"
     save: "बुकमार्क save कीजिए"
     confirm delete: "हाँ, मैं निश्चित हूँ "
@@ -417,9 +527,23 @@ hi:
     update: "अपडेट"
     color: "रंग:"
     version field: "संस्करण: "
+    none user: "%{username}के द्वारा कोई बुकमार्क नहीं हैं "
+    blank slate:
+      heading: "अर्थपूर्ण अंशों को बुकमार्क करे "
+      description: "बाइबिल अध्ययन के दौरान अंश सेलेक्ट कर उसे बुकमार्क करे।बुकमार्क डिलीट,संपादन,अवलोकन के लिए यहाँ वापिस आये। "
+    form:
+      title field: "टाइटिल"
+      reference field: "सन्दर्भ:"
+      labels field: "Labels (comma-separated):"
+      colors field: "रंग:"
+      update button: "बुकमार्क अपडेट करे "
+      save button: "बुकमार्क save कीजिये "
   badges:
     earned a badge: "आपने एक badge अर्जित किया "
     user badges: "%{user}s के Badges"
+    earned date: "%{username}%{ago}समय पहले अर्जित "
+    none me: "आपके द्वारा अभी तक कोई badge अर्जित नहीं किया गया हैं।"
+    none user: "%{username} के द्वारा अभी तक कोई badge अर्जित नहीं किया गया हैं।"
   plans:
     title: "पाठक योजनाएँ  "
     browse by category: "श्रेणी के अनुसार ब्राउस कीजिए"
@@ -564,7 +688,15 @@ hi:
     chapter only: "इन वचनों के लिए ऑडियो उपलब्ध नहीं हैं। कृपया इस के लिए क्षमा कीजिए। ऑडियो के लिए अध्याय को रीडर में देखे।"
     close player menu: "क्लोज "
   highlights:
+    blank slate:
+      heading: "अर्थपूर्ण अंशों को हाईलाइट करे "
+      description: "बाइबिल अध्ययन के दौरान अंश सेलेक्ट कर उसे हाईलाइट करे।हाईलाइट डिलीट,संपादन,अवलोकन के लिए यहाँ वापिस आये। "
+    none user: "%{username} के द्वारा कोई हाईलाइट नहीं हैं "
     choose color: "रंग चुने "
+    create success: "हाईलाइट सेव हुआ "
+    create failure: "हाईलाइट सेविंग में त्रुटि "
+    destroy success: "हाइलाइट डिलीट हुआ "
+    destroy failure: "हाईलाइट डिलीट करने में त्रुटि "
     creation error: "कृपया क्षमा कीजिए,हाइलाइट करने में असमर्थ।"
     delete error: "कृपया क्षमा कीजिए,हाइलाइट हटाने में असमर्थ हैं।"
   searching:
