--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -2,11 +2,11 @@ id:
   social:
     share: "Bagikan"
     my connections: "Akun terkait"
-    connected as: "Anda tersambung dengan %{koneksi} sebagai %{nama pengguna}"
+    connected as: "Anda tersambung dengan %{connection} sebagai %{username}"
     remove connection: "Hapus koneksi ini"
-    connection friends: "Beberapa pengguna YouVersion yang terhubung dengan anda di %{connection}:"
+    connection friends: "Inilah beberapa pengguna YouVersion yang terhubung dengan Anda di %{connection}:"
     errors:
-      no friends: "Tidak ada teman %{connection} anda yang menggunakan YouVersion."
+      no friends: "Tidak ada teman %{connection} Anda yang menggunakan YouVersion."
       reset connection: "Maaf, terjadi sebuah kesalahan. Silakan tutup dan kemudian hubungkan kembali sambungan ini."
     email:
       name: "Email"
@@ -32,7 +32,12 @@ id:
     users username not available: "Nama Pengguna yang diberikan tidak tersedia"
     users username or password invalid: "Nama Pemakai atau kata sandi yang diberikan tidak berlaku"
     users username required: "Anda harus masukkan nama pengguna."
+    users first name required: "Anda harus memasukkan nama depan."
+    users last name required: "Anda harus memasukkan nama belakang."
   meta:
+    kids_app:
+      title: "Aplikasi Alkitab untuk anak-anak."
+      description: "..."
     100million:
       title: "Dimulai dengan 100 juta"
       description: "Aplikasi Alkitab telah dipasang hampir 100 juta kali - kejadian penting yang luar biasa! Namun ini hanya permulaan saja. Unduh Aplikasi Alkitab gratis hari ini - dan bagikan app ini kepada teman-teman anda.  Mari kita buat sejarah bersama-sama."
@@ -42,6 +47,8 @@ id:
     connections:
       index:
         title: "Akun terkait"
+  ui:
+    loading indicator text: "Sedang memuat ..."
   now: "Sekarang"
   celebrating 50MM: "Merayakan 50 Juta Instalasi Aplikasi"
   link: "Tautan"
@@ -129,7 +136,6 @@ id:
   chapter: "Pasal"
   bible: "Alkitab"
   notes title: "Catatan"
-  friends: "Teman"
   groups: "Grup"
   mobile: "Piranti bergerak"
   live: "Langsung/Grup"
@@ -150,7 +156,91 @@ id:
   or:
     lower: "atau"
     upper: "ATAU"
+  moments:
+    vod:
+      title: "Ayat hari ini"
+    friendship:
+      now friends: "Anda sekarang berteman dengan"
+    cta:
+      profile update text: "Bantu teman menemukan Anda."
+      profile update button: "Perbarui profil anda"
+      sharing text: "Bagi ayat-ayat dengan media-media sosial"
+      sharing button: "Aktifkan berbagi"
+      friends text: "Lihat saat-saat beberapa teman Anda dalam ber-Alkitab."
+      friends button: "Menemukan teman-teman"
+    action:
+      go to scripture: "Menuju firman"
+      load more: "Tampilkan lebih"
+      like: "Suka"
+      like title: "Menyukai ini"
+      share: "Bagikan"
+      share title: "Bagikan ini dengan teman-teman atau keluarga"
+      comment: "Komentar"
+      comment title: "Lihat semua komentar"
+      edit: "Sunting"
+      edit highlight title: "Edit sorotan ini"
+      edit bookmark title: "Edit penanda ini"
+      edit note title: "Edit catatan ini"
+      delete: "Hapus"
+      delete confirm: "Apakah anda yakin?"
+      delete highlight title: "Hapus sorotan ini"
+      delete bookmark title: "Hapus penanda ini"
+      delete note title: "Hapus catatan ini"
+  notifications:
+    title: "Pemberitahuan"
+    none: "Anda tidak memiliki pemberitahuan apapun"
+    no new: "Tidak ada pemberitahuan baru"
+    view all: "Lihat semua Pemberitahuan"
+  comments:
+    post comment: "Kirim komentar"
+    create success: "Komentar terkirim"
+    create failure: "Komentar tidak dapat terkirim"
+    form:
+      save button: "Pos"
+  friends:
+    you have N friends: "Anda memiliki %{jumlah} teman"
+    none me: "Bagikan saat-saat bersama Alkitab seperti penanda, sorotan, dan catatan dengan teman terdekat Anda dan keluarga."
+    blank slate:
+      heading: "Tidak sedang berteman"
+      description: "Anda harus berteman dengan orang ini untuk dapat melihat teman-teman yang dimilikinya."
+    limit notice: "Anda dapat memiliki teman sebanyak 150 teman"
+    limit description: "Membatasi pertemanan anda pada aplikasi Alkitab kepada orang yang Anda kenal betul akan menciptakan lingkungan yang tepat untuk berbagi perbincangan jujur dan penemuan-penemuan Anda dengan teman kepercayaan Anda."
+  friendships:
+    offer success: "Permohonan berteman terkirim"
+    offer failure: "Kesalahan dalam pengiriman permohonan berteman"
+    create success: "Anda sekarang berteman"
+    create failure: "Kesalahan dalam menciptakan pertemanan"
+    destroy success: "Permohonan ditolak"
+    destroy failure: "Kesalahan dalam menolak permintaan"
+    requests title: "Permohonan pertemanan"
+    requests view all: "Lihat semua permohonan berteman"
+    requests none: "Anda tidak memiliki permohonan berteman"
+    requests no new: "Tidak ada permintaan baru"
+    status:
+      pending: "Permohonan tertunda"
+      friends: "Teman-teman"
+    user wants friendship: "%{pengguna} ingin menjadi teman Anda"
+    user wants friendship partial: "ingin menjadi teman Anda"
+    form:
+      remove friend button: "Melepaskan pertemanan"
+      remove friend button title: "Menghapus orang ini dari daftar teman Anda"
+      add friend button: "Menambah teman"
+      add friend button title: "Mengirimkan %{pengguna} permintaan pertemanan"
+      accept button: "Terima"
+      accept request button: "Menerima permintaan"
+      ignore button: "Abaikan"
+      ignore request button: "Mengabaikan permintaan"
   notes:
+    none user: "%{pengguna} tidak memiliki catatan apapun."
+    blank slate:
+      heading: "Anda belum mempunyai catatan apapun"
+      description: "Saat pembacaan Alkitab, ketika Anda merasa hal sederhana tentang Allah, pada saat suara itu masih berbicara Anda dapat segera menambahkan hal-hal yang terpikirkan itu di sini. Catatan-catatan Anda itu akan ditandai sebagai <em>hal pribadi<em> secara otomatis. Jika Anda ingin membagikan catatan tersebut dengan teman-teman, mudah saja membukanya dan mengubahnya menjadi <em>hal umum<em>."
+    form:
+      title field: "Judul:"
+      content field: "Isi:"
+      reference field: "Referensi:"
+      status field: "Status:"
+      save button: "Simpan"
     list title: "Catatan"
     loading community: "Memuat catatan komunitas..."
     no community notes: "Tidak ditemukan catatan komunitas dengan referensi ayat yang dipilih. Untuk membuat catatan, pilih ayat di pembaca Akitab lalu klik tombol Pilihan di atas pembaca."
@@ -178,7 +268,10 @@ id:
     cancel: "Batalkan"
     pop out: "Pop out"
     none found: "Tidak ditemukan catatan..."
-    successfully deleted: "Catatan dihapus"
+    create success: "Catatan telah disimpan"
+    create failure: "Kesalahan dalam menyimpan catatan"
+    destroy success: "Catatan dihapus"
+    destroy failure: "Kesalahan dalam menghapus catatan"
   ref:
     loading secondary: "Memuat Refrensi dalam Versi Kedua..."
     clear verses: "Bebaskan Ayat Terpilih"
@@ -209,7 +302,9 @@ id:
     profile form errors: "Kesalahan berikut menghambat pembaharuan profil Anda:"
     email address: "Alamat email"
     user name: "Nama pengguna"
-    agreement: "Saya setuju dengan %{terms_link} YouVersion"
+    first name: "Nama depan"
+    last name: "Nama belakang"
+    agreement: "Saya setuju dengan %{terms_link} YouVersion."
     terms and conditions: "syarat dan ketentuan"
     facebook sign up success: "Selamat! Anda telah disahkan lewat Facebook. Pilihlah nama pengguna dan kata sandi YouVersion untuk melanjutkan."
     register: "Daftar"
@@ -238,12 +333,12 @@ id:
     edit account_existence: "Hapus Akun"
     delete account button: "Hapus Akun YouVersion Saya"
     no devices: "Tak ada piranti yang terhubung ke akun YouVersion Anda"
-    no devices download copy: "Menurut Alkitab daring, YouVersion.com, Aplikasi Alkitab adalah Alkitab seluler gratis yang bisa dipasang hampir di semua piranti seluler. Aplikasi Alkitab memungkinkan pengguna membaca Alkitab, berbagi ayat dengan jejaring sosial mereka, memberi markah perikop kesukaan mereka, dan lainnya&mdash;semua dalam tatanan yang sesuai gaya hidup dinamis mereka. Kunjungi <a href='http://www.youversion.com/download'>youversion.com/download</a> dari piranti selular anda untuk mengunduh Ap Alkitab dan menghubungkan akun anda!"
+    no devices download copy: "Menurut Alkitab online YouVersion, aplikasi Alkitab ini gratis dan bisa dipasang hampir di semua jenis perangkat seluler. Aplikasi Alkitab ini membuat pengguna dapat membaca Alkitab, membagikan ayat dengan media sosial yang dimiliki, menandai pasal favorit, dan banyak lagi&amp;mdash;semua dalam format yang mengikuti perkembangan gaya hidup telepon selular. Kunjungi <a href='https://www.bible.com/app'>bible.com/app</a> dari perangkat selular Anda untuk mengunduh aplikasi Alkitab ini dan hubungkan dengan akun Anda!"
     yes delete: "Ya, Hapus Akun Saya"
     account delete success: "Akun YouVersion anda telah terhapus dengan sukses. Kami berharap anda terus menemukan cara bermakna untuk berinteraksi dengan Alkitab. Beberapa aplikasi ini mungkin membantu seraya anda melangkah maju: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Jika Anda menghapus akun Anda, selamanya Anda akan kehilangan semua informasi, sejarah, dan personalisasi (seperti catatan, markah, sorotan, dll.) Anda di YouVersion.com dan Aplikasi Alkitab. Tindakan ini tidak dapat dibatalkan baik oleh anda maupun tim kami. Jika Anda yakin, silakan lanjut di bawah ini."
     user recent activity: "Aktivitas Terkini %{user}"
-    user notes: "Catatan-Catatan %{user}"
+    user notes: "Catatan-catatan %{user}"
     my friends: "Teman"
     my notes: "Catatan"
     user friends: "Teman-teman %{user}"
@@ -353,6 +448,16 @@ id:
       general title: "Informasi Umum"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Lanjutkan, (masih) tidak ada yang dapat diihat disini"
+        description: "Awal keterlibatan dengan Alkitab, atau pun teman-teman Anda, dan halaman ini akan menampilkan riwayat yang telah terjadi."
+      visit friend: "Kunjungi profil %{teman}"
+      tab activity: "Kegiatan"
+      tab friends: "Teman-teman"
+      tab notes: "Catatan"
+      tab bookmarks: "Markah"
+      tab highlights: "Sorotan"
+      tab badges: "Lencana"
       first name: "Nama Depan"
       last name: "Nama Belakang"
       email: "Alamat email"
@@ -392,6 +497,9 @@ id:
       reading_plans: "Beritahu saya tentang informasi rencana bacaan yang telah saya mulai"
       publishing partners: "Selalu beritahu saya tentang berita-berita dari mitra-mitra konten YouVersion."
       update: "Perbarui Notifikasi"
+      friendships: "Beritahu saya tentang permohonan pertemanan"
+      moments: "Beritahu saya tentang aktifitas teman-teman saya"
+      comments: "Beritahu saya tentang aktivitas komentar-komentar saya"
   bookmarks:
     new: "Markah Baru"
     edit: "Sunting"
@@ -405,9 +513,10 @@ id:
     not found: "Markah memberi Anda panduan referensi cepat ke perikop favorit Anda ataupun ke pasal terakhir yang Anda baca di kitab tertentu. Untuk menambahkan markah, pilih ayat di pembaca Alkitab dan kemudian klik tombol Dipilih yang ada di bagian teratas dari pembaca."
     other user not found: "%{username} belum menyimpan markah apapun."
     creation form errors: "Kesalahan(-kesalahan) berikut menghalangi pembuatan markah Anda:"
-    successfully created: "Markah ditambahkan"
-    successfully deleted: "Markah Dihapus"
-    successfully updated: "Markah Diperbarui"
+    create success: "Penanda Buku disimpan"
+    destroy success: "Penanda dihapus"
+    destroy failure: "Kesalahan dalam menghapus penanda"
+    update success: "Penanda telah diperbarui"
     labels placeholder: "Pisahkan beberapa label dengan koma"
     save: "Simpan Markah"
     confirm delete: "Ya, saya yakin"
@@ -418,9 +527,23 @@ id:
     update: "Perbarui"
     color: "Warna:"
     version field: "Versi:"
+    none user: "%{pengguna} tidak memiliki penanda"
+    blank slate:
+      heading: "Buat penanda untuk ayat penting"
+      description: "Ketika membaca Alkitab, pilih sebuah ayat dan tandai. Kembali kesini jika ingin membaca, mengedit atau menghapus penanda ini."
+    form:
+      title field: "Judul:"
+      reference field: "Referensi:"
+      labels field: "Label-label (dipisahkan koma):"
+      colors field: "Warna:"
+      update button: "Memperbarui Penanda "
+      save button: "Simpan Markah"
   badges:
     earned a badge: "Dapat Lencana"
     user badges: "Lencana %{user}"
+    earned date: "Diperoleh %{username} %{ago} yang lalu"
+    none me: "Anda belum memperoleh lencana apapun."
+    none user: "%{username} belum memperoleh lencana apapun."
   plans:
     title: "Program Bacaan"
     browse by category: "Telusuri berdasar kategori"
@@ -515,7 +638,7 @@ id:
     catch up successful: "Sukses! Anda telah mengejar ketinggalan bacaan Anda."
     restart successful: "Rencana Anda telah mulai lagi dari awal."
     subscribe successful: "Bagus! Anda telah berlangganan rencana ini."
-    day number: "Hari"
+    day number: "Hari %{day}"
     which day in plan: "Hari ke %{day} dari %{total}"
     must start to complete: "Mulai rencana ini untuk menyimpan bacaan-bacaan yang telah selesai!"
     invalid reference: "Maaf, ayat rujukan untuk bacaan ini belum tersedia pada versi yang dipilih. Cobalah memilih versi berbeda di atas. Jika Anda tetap melihat pesan ini, silakan beritahu <a href='%{support_url}'>tim dukungan</a> kami tentang isu ini."
@@ -565,7 +688,15 @@ id:
     chapter only: "Maaf, suara tidak tersedia untuk ayat-ayat. Lihat di pembaca untuk pasal suara."
     close player menu: "Tutup"
   highlights:
+    blank slate:
+      heading: "Menyorot ayat-ayat bermakna"
+      description: "Ketika membaca Alkitab, pilih sebuah ayat dan tandai. Kembali ke sini untuk melihat, mengedit atau menghapus tanda tersebut."
+    none user: "%{pengguna} tidak memiliki hal-hal yang ditandai"
     choose color: "Pilih Warna"
+    create success: "Hal-hal yang ditandai tersimpan"
+    create failure: "Kesalahan dalam menyimpan hal yang ditandai"
+    destroy success: "Hal yang ditandai dihapus"
+    destroy failure: "Kesalahan dalam menghapus hal yang ditandai"
     creation error: "Maaf, tidak dapat memberi sorotan."
     delete error: "Maaf, sorotan tidak bisa disingkirkan."
   searching:
@@ -585,10 +716,10 @@ id:
     headline: "Setiap orang butuh Firman Tuhan."
     subhead: "Bantulah orang di seluruh dunia memiliki Alkitab dalam genggaman mereka."
     copy: "Bayangkan jika Anda dapat memberikan Alkitab gratis ke semua orang. Saat Anda memberi kepada YouVersion, Anda dapat melakukan hal itu. Kami hidup di saat yang lain hanya bermimpi &ndash; saat setiap orang yang punya ponsel dapat mengakses Alkitab dan mengalami kisah kasih Tuhan bagi kita. Dengan dukungan Anda, kami dapat terus membantu lebih banyak orang meluangkan waktu dalam Firman Tuhan"
-    amount: "Nilai sumbangan "
+    amount: "Jumlah sumbangan"
     option once: "Satu kali"
     option monthly: "Bulanan"
-    alert empty amount: "Mohon isi besar nilai donasi."
+    alert empty amount: "Mohon isi jumlah sumbangan "
     name: "Nama Anda"
     card number: "Nomor Kartu Kredit"
     card exp date: "Tanggal berakhir (MMYY)"
