--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -2,9 +2,9 @@ mk:
   social:
     share: "Сподели"
     my connections: "Поврзани профили"
-    connected as: "Поврзани сте со %{connection} како %{username}."
-    remove connection: "Отстрани"
-    connection friends: "Еве неколку YouVersion корисници со кои си поврзан на %{connection}."
+    connected as: "Поврзан си со %{connection} како %{username}."
+    remove connection: "Отстрани ја оваа врска"
+    connection friends: "Еве неколку YouVersion корисници со кои си поврзан на %{connection}:"
     errors:
       no friends: "Никој од твоите %{connection} пријатели не е на YouVersion."
       reset connection: "Грешка при конекцијата. Ве молиме отстранете и реконектирајте ја конекцијата."
@@ -32,7 +32,12 @@ mk:
     users username not available: "Корисничкото име кое го побаравте не е достапно."
     users username or password invalid: "Корисничкото име или лозинката кои ги напишавте се невалидни."
     users username required: "Мора да внесете корисничко име."
+    users first name required: "Внеси го името"
+    users last name required: "Внеси го презимето"
   meta:
+    kids_app:
+      title: "Апликација \"Библија\" за деца"
+      description: "..."
     100million:
       title: "Започнува со 100 милиони"
       description: "Апликацијата „Библија“ е преземена речиси 100 милиони пати - неверојатен успех! Но, ние со ова само се загреваме. Преземете ја бесплатната апликација „Библија“ денеска и потоа споделете ја со вашите пријатели. Ајде да ја создаваме историјата заедно."
@@ -42,6 +47,8 @@ mk:
     connections:
       index:
         title: "Поврзани профили"
+  ui:
+    loading indicator text: "Се вчитува ..."
   now: "Сега"
   celebrating 50MM: "Славиме 50 Милиони инсталирани апликации!"
   link: "Врска"
@@ -91,7 +98,7 @@ mk:
   invalid password: "Погрешна лозинка"
   sign back in: "За твојата сигурност,  најавата истекува по две недели.  Најави се повторно."
   youversion: "YouVersion"
-  username or email prompt: "Корисничко име (или Е-адреса)"
+  username or email prompt: "Корисничко име (или е-пошта)"
   password prompt: "Лозинка"
   sign in: "Најава"
   sign in to youversion: "Најави се во YouVersion"
@@ -129,7 +136,6 @@ mk:
   chapter: "Глава"
   bible: "Библија"
   notes title: "Белешки"
-  friends: "Пријатели"
   groups: "Групи"
   mobile: "Мобилен"
   live: "Во живо/групи"
@@ -150,7 +156,91 @@ mk:
   or:
     lower: "или"
     upper: "ИЛИ"
+  moments:
+    vod:
+      title: "Стих на денот"
+    friendship:
+      now friends: "Сега си пријател со"
+    cta:
+      profile update text: "Помогни им на пријателите да те пронајдат."
+      profile update button: "Ажурирај го твојот профил"
+      sharing text: "Сподели стихови на социјалните мрежи"
+      sharing button: "Овозможи споделување"
+      friends text: "Погледни ги моментите на твоите пријатели во Библијата."
+      friends button: "Најди пријатели"
+    action:
+      go to scripture: "Оди до Свето Писмо"
+      load more: "Вчитај повеќе"
+      like: "Ми се допаѓа"
+      like title: "Ми се допаѓа"
+      share: "Сподели"
+      share title: "Сподели го ова со твоите пријатели и семејство"
+      comment: "Коментар"
+      comment title: "Види ги сите коментари"
+      edit: "Редактирај"
+      edit highlight title: "Уреди го ова нагласување"
+      edit bookmark title: "Уреди го овој обележувач"
+      edit note title: "Уреди ја оваа белешка"
+      delete: "Избриши"
+      delete confirm: "Дали си сигурен?"
+      delete highlight title: "Избриши го ова нагласување"
+      delete bookmark title: "Избриши го овој обележувач"
+      delete note title: "Избриши ја оваа белешка"
+  notifications:
+    title: "Известувања"
+    none: "Немаш никакви известувања"
+    no new: "Нема нови известувања"
+    view all: "Види ги сите известувања"
+  comments:
+    post comment: "Напиши коментар"
+    create success: "Коментарот е објавен"
+    create failure: "Коментарот неможе да се објави"
+    form:
+      save button: "Објави"
+  friends:
+    you have N friends: "Имаш %{count} пријатели"
+    none me: "Сподели твои моменти од Библијата како обележувачи, нагласувања и белешки со твоите најблиски пријатели и фамилија."
+    blank slate:
+      heading: "Во моментов не сте пријатели"
+      description: "Мораш да бидеш пријател со оваа личност за да ги погледнеш нејзините пријатели."
+    limit notice: "Можеш да имаш 150 пријатели"
+    limit description: "Ограничувањето на пријателствата во Bible App со луѓе кои ги познавате добро, создаваат средина за искрени разговори и споделени искуства со доверливи пријатели."
+  friendships:
+    offer success: "Барањето за пријателство е испратено"
+    offer failure: "Грешка во испраќањето на барање за пријателство"
+    create success: "Сега сте пријатели"
+    create failure: "Грешка во креирањето пријателство"
+    destroy success: "Барањето е одбиено"
+    destroy failure: "Грешка во одбивањето барање"
+    requests title: "Барање за пријателство"
+    requests view all: "Види ги сите барања за пријателство"
+    requests none: "Немаш барања за пријателство"
+    requests no new: "Нема нови барања"
+    status:
+      pending: "Барањето е во чекање"
+      friends: "Пријатели"
+    user wants friendship: "%{user} сака да биде твој пријател"
+    user wants friendship partial: "сака да биде твој пријател"
+    form:
+      remove friend button: "Отстрани пријател"
+      remove friend button title: "Отстрани ја оваа личност од листата на пријатели"
+      add friend button: "Додај пријател"
+      add friend button title: "Испрати на %{user} барање за пријателство"
+      accept button: "Прифати"
+      accept request button: "Прифати го барањето"
+      ignore button: "Игнорирај"
+      ignore request button: "Игнорирај го барањето"
   notes:
+    none user: "%{username} нема земено воопшто белешки."
+    blank slate:
+      heading: "Ти немаш белешки до сега"
+      description: "Како што ја читаш Библијата, кога ќе го почуствуваш тивкиот глас на Господ, ќе можеш веднаш да ги забележиш твоите мисли тука. Твоите белешки ќе бидат забележани како <em>private</em> зададени / default. Ако сакаш да споделиш белешка со твоите пријатели, едноставно отвори ја и промени ја во <em>public</em>."
+    form:
+      title field: "Наслов:"
+      content field: "Содржина:"
+      reference field: "Референци:"
+      status field: "Статус:"
+      save button: "Зачувај"
     list title: "Белешки"
     loading community: "Вчитување на белешките од заедницата..."
     no community notes: "Не постојат никакви белешки на заедницата за кои биле селектирани стихови. За да создадеш белешка, селектирај стих во читачот на Библијата а потоа притисни го копчето селектирано на врвот од читачот. "
@@ -178,7 +268,10 @@ mk:
     cancel: "Откажи"
     pop out: "Истави"
     none found: "Не најдовме белешки..."
-    successfully deleted: "Белешката е отстранета"
+    create success: "Белешката е зачувана"
+    create failure: "Грешка во зачувување на белешката"
+    destroy success: "Белешката е избришана"
+    destroy failure: "Грешка во бришење на белешката"
   ref:
     loading secondary: "Вчитување референци за втората верзија..."
     clear verses: "Отселектирај ги селектираните стихови"
@@ -207,8 +300,10 @@ mk:
     settings: "Уредувања"
     creation form errors: "Следните грешки оневозможуваат да креираш профил:"
     profile form errors: "Следните грешки оневозможуваат да го ажурираш профилот:"
-    email address: "E-адреса"
+    email address: "Адреса на е-пошта"
     user name: "Корисничко име"
+    first name: "Име"
+    last name: "Презиме"
     agreement: "Се согласувам со %{terms_link} на YouVersion."
     terms and conditions: "услови"
     facebook sign up success: "Одлично, се поврза со Facebook! Избери корисничко име и лозинка за да продолжиш."
@@ -238,7 +333,7 @@ mk:
     edit account_existence: "Избриши профил"
     delete account button: "Избриши го мојот YouVersion профил"
     no devices: "Ниту еден уред не е поврзан со твојот YouVersion профил"
-    no devices download copy: "Напојувана од Библијата достапна на Интернет преку YouVersion.com, апликацијата „Библија“ е бесплатна мобилна Библија која може да се инсталира речиси на секој телефон. Апликацијата „Библија“ овозможува корисниците да ја читаат Библијата, да споделуваат стихови на нивните социјални мрежи, да ги обележуваат омилените стихови, и повеќе &mdash; сето тоа во формат кој е во тек со нивниот мобилен животен стил. Посети ја <a href='https://www.bible.com/download'>bible.com/download</a> на твојот телефон за да ја симнеш апликацијата „Библија“ и да се поврзеш со твојот профил!"
+    no devices download copy: "Напојувана од Библијата, достапна на Интернет преку YouVersion.com, апликацијата „Библија“ е бесплатна мобилна Библија која може да се инсталира речиси на секој телефон. Апликацијата „Библија“ овозможува корисниците да ја читаат Библијата, да споделуваат стихови на нивните социјални мрежи, да ги обележуваат омилените стихови, и повеќе &mdash; сето тоа во формат кој е во тек со нивниот мобилен животен стил. Посети ја <a href='https://www.bible.com/app'>bible.com/app</a> на твојот телефон за да ја симнеш апликацијата „Библија“ и да се поврзеш со твојот профил!"
     yes delete: "Да, избриши го мојот YouVersion профил"
     account delete success: "Твојот YouVersion профил беше успешно избришан. Се надеваме дека ќе продолжиш да ја користиш Библијата на значаен начин. Некои од следниве апликации можат да ти помогнат понатаму: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a> "
     delete account description: "Ако го избришеш профилот, засекогаш ќе ги изгубиш сите информации, историја и персонализација (н.п.р. белешки, обележувачи, означувања, итн.) на YouVersion.com и Библиската Апликација. Оваа акција не може да ја поврати ниту ти ниту нашиот тим. Ако сигурно го сакаш ова, продолжи понатаму. "
@@ -353,6 +448,16 @@ mk:
       general title: "не преведувај"
       general text: "не преведувај"
     profile:
+      blank slate:
+        heading: "Продолжи понатака, нема ништо да се види тука (сега за сега)"
+        description: "Започни да се ангажираш со Библијата или со твоите пријатели и оваа страница ќе прикаже историја од тоа што си правел/а."
+      visit friend: "Посети профил на %{friend}"
+      tab activity: "Активност"
+      tab friends: "Пријатели"
+      tab notes: "Белешки"
+      tab bookmarks: "Обележувачи"
+      tab highlights: "Нагласувања"
+      tab badges: "Беџови"
       first name: "Име"
       last name: "Презиме"
       email: "Е-адреса"
@@ -392,6 +497,9 @@ mk:
       reading_plans: "Извести ме за информации околу плановите за читање кои ги почнав."
       publishing partners: "Информирај ме за новости од партнерите на YouVersion."
       update: "Ажурирај ги известувањата"
+      friendships: "Известувај ме за покани за пријателство"
+      moments: "Известувај ме за активност на пријателите"
+      comments: "Известувај ме за коментари на моите активности"
   bookmarks:
     new: "Нов обележувач"
     edit: "Уреди"
@@ -405,9 +513,10 @@ mk:
     not found: "Обележувачите овозможуваат брз пристап до омилените пасуси или до последното поглавје што го читаш во некоја книга од Библијата. За да создадеш обележувач, избери стих во читачот на Библијата што го користиш и кликни на копчето \"Селектирано\" на врвот од читачот."
     other user not found: "%{username} се уште нема зачувано обележувачи."
     creation form errors: "Следниве грешки го спречија создавањето обележувач:"
-    successfully created: "Додаде обележувач"
-    successfully deleted: "Обележувачот е отстранет"
-    successfully updated: "Обележувачот е ажуриран"
+    create success: "Обележувачот е зачуван"
+    destroy success: "Обележувачот е отстранет"
+    destroy failure: "Грешка при бришење на обележувач"
+    update success: "Обележувачот е ажуриран"
     labels placeholder: "Раздели ги етикетите со запирки."
     save: "Зачувај го обележувачот"
     confirm delete: "Да, сигурен сум."
@@ -418,9 +527,23 @@ mk:
     update: "Ажурирај"
     color: "Боја:"
     version field: "Верзија:"
+    none user: "%{username} нема обележувачи"
+    blank slate:
+      heading: "Обележи значајни стихови"
+      description: "Додека ја читаш Библијата, избери стих и обележи го. Врати се овде да погледнеш, редактираш или избришеш обележување."
+    form:
+      title field: "Наслов:"
+      reference field: "Дел од Библијата:"
+      labels field: "Етикети (одделени со запирка):"
+      colors field: "Боја:"
+      update button: "Ажурирај обележувач"
+      save button: "Зачувај го обележувачот"
   badges:
     earned a badge: "Доби беџ."
     user badges: "Беџови на корисникот %{user}"
+    earned date: "Добиен од %{username} пред %{ago} "
+    none me: "Немаш добиено ниту еден беџ."
+    none user: "Корисникот %{username} нема добиено ниту еден беџ."
   plans:
     title: "Планови за читање"
     browse by category: "Преглед по категории"
@@ -525,6 +648,7 @@ mk:
     loading sidebar content: "Ја вчитувам страничната лента..."
   videos:
     title: "Видеа"
+    all: "Сите видеа"
     related scripture: "Поврзани стихови"
   licenses:
     authorized:
@@ -564,7 +688,15 @@ mk:
     chapter only: "Аудио не е достапно за стиховите. Погледни во читачот за аудио за глави."
     close player menu: "Затвори"
   highlights:
+    blank slate:
+      heading: "Нагласи значајни стихови"
+      description: "Додека ја читаш Библијата, избери стих и нагласи го. Врати се овде да погледнеш, редактираш или избришеш нагласување."
+    none user: "%{username} нема нагласувања"
     choose color: "Избери боја"
+    create success: "Нагласувањето е снимено"
+    create failure: "Грешка при снимање на нагласувањето"
+    destroy success: "Нагласувањето е избришано"
+    destroy failure: "Грешка при бришење на нагласување"
     creation error: "Не може да означиш."
     delete error: "Не може да го отстраниш означеното."
   searching:
@@ -654,6 +786,7 @@ mk:
     h3: "YouVersion е глобално"
     h3 sub: "Достапен во повеќе од 100 јазици."
     main: "Десетици милиони луѓе ја користат Библиската Апликација&trade; за да го користат Божјиот збор како дел од нивниот секојдневен живот. Симни ја бесплатната апликација и имај пристап до твоите обележувачи, белешки, планови за читање, каде и да си. Уживај во стотици верзии, вклучувајќи и аудио, сето тоа на твојот мобилен телефон."
+    button h4: "Оди до Bible.com/app"
     button h4 sub: "На твојот мобилен уред"
     download now: "Симни ја Библиската апликација сега"
     what people: "Што велат за Библиската апликација"
@@ -679,7 +812,7 @@ mk:
       our action: "Посочено ни е за ова и ќе се погрижиме наскоро."
     home:
       hero:
-        heading: "Бесплатна библија за твојот телефон, таблет и компјутер"
+        heading: "Бесплатна Библија за твојот телефон, таблет и компјутер"
         description: "YouVersion е едноставна Библија без никакви вметнати реклами, која го носи Божјиот збор во вашиот секојдневен живот"
         learn more: "Дознај повеќе долу"
         start reading: "Започни со читање"
@@ -773,5 +906,5 @@ mk:
         title: "Апликацијата „Библија“ е целосно бесплатна и претставува одличен начин да се истражи Библијата."
         copy: "Читај, слушај, гледај, сподели. Преземи ја апликацијата „Библија“ на твојот смартфон или таблет: <a href='http://bible.com/app'>Преземи сега</a>"
       sidebar:
-        tagline: "Ајде да ја создаваме историјата заедно."
-        button: "Сподели ја Библијата"
+        tagline: "Ајде да ја создаваме историјата заедно"
+        button: "Сподели ја апликацијата „Библија“"
