--- a/config/locales/ms.yml
+++ b/config/locales/ms.yml
@@ -32,7 +32,12 @@ ms:
     users username not available: "Nama pengguna yang dibekalkan tidak tersedia."
     users username or password invalid: "Nama pengguna atau kata laluan tidak sah."
     users username required: "Anda mesti masukkan nama pengguna."
+    users first name required: "Anda harus masukkan nama pertama."
+    users last name required: "Anda harus masukkan nama terakhir."
   meta:
+    kids_app:
+      title: "App Alkitab untuk Kanak-Kanak"
+      description: "..."
     100million:
       title: "Ia Bermula dengan 100 Juta"
       description: "App Alkitab telah di instalasi hampir 100 juta kali - pencapaian yang menakjubkan! Tetapi kita baru sahaja bermula. Muat turun App Alkitab percuma hari ini - dan kongsikan app ini dengan sahabat anda. Ayuh mencipta sejarah bersama."
@@ -42,6 +47,8 @@ ms:
     connections:
       index:
         title: "Akaun yang Berkaitan"
+  ui:
+    loading indicator text: "Memuat ..."
   now: "Sekarang"
   celebrating 50MM: "Merayakan 50 Juta Pemasangan App!"
   link: "Link"
@@ -129,7 +136,6 @@ ms:
   chapter: "Bab"
   bible: "Alkitab"
   notes title: "Nota"
-  friends: "Sahabat"
   groups: "Group"
   mobile: "Mobil"
   live: "Acara Langsung/Group"
@@ -150,7 +156,91 @@ ms:
   or:
     lower: "atau"
     upper: "ATAU"
+  moments:
+    vod:
+      title: "Ayat harian"
+    friendship:
+      now friends: "Anda sekarang bersahabat dengan"
+    cta:
+      profile update text: "Bantu sahabat anda untuk mencari anda"
+      profile update button: "Update profil anda"
+      sharing text: "Kongsikan ayat dengan rangkaian sosial"
+      sharing button: "Aktifkan perkongsian"
+      friends text: "Lihat moments sahabat anda di Alkitab."
+      friends button: "Cari sahabat"
+    action:
+      go to scripture: "Terus ke alkitab"
+      load more: "Load lebih lagi"
+      like: "Like"
+      like title: "Like ini"
+      share: "Beritakan"
+      share title: "Kongsikan dengan sahabat atau keluarga"
+      comment: "Komen"
+      comment title: "Lihat semua komen"
+      edit: "Mengedit"
+      edit highlight title: "Edit highlight ini"
+      edit bookmark title: "Edit bookmark ini"
+      edit note title: "Edit nota ini"
+      delete: "Hapuskan"
+      delete confirm: "Adakah anda pasti?"
+      delete highlight title: "Batalkan highlight ini"
+      delete bookmark title: "Hapuskan bookmark ini"
+      delete note title: "Hapuskan nota ini"
+  notifications:
+    title: "Notifikasi"
+    none: "Anda tidak mempunyai sebarang notifikasi"
+    no new: "Tiada notifikasi baru"
+    view all: "Lihat semua Notifikasi"
+  comments:
+    post comment: "Pos komen"
+    create success: "Komen telah dipos"
+    create failure: "Komen tidak dapat dipos"
+    form:
+      save button: "Pos"
+  friends:
+    you have N friends: "Anda mempunyai %{kira} sahabat"
+    none me: "Beritakanlah saat Alkitab anda yang istimewa - bookmark, highlight, dan nota - kepada sahabat dan keluarga anda."
+    blank slate:
+      heading: "Ketika ini bukannya sahabat"
+      description: "Anda perlu bersahabatkan seseorang ini sekiranya anda ingin melihat senarai sahabatnya."
+    limit notice: "Anda boleh mempunyai sebanyak 150 sahabat"
+    limit description: "Menghadkan sahabat App Alkitab anda kepada orang yang anda sangat kenal mewujudkan persekitaran untuk perbualan yang jujur dan penemuan yang dikongsi dengan sahabat yang dipercayai."
+  friendships:
+    offer success: "Permintaan persahabatan dihantar"
+    offer failure: "Terdapat ralat dalam penghantaran permintaan persahabatan "
+    create success: "Anda sekarang bersahabat"
+    create failure: "Terdapat ralat dalam mencipta persahabatan"
+    destroy success: "Permintaan ditolak"
+    destroy failure: "Terdapat ralat dalam menolak permintaan"
+    requests title: "Permintaan sahabat"
+    requests view all: "Lihat semua permintaan sahabat"
+    requests none: "Anda tidak mempunyai sebarang permintaan sahabat"
+    requests no new: "Tiada permintaan baru"
+    status:
+      pending: "Permintaan tertunda"
+      friends: "Sahabat"
+    user wants friendship: "%{user} ingin menjadi sahabat anda"
+    user wants friendship partial: "ingin menjadi sahabat anda"
+    form:
+      remove friend button: "Keluarkan sahabat"
+      remove friend button title: "Keluarkan orang ini dari senarai sahabat anda"
+      add friend button: "Tambah sahabat"
+      add friend button title: "Hantarkan %{user} permintaan sahabat"
+      accept button: "Terima"
+      accept request button: "Terima permintaan"
+      ignore button: "Biarkan"
+      ignore request button: "Abaikan permintaan"
   notes:
+    none user: "%{username} belum lagi mengambil nota."
+    blank slate:
+      heading: "Anda belum lagi mempunyai nota"
+      description: "Semasa membaca Alkitab, ketika mendengar suara Allah yang senyap tenang, bolehlah mencatat fikiran di sini. Nota anda ditanda <em>private</em> secara default. Jika anda ingin berkongsi sama sahabat, cuma perlu dibukanya dan ditukar ke <em>awam</em>."
+    form:
+      title field: "Tajuk:"
+      content field: "Kandungan:"
+      reference field: "Rujukan:"
+      status field: "Status:"
+      save button: "Selamatkan"
     list title: "Nota"
     loading community: "Kini load nota komuniti..."
     no community notes: "Kami tidak terjumpa nota komuniti berkaitan ayat tersebut. Untuk mencatat nota, pilihlah suatu ayat dalam pembaca Alkitab dan klik butang Terpilih di bahagian atas pembaca."
@@ -178,7 +268,10 @@ ms:
     cancel: "Batalkan"
     pop out: "Pop out"
     none found: "Tiada nota yang tercari..."
-    successfully deleted: "Nota Dibatalkan"
+    create success: "Nota diselamatkan"
+    create failure: "Terjadi kesilapan semasa menyelamatkan nota"
+    destroy success: "Nota dihapuskan"
+    destroy failure: "Terjadi kesilapan semasa menghapuskan nota"
   ref:
     loading secondary: "Memuatkan Rujukan dalam Versi Kedua..."
     clear verses: "Batalkan Ayat-ayat yang Terpilih"
@@ -209,6 +302,8 @@ ms:
     profile form errors: "Kesilapan berikut menghalang profil anda di-update:"
     email address: "Alamat E-mel"
     user name: "Nama Pengguna"
+    first name: "Nama pertama"
+    last name: "Nama keluarga"
     agreement: "Saya bersetuju dengan %{terms_link} YouVersion."
     terms and conditions: "terma dan syarat"
     facebook sign up success: "Bagus! Anda sudah mengesahkan Facebook. Seterusnya, pilih nama pengguna dan kata laluan YouVersion."
@@ -238,7 +333,7 @@ ms:
     edit account_existence: "Hapuskan Akaun"
     delete account button: "Hapuskan Akaun YouVersion Saya"
     no devices: "Tiada peranti yang terhubung ke Akaun YouVersion anda"
-    no devices download copy: "App Injil adalah Alkitab mobil percuma yang berdasarkan Alkitab online, YouVersion.com, yang boleh dipasang ke atas hampir sebarang peranti mobil. App Injil ini membolehkan pengguna membaca Alkitab, memberitakan ayat kepada jaringan sosial mereka, bookmark petikan kegemaran, dan selainnya&mdash; segalanya dalam format yang sepadan dengan kehidupan yang semakin mobil. Kunjungilah <a href='http://www.youversion.com/download'>youversion.com/download</a> dari peranti mobil anda untuk download App Injil dan bersambung ke akaun anda!"
+    no devices download copy: "App Injil adalah Alkitab mobil percuma yang berdasarkan Alkitab online, YouVersion, yang boleh dipasang kepada hampir sebarang peranti mobil. App Injil ini membolehkan pengguna membaca Alkitab, memberitakan ayat kepada jaringan sosial mereka, bookmark petikan kegemaran, dan selainnya&mdash; segalanya dalam format yang sepadan dengan kehidupan yang semakin mobil. Kunjungilah <a href='https://www.bible.com/app'>bible.com/app</a> dari peranti mobil anda untuk download App Injil dan bersambung ke akaun anda!"
     yes delete: "Ya, Hapuskan Akaun Saya"
     account delete success: "Akaun YouVersion anda sudah selesai dihapuskan. Kami harap anda terus berinteraksi dengan Alkitab. Anda mungkin mendapat bantuan dari beberapa app di sini: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Jika anda mneghapuskan akaun, informasi, sejarah, dan input peribadi (seperti nota, bookmark, highlight dan selainnya) dalam YouVersion dan App Injil akan kekal dihapuskan. Tindakan ini tidak boleh diterbalikkan oleh anda ataupun kami. Jika anda pasti, sila berterusan di bawah."
@@ -353,6 +448,16 @@ ms:
       general title: "Informasi Umum"
       general text: "Kesuluruhan Persetujuan. TERMA PENGGUNAAN ini merupakan keseluruhan persetujuan di antara anda dan LifeChurch.tv dan mengawal penggunaan YouVersion oleh anda, dan menggantikan sebarang persetujuan terdahulu di antara anda dan LifeChurch.tv berkenaan dengan YouVersion. Anda juga mungkin tertakluk kepada terma dan syarat tambahan.<br><br>Pilihan Undang-undang dan Forum. TERMA PENGGUNAAN dan perhubungan antara anda dan LifeChurch.tv dikawal oleh undang-undang Negeri Oklahoma tanpa mengambil kira konflik peruntukan undang-undang. Anda dan LifeChurch.tv bersetuju bertunduk kepada bidang kuasa peribadi dan eksklusif mahkamah yang dilokasi di dalam daerah Oklahoma County, Oklahoma.<br><br>Pengecualian dan Pemutusan Terma. Kegagalan LifeChurch.tv untuk menggunakan hak atau peruntukan dalam TERMA PENGGUNAAN ini tidak merupakan pengecualian hak atau peruntukan tersebut. Sekiranya sebarang peruntukan dalam TERMA PENGGUNAAN ini didapati tidak sah oleh mahkamah yang berbidang kuasa kompeten, pihak-pihak namun bersetuju bahawa mahkamah akan berusaha memberi kesan kepada niat pihak-pihak seperti dicerminkan dalam peruntukan tersebut, dan peruntukan lain dalam TERMA PENGGUNAAN ini terus berkuatkuasa.<br><br>Tiada Hak Survivorship dan Tiada Pindahmilikan. Anda bersetuju bahawa akaun LifeChurch.tv anda tidak boleh dipindah milik, dan segala hak terhadap ID LifeChurch.tv anda atau kandungan akaun anda tamat ketika anda meninggal dunia. Selepas menerima salinan sijil kematian, LifeChurch.tv boleh memberhentikan akaun anda dan menghapuskan secara kekal segala kandungannya.<br><br>Statut Batasan. Anda memahami dan bersetuju bahawa tidak kira sebarang statut atau undang-undang yang bertentangan, sebarang tuntutan atau kausa tindakan yang berbangkit dari atau berkaitan dengan penggunaan YouVersion atau TERMA PENGGUNAAN ini mesti difail dalam masa satu (1) tahun selepas tuntutan atau kausa tindakan demikian berlaku atau dihalang selama-lamanya.<br><br>Tajuk seksyen dalam TERMA PENGGUNAAN ini adalah untuk kemudahan sahaja dan tidak mempunyai kesan perundangan atau kontraktual."
     profile:
+      blank slate:
+        heading: "Site ini belum tersedia"
+        description: "Laman ini menunjukkan sejarah penglibatan anda bersama sahabat, ataupun pembacaan Alkitab anda."
+      visit friend: "Kunjungilah profil %{sahabat}"
+      tab activity: "Aktiviti"
+      tab friends: "Sahabat"
+      tab notes: "Nota"
+      tab bookmarks: "Bookmark"
+      tab highlights: "Highlight"
+      tab badges: "Lencana"
       first name: "Nama Pertama"
       last name: "Nama Keluarga"
       email: "Alamat E-mel"
@@ -392,6 +497,9 @@ ms:
       reading_plans: "Beritahu saya bila ada maklumat baru tentang pelan bacaan saya."
       publishing partners: "Beritahu saya berita terbaru dari rakan kongsi kandungan YouVersion."
       update: "Update Notifikasi"
+      friendships: "Beritahu saya tentang permintaan kesahabatan"
+      moments: "Beritahu saya tentang aktiviti sahabat"
+      comments: "Beritahu saya tentang komen terhadap aktiviti saya"
   bookmarks:
     new: "Bookmark Baru"
     edit: "Mengedit"
@@ -405,9 +513,10 @@ ms:
     not found: "Bookmark membenarkan anda merujuk pantas ke petikan kegemaran ataupun bab terakhir yang dibaca dalam kitab. Untuk menambah bookmark, pilihilah suatu ayat dalam pembaca Alkitab dan klik butang Terpilih di bahagian atas pembaca."
     other user not found: "%{username} belum menyelamatkan sebarang bookmark."
     creation form errors: "Kesilapan berikut menghalang penciptaan bookmark:"
-    successfully created: "Bookmark Tertambah"
-    successfully deleted: "Bookmark Dibatalkan"
-    successfully updated: "Bookmark Sudah Diupdate"
+    create success: "Bookmark sudah diselamatkan."
+    destroy success: "Bookmark dibatalkan"
+    destroy failure: "Terjadi kesilapan semasa membatalkan bookmark"
+    update success: "Bookmark sudah diupdate"
     labels placeholder: "Gunakan koma untuk mengasingkan pelbagai label."
     save: "Selamatkan Bookmark"
     confirm delete: "Ya, saya pasti"
@@ -418,9 +527,23 @@ ms:
     update: "Update"
     color: "Warna:"
     version field: "Versi:"
+    none user: "%{nama pengguna} tiada bookmark"
+    blank slate:
+      heading: "Bookmark ayat-ayat yang bermakna"
+      description: "Semasa membaca Alkitab, pilih sesuatu ayat dan tandai dengan bookmark. Kembali ke sini untuk membaca, mengedit, atau membatalkan bookmark anda."
+    form:
+      title field: "Tajuk:"
+      reference field: "Rujukan:"
+      labels field: "Label (dipisahkan oleh koma):"
+      colors field: "Warna:"
+      update button: "Update Bookmark"
+      save button: "Selamatkan Bookmark"
   badges:
     earned a badge: "Terperolehi Lencana"
     user badges: "Lencana %{user}"
+    earned date: "Diperolehi oleh %{username} %{ago} dahulu."
+    none me: "Anda belum memperolehi sebarang lencana."
+    none user: "%{username} belum memperolehi sebarang lencana."
   plans:
     title: "Pelan Bacaan"
     browse by category: "Browse secara Kategori"
@@ -565,7 +688,15 @@ ms:
     chapter only: "Maaf, audio tidak tersedia untuk ayat-ayat. Audio bab boleh dikunjungi di pembaca."
     close player menu: "Tutup"
   highlights:
+    blank slate:
+      heading: "Highlight ayat-ayat yang bererti"
+      description: "Semasa membaca Alkitab, pilih sesuatu ayat dan highlight. Kembali ke sini untuk membaca, mengedit, atau membatalkan highlight."
+    none user: "%{nama pengguna} tiada highlight"
     choose color: "Pilih Warna"
+    create success: "Highlight sudah diselamatkan"
+    create failure: "Terjadi kesilapan semasa menyelamatkan highlight"
+    destroy success: "Highlight dibatalkan"
+    destroy failure: "Terjadi kesilapan semasa membatalkan highlight"
     creation error: "Maaf, tidak dapat highlight."
     delete error: "Maaf, highlight tidak dapat dibatalkan."
   searching:
