--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -32,7 +32,12 @@ pt-PT:
     users username not available: "O nome de utilizador que forneceu não está disponível."
     users username or password invalid: "Forneceu um utilizador ou palavra-passe inválidos."
     users username required: "Deverá inserir um nome de utilizador."
+    users first name required: "Deverá inserir o seu nome."
+    users last name required: "Deverá inserir o seu sobrenome."
   meta:
+    kids_app:
+      title: "A App da Bíblia para crianças"
+      description: "..."
     100million:
       title: "Tem Início nos 100 Milhões"
       description: "A App da Bíblia já foi instalada quase 100 milhões de vezes - um marco incrível! Mas estamos apenas a começar. Descarregue a App da Bíblia grátis - e depois partilhe-a com os seus amigos. Vamos fazer história juntos."
@@ -42,10 +47,12 @@ pt-PT:
     connections:
       index:
         title: "Contas Associadas"
+  ui:
+    loading indicator text: "A Carregar..."
   now: "Agora"
   celebrating 50MM: "A celebrar 50 milhões de instalações da App!"
   link: "Link"
-  site search: "Procura no YouVersion"
+  site search: "Pesquisa no YouVersion"
   auth error: "Desculpe, houve um problema com o seu nome de utilizador ou palavra-passe. Por favor autentique-se no YouVersion para continuar."
   download: "Transferir"
   visit link: "Visitar o Link"
@@ -129,7 +136,6 @@ pt-PT:
   chapter: "Capítulo"
   bible: "Bíblia"
   notes title: "Notas"
-  friends: "Amigos"
   groups: "Grupos"
   mobile: "Telemóvel"
   live: "Ao Vivo/Grupos"
@@ -150,7 +156,91 @@ pt-PT:
   or:
     lower: "ou"
     upper: "OU"
+  moments:
+    vod:
+      title: "Versículo do Dia"
+    friendship:
+      now friends: "Você é agora amigo/a de"
+    cta:
+      profile update text: "Ajude os seus amigos a encontrá-lo/a."
+      profile update button: "Atualize o seu perfil"
+      sharing text: "Partilhe versículos nas redes sociais"
+      sharing button: "Permitir partilha"
+      friends text: "Veja os momentos na Bíblia dos seus amigos."
+      friends button: "Encontre amigos"
+    action:
+      go to scripture: "Ir para as Escrituras"
+      load more: "Carregar mais"
+      like: "Gosto"
+      like title: "Gostar disto"
+      share: "Partilhar"
+      share title: "Partilhe com a família ou amigos "
+      comment: "Comentar"
+      comment title: "Ver todos os comentários"
+      edit: "Editar"
+      edit highlight title: "Editar este destaque"
+      edit bookmark title: "Editar este marcador"
+      edit note title: "Editar esta nota"
+      delete: "Apagar"
+      delete confirm: "Tem a certeza?"
+      delete highlight title: "Apagar este destaque"
+      delete bookmark title: "Apagar este marcador"
+      delete note title: "Apagar esta nota"
+  notifications:
+    title: "Notificações"
+    none: "Ainda não tem nenhuma notificação"
+    no new: "Sem novas notificações"
+    view all: "Ver todas as Notificações"
+  comments:
+    post comment: "Adicionar comentário"
+    create success: "Comentário publicado"
+    create failure: "O comentário não pôde ser publicado"
+    form:
+      save button: "Enviar"
+  friends:
+    you have N friends: "Você tem %{count} amigos(as)"
+    none me: "Partilhe os seus momentos na Bíblia tais como os marcadores, os destaques e notas com os seus amigos mais próximos e a sua família."
+    blank slate:
+      heading: "Atualmente não são amigos"
+      description: "Tem que ser amigo desta pessoa para poder ver os seus amigos."
+    limit notice: "Podes ter no máximo 150 amizades"
+    limit description: "Limitar as suas amizades na App da Bíblia às pessoas que conhece bem cria um ambiente para conversas honestas e partilha de descobertas com amigos de confiança."
+  friendships:
+    offer success: "Pedidos de amizade enviados"
+    offer failure: "Ocorreu um erro ao enviar o pedido de amizade"
+    create success: "Vocês são agora amigos"
+    create failure: "Ocorreu um erro ao criar amizade"
+    destroy success: "Pedido recusado"
+    destroy failure: "Erro ao recusar pedido"
+    requests title: "Pedidos de amizade"
+    requests view all: "Ver todos os pedidos de amizade"
+    requests none: "Não tem nenhum pedido de amizade"
+    requests no new: "Sem novos pedidos"
+    status:
+      pending: "Solicitação pendente"
+      friends: "Amigos"
+    user wants friendship: "%{user} deseja ser seu amigo"
+    user wants friendship partial: "deseja ser seu amigo"
+    form:
+      remove friend button: "Eliminar amizade"
+      remove friend button title: "Eliminar esta pessoa da sua lista de amizades"
+      add friend button: "Adicionar amigo"
+      add friend button title: "Enviar a %{user} o pedido de amizade"
+      accept button: "Aceitar"
+      accept request button: "Aceitar solicitação"
+      ignore button: "Ignorar"
+      ignore request button: "Ignorar o pedido"
   notes:
+    none user: "%{username} ainda não tem notas criadas."
+    blank slate:
+      heading: "Ainda não tem nenhuma nota"
+      description: "À medida que lê a Bíblia, quando sentir a voz meiga e gentil de Deus a falar consigo pode anotar rapidamente esses pensamentos aqui. As suas notas, por predefinição ficarão marcadas como <em>privadas</em> . Se quiser partilhar uma nota com os seus amigos, simplesmente abra-a e altere-a para <em>pública</em>."
+    form:
+      title field: "Título:"
+      content field: "Conteúdo:"
+      reference field: "Referência(s):"
+      status field: "Estado:"
+      save button: "Guardar"
     list title: "Notas"
     loading community: "A carregar as notas da comunidade..."
     no community notes: "Não existem notas da comunidade referentes aos versículos selecionados. Para criar uma nota, escolha um versículo no leitor da Bíblia e depois clique no botão Selecionado no topo do leitor."
@@ -178,7 +268,10 @@ pt-PT:
     cancel: "Cancelar"
     pop out: "Saltar fora"
     none found: "Nenhuma nota encontrada..."
-    successfully deleted: "Nota Removida"
+    create success: "Nota guardada"
+    create failure: "Erro ao gravar a nota"
+    destroy success: "Nota elminada"
+    destroy failure: "Erro ao apagar nota"
   ref:
     loading secondary: "A Carregar a Referência na Versão Secundária..."
     clear verses: "Limpar Versículos Selecionados"
@@ -209,6 +302,8 @@ pt-PT:
     profile form errors: "O(s) seguinte(s) erro(s) impede(m) a actualização do seu perfil:"
     email address: "Endereço de email"
     user name: "Utilizador"
+    first name: "Nome"
+    last name: "Sobrenome"
     agreement: "Eu concordo com os %{terms_link} do YouVersion ."
     terms and conditions: "termos e condições"
     facebook sign up success: "Fantástico! Autorizou com o Facebook. Escolha um nome de utilizador YouVersion e palavra-passe para continuar."
@@ -238,7 +333,7 @@ pt-PT:
     edit account_existence: "Apagar Conta"
     delete account button: "Apagar a Minha Conta YouVersion"
     no devices: "Não tem dispositivos associados à sua Conta YouVersion"
-    no devices download copy: "Baseada na Bíblia online, YouVersion.com, a App da Bíblia é uma Bíblia online gratuita que pode ser instalada em praticamente todos os smartphones. A App da Bíblia permite aos utilizadores lerem a Bíblia, partilhar versículos nas suas redes sociais, marcar as suas passagens favoritas e mais&mdash;tudo num formato que acompanha um estilo de vida cada vez mais móvel. Visite <a href='https://www.bible.com/download'>youversion.com/download</a> a partir dos seu dispositivo móvel para descarregar a App da Bíblia e associar à sua conta!"
+    no devices download copy: "Baseada na Bíblia online, YouVersion.com, a App da Bíblia é uma Bíblia online gratuita que pode ser instalada em praticamente todos os smartphones. A App da Bíblia permite aos utilizadores lerem a Bíblia, partilhar versículos nas suas redes sociais, marcar as suas passagens favoritas e mais&mdash;tudo num formato que acompanha um estilo de vida cada vez mais móvel. Visite <a href='https://www.bible.com/app'>bible.com/app</a> a partir do seu dispositivo móvel para descarregar a App da Bíblia e associar à sua conta!"
     yes delete: "Sim, Apagar a Minha Conta"
     account delete success: "A sua conta YouVersion foi apagada com sucesso. Esperamos que continue a encontrar formas significativas de interação com a Bíblia. Algumas destas apps podem ajudar no seu progresso: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Se apagar a sua conta, irá apagar de forma permanente toda a sua informação, história e personalização (como notas, marcadores, destaques, etc) no YouVersion.com e na App da Bíblia. Esta ação não pode ser revertida por si ou pela nossa equipe. Se tem a certeza que deseja continuar, prossiga abaixo."
@@ -353,6 +448,16 @@ pt-PT:
       general title: "do not translate"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Siga em frente, não há nada para ver aqui (por agora)"
+        description: "Comece a envolver-se com a Bíblia e a interagir com os seus amigos e esta página mostrará esse histórico."
+      visit friend: "Visite o perfil de %{friend}"
+      tab activity: "Atividade"
+      tab friends: "Amigos"
+      tab notes: "Notas"
+      tab bookmarks: "Marcadores"
+      tab highlights: "Destaques"
+      tab badges: "Medalhas"
       first name: "Nome"
       last name: "Apelido"
       email: "Endereço de Email"
@@ -392,6 +497,9 @@ pt-PT:
       reading_plans: "Notificar-me com informação de planos de leitura que comecei."
       publishing partners: "Atualizem-me com notícias dos parceiros de conteúdo YouVersion."
       update: "Atualizar Notificações"
+      friendships: "Notifiquem-me sobre pedidos de amizade"
+      moments: "Notifiquem-me sobre atividades de amigos"
+      comments: "Notifiquem-me sobre comentários à minha atividade"
   bookmarks:
     new: "Novo Marcador"
     edit: "Editar"
@@ -405,9 +513,10 @@ pt-PT:
     not found: "Marcadores dão-lhe um guia de referência rápido para as suas passagens favoritas ou para o último capítulo lido num dos livros da Bíblia. Para adicionar um marcador, selecione um versículo no leitor da Bíblia e depois clique o botão Selecionado no topo do leitor."
     other user not found: "%{username} ainda não guardou nenhum marcador."
     creation form errors: "O(s) seguinte(s) erro(s) não permite(m) a criação do seu marcador:"
-    successfully created: "Marcador Adicionado"
-    successfully deleted: "Marcador Removido"
-    successfully updated: "Marcador Atualizado"
+    create success: "Marcador guardado"
+    destroy success: "Marcador removido"
+    destroy failure: "Erro ao remover marcador"
+    update success: "Marcador atualizado"
     labels placeholder: "Separe as etiquetas com vírgulas."
     save: "Guardar Marcador"
     confirm delete: "Sim, tenho a certeza"
@@ -418,9 +527,23 @@ pt-PT:
     update: "Atualizar"
     color: "Cor:"
     version field: "Versão:"
+    none user: "%{username} não tem marcadores"
+    blank slate:
+      heading: "Marque versículos com significado"
+      description: "Enquanto lê a Bíblia, selecione um versículo e crie um marcador. Volte aqui para ver, editar, ou apagar o seu marcador."
+    form:
+      title field: "Título:"
+      reference field: "Referência: "
+      labels field: "Etiquetas (separadas por vírgula):"
+      colors field: "Cor:"
+      update button: "Atualizar Marcador"
+      save button: "Guardar Marcador"
   badges:
     earned a badge: "Ganhou uma Medalha"
     user badges: "Medalhas de %{user}"
+    earned date: "Ganha por %{username} há %{ago}"
+    none me: "Ainda não ganhou nenhuma medalha."
+    none user: "%{username} ainda não ganhou qualquer medalha."
   plans:
     title: "Planos de Leitura"
     browse by category: "Navegar por Categoria"
@@ -565,7 +688,15 @@ pt-PT:
     chapter only: "Desculpe, não está disponível áudio para os versículos. Verifique no leitor a opção áudio do capítulo."
     close player menu: "Fechar"
   highlights:
+    blank slate:
+      heading: "Destaque versículos com significado"
+      description: "Enquanto lê a Bíblia, selecione um versículo e crie um destaque. Volte aqui para ver, editar, ou apagar o seu destaque."
+    none user: "%{username} não tem destaques"
     choose color: "Escolha a Cor"
+    create success: "Destaque gravado"
+    create failure: "Erro ao guardar destaque"
+    destroy success: "Destaque apagado"
+    destroy failure: "Erro ao apagar destaque"
     creation error: "Desculpe, não foi possível destacar."
     delete error: "Desculpe, não foi possível remover o destaque."
   searching:
