--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -32,7 +32,12 @@ ro:
     users username not available: "Numele de utilizator introdus nu este disponibil."
     users username or password invalid: "Numele de utilizator sau parola nu sunt furnizate corect."
     users username required: "Trebuie să introduci un nume de utilizator."
+    users first name required: "Trebuie să introduci un prenume."
+    users last name required: "Trebuie să introduci un nume."
   meta:
+    kids_app:
+      title: "Aplicația Biblia pentru copii"
+      description: "..."
     100million:
       title: "Începe cu 100 de milioane"
       description: "Aplicația Biblia a fost instalată de aproape 100 milioane de ori - un adevărat moment de referință! Dar acesta e doar începutul. Descarcă azi Aplicația Biblia gratuită și apoi împărtășește-o cu prietenii. Să facem istorie împreună."
@@ -42,6 +47,8 @@ ro:
     connections:
       index:
         title: "Conturi conectate"
+  ui:
+    loading indicator text: "Se încarcă ..."
   now: "Acum"
   celebrating 50MM: "Sărbătorind 50 de milioane de instalări ale aplicației!"
   link: "Legătură"
@@ -129,7 +136,6 @@ ro:
   chapter: "Capitolul"
   bible: "Biblia"
   notes title: "Notițe"
-  friends: "Prieteni"
   groups: "Grupuri"
   mobile: "Mobil"
   live: "Live/Grupuri"
@@ -150,10 +156,94 @@ ro:
   or:
     lower: "sau"
     upper: "SAU"
+  moments:
+    vod:
+      title: "Versetul zilei"
+    friendship:
+      now friends: "Acum ești prieten cu "
+    cta:
+      profile update text: "Ajută-ți prietenii să te găsească"
+      profile update button: "Actualizează-ți profilul"
+      sharing text: "Împărtășește versete prin rețele sociale."
+      sharing button: "Activează partajarea"
+      friends text: "Vezi activitatea din Biblie a prietenilor tăi. "
+      friends button: "Găsește prieteni"
+    action:
+      go to scripture: "Du-te la scriptură"
+      load more: "Încarcă mai mult"
+      like: "Apreciez"
+      like title: "Apreciază"
+      share: "Partajează"
+      share title: "Împărtășește cu prietenii ori familia"
+      comment: "Comentariu"
+      comment title: "Vizualizează toate comentariile"
+      edit: "Editează"
+      edit highlight title: "Editează această evidențiere"
+      edit bookmark title: "Editează acest marcaj"
+      edit note title: "Editeză această notiță"
+      delete: "Șterge"
+      delete confirm: "Sigur?"
+      delete highlight title: "Șterge această evidențiere"
+      delete bookmark title: "Șterge acest marcaj"
+      delete note title: "Șterge această notiță"
+  notifications:
+    title: "Notificări"
+    none: "Nu ai notificări"
+    no new: "Nici o notificare nouă."
+    view all: "Vizualizează toate notificările"
+  comments:
+    post comment: "Postează un comentariu"
+    create success: "Comentariu postat"
+    create failure: "Comentariul nu a putut fi postat"
+    form:
+      save button: "Postează"
+  friends:
+    you have N friends: "Ai %{count} prieteni."
+    none me: "Împărtășește activitatea ta în Biblie precum semne de carte, evidențieri sau notițe, cu prietenii apropiați și cu familia ta."
+    blank slate:
+      heading: "Momentan nu sunteți prieteni"
+      description: "Trebuie să fii prieten cu această persoană pentru a-i vedea prietenii."
+    limit notice: "Poți avea până la 150 de prieteni"
+    limit description: "Limitarea prietenilor din Aplicația Biblia la persoane care le cunoști bine, creează un mediu favorabil pentru discuții sincere și împărtășirea lucrurilor descoperite cu prieteni de încredere."
+  friendships:
+    offer success: "Cerere de prietenie trimisă"
+    offer failure: "S-a produs o eroare la trimiterea cererii de prietenie"
+    create success: "Acum sunteți prieteni"
+    create failure: "S-a produs o eroare la crearea prieteniei"
+    destroy success: "Cerere refuzată"
+    destroy failure: "S-a produs o eroare la refuzarea prieteniei"
+    requests title: "Cereri de prietenie"
+    requests view all: "Vizualizează toate cererile de prietenie"
+    requests none: "Nu ai cereri de prietenie"
+    requests no new: "Nici o cerere nouă."
+    status:
+      pending: "Cererea este în așteptare"
+      friends: "Prieteni"
+    user wants friendship: "%{user} vrea să îți fie prieten"
+    user wants friendship partial: "vrea să îți fie prieten"
+    form:
+      remove friend button: "Șterge prieten"
+      remove friend button title: "Șterge această persoană din lista ta de prieteni"
+      add friend button: "Adaugă prieten"
+      add friend button title: "Trimite lui %{user} o cerere de prietenie"
+      accept button: "Accept"
+      accept request button: "Acceptă cererea"
+      ignore button: "Ignoră"
+      ignore request button: "Ignoră cererea"
   notes:
+    none user: "%{username} nu are notițe încă"
+    blank slate:
+      heading: "Încă nu ai notițe"
+      description: "În timp ce citești Biblia, când auzi acel susur blând al vocii lui Dumnezeu vorbindu-ți, poți nota acele gânduri rapid aici. Notițele tale vor fi marcate implicit ca <em>private</em>. Dacă dorești să împărtășești o notiță cu prietenii tăi, dechide-o și schimbă-i starea în <em>publică</em>."
+    form:
+      title field: "Titlu:"
+      content field: "Conținut:"
+      reference field: "Referințe:"
+      status field: "Status:"
+      save button: "Salvează"
     list title: "Notițe"
     loading community: "Se încarcă notițele comunității..."
-    no community notes: "Nici o notiță a comunității cu privire la versete selectate nu a fost găsită. Pentru a crea o notiță, alege un verset în cititorul de Biblie, apoi fă click pe butonul Selectează aflat în partea de sus a cititorului."
+    no community notes: "Nu a fost găsită nicio notiță a comunității cu privire la versetele selectate. Pentru a crea o notiță, alege un verset în cititorul de Biblie, apoi fă click pe butonul Selectează aflat în partea de sus a cititorului."
     public: "Public"
     private: "Privat"
     is private: "Notița solicitată este privată."
@@ -178,7 +268,10 @@ ro:
     cancel: "Anulează"
     pop out: "Mărește"
     none found: "Nu au fost găsite notițe"
-    successfully deleted: "Notiță ștearsă"
+    create success: "Notiță salvată"
+    create failure: "Eroare la salvarea notiței"
+    destroy success: "Notița a fost ștearsă"
+    destroy failure: "S-a produs o eroare la ștergerea notiței"
   ref:
     loading secondary: "Se încarcă referinţa în versiunea secundară..."
     clear verses: "Șterge versetele selectate."
@@ -209,6 +302,8 @@ ro:
     profile form errors: "Următoarele erori au împiedicat actualizarea profilului tău:"
     email address: "Adresă e-mail"
     user name: "Nume de utilizator"
+    first name: "Prenumele"
+    last name: "Numele"
     agreement: "De acord cu %{terms_link} YouVersion"
     terms and conditions: "termenii și condițiile"
     facebook sign up success: "Minunat! Te-ai autentificat cu Facebook. Alege un nume de utilizator și o parolă de YouVersion pentru a continua."
@@ -238,7 +333,7 @@ ro:
     edit account_existence: "Ștergere cont"
     delete account button: "Șterge contul meu YouVersion"
     no devices: "Nu există nici un dispozitiv conectat cu contul tău YouVersion "
-    no devices download copy: "Bazată pe Biblia online, YouVersion.com, aplicația Biblia este o Biblie mobilă gratuită care poate fi instalată aproape pe orice dispozitiv mobil. Aplicația Biblia permite utilizatorilor să citească Biblia, să partajeze versete cu rețelele lor sociale, să își salveze pasajele favorite și multe altele&mdash;toate într-un format care este mereu la zi cu stilul de viață mobil. Intră pe <a href='http://www.youversion.com/download'>youversion.com/download</a> de pe dispozitivul tău mobil pentru a descărca Aplicația Biblia și a te conecta."
+    no devices download copy: "Având la bază Biblia online YouVersion, aplicația Biblia electronică este o Biblie mobilă gratuită care poate fi instalată pe majoritatea  dispozitivelor mobile. Aplicația Biblia permite utilizatorilor să citească Biblia, să împărtășească versete prin intermediul rețelelor sociale, să pună marcaje la pasajele preferate, și mai multe altele &mdash;totul într-un format care ține pasul cu stilul de viață din ce în ce mai dinamic al acestora. Vizitează <a href='https://www.bible.com/app'>bible.com/app</a> de pe dispozitivul tău mobil ca să descarci aplicația Biblia și să accesezi contul tău! "
     yes delete: "Da, șterge contul meu"
     account delete success: "Contul tău YouVersion a fost șters cu succes. Sperăm să găsești și în continuare moduri semnificative de a interacționa cu Biblia. Poate aceste aplicații te vor ajuta să avansezi: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Dacă îți ștergi contul, vei înlătura permanent toate datele tale, istoricul și personalizările (precum notițe, marcaje, evidențieri, etc.) din cadrul YouVersion.com și al Aplicației Biblia. Această acțiune nu poate fi revocată de tine sau de echipa noastră. Dacă ești sigur că vrei să continui, urmează procedura de mai jos."
@@ -311,7 +406,7 @@ ro:
       description title: "Descrierea serviciului"
       description text: "LifeChurch.tv asigură utilizatorilor acces gratuit la o varietate de servicii prin intermediul YouVersion, inclusiv dar nu limitat la, vizionare video prin internet, postări pe blog și discuții, comentarii, diverse alte mijloace de comunicare, forumuri și conținut personalizat. Folosind YouVersion, înțelegi că această utilizare poate include înștiințări din partea LifeChurch.tv, inclusiv dar nu limitat la, înștiințări de service, mesaje administrative și alte mesaje la care te-ai abonat personal. Înțelegi și ești de acord că ești responsabil pentru obținerea accesului la YouVersion, care poate implica taxe de echipament și terțe părți (precum taxe ale furnizorului de internet, taxe pentru timp de emisie sau alte taxe asociate afișării și livrării mesajelor)."
       registration title: "Obligațiile tale la înregistrare"
-      registration text: "Accepți și agreezi să:<ul><li>furnizezi informații adevărate, exacte, actuale și complete despre tine conform celor cerute de YouVersion în formularele de înregistrare („Date de înregistrare”) și </li>»<li>întreții și actualizezi la timp datele de înregistrare pentru a le menține adevărate, exacte, actuale și complete. Dacă LifeChurch.tv suspectează că aceste informații sunt neadevărate, inexacte, neactuale și incomplete, LifeChurch.tv are dreptul să suspende sau să-ți închidă contul și să-ți interzică cu desăvârșire utilizarea prezentă sau viitoare a YouVersion (sau a oricărei părți a acestuia). LifeChurch.tv se preocupă de siguranța și confidențialitatea tuturor utilizatorilor săi, în special a copiilor. De aceea, părinții copiilor cu vârsta sub 13 ani cărora le permit accesul la YouVersion trebuie să accepte că YouVersion este conceput pentru o audiență largă. În consecință, în calitate de tutore legal, ești responsabil să decizi dacă YouVersion este potrivit pentru copilul tău.</li></ul>"
+      registration text: "Accepți și agreezi:<ul><li>să furnizezi informații adevărate, exacte, actuale și complete despre tine conform celor cerute de YouVersion în formularele de înregistrare („Date de înregistrare”) și</li>↵<li>să întreții și actualizezi la timp datele de înregistrare pentru a le menține adevărate, exacte, actuale și complete. Dacă LifeChurch.tv suspectează că aceste informații sunt neadevărate, inexacte, neactuale și incomplete, LifeChurch.tv are dreptul să suspende sau să-ți închidă contul și să-ți interzică cu desăvârșire utilizarea prezentă sau viitoare a YouVersion (sau a oricărei părți a acestuia). LifeChurch.tv se preocupă de siguranța și confidențialitatea tuturor utilizatorilor săi, în special a copiilor. De aceea, părinții copiilor cu vârsta sub 13 ani cărora le permit accesul la YouVersion trebuie să accepte că YouVersion este conceput pentru o audiență largă. În consecință, în calitate de tutore legal, ești responsabil să decizi dacă YouVersion este potrivit pentru copilul tău.</li></ul>"
       privacy title: "Politica de confidențialitate YouVersion"
       privacy text: "Datele de înregistrare și alte informații despre tine sunt supuse politicii noastre de confidențialitate, aflată aici: <a href='http://youversion.com/privacy'>http://youversion.com/privacy</a>. Înțelegi că utilizând YouVersion îți dai acordul în privința colectării și utilizării (conform cu politica de confidențialitate) acestor date, inclusiv transferul acestora în Statele Unite și/sau alte țări, pentru stocare, procesare și utilizare de către <a href='http://LifeChurch.tv'>Lifechurch.tv</a>."
       account title: "Cont de membru, parolă și securitate."
@@ -353,6 +448,16 @@ ro:
       general title: "Informații generale"
       general text: "Acordul în întregime. Acești TERMENI DE UTILIZARE alcătuiesc întregul acord între tine și LifeChurch.tv și reglementează utilizarea YouVersion, înlocuind orice acorduri anterioare dintre tine și LifeChurch.tv cu privire la YouVersion. Poți fi supus la termeni și condiții adiționale.<br><br>Alegerea jurisdicției și tribunalului. TERMENII DE UTILIZARE și relația dintre tine și LifeChurch.tv sunt reglementate de legile statului Oklahoma. Tu și LifeChurch.tv agreați să vă supuneți jurisdicției exclusive și personale ale tribunalelor localizate în districtul Oklahoma County, Oklahoma.<br><br>Derogare și separabilitate a termenilor. Eșecul LifeChurch.tv de a exercita sau constrânge orice drept sau prevederi ale acestor TERMENI DE UTILIZARE nu constituie o derogare de la acestea. Dacă oricare din prevederile acestor TERMENI DE UTILIZARE sunt considerate neîntemeiate de către vreun tribunal din jurisdicția avizată, părțile sunt oricum de acord că tribunalul va căuta să dea curs intențiilor părților care sunt reflectate în prevederi, iar celelalte prevederi ale acestor TERMENI DE UTILIZARE rămân în vigoare în totalitate.<br><br>Drepturi de moștenire și transferabilitate. Ești de acord că contul tău LifeChurch.tv este netransferabil și orice drepturi la ID-ul LifeChurch.tv sau conținuturi din cadrul contului încetează după decesul utilizatorului. După primirea unei copii a certificatului de deces, LifeChurch.tv poate închide contul și șterge permanent toate conținuturile aferente.<br><br>Legea privitoare la prescriere. Înțelegi că fără o reglementare sau lege în sens contrar, orice revendicare sau cauză de punere sub acuzare rezultând din, sau legată de utilizarea de către tine a YouVersion sau din TERMENII DE UTILIZARE, trebuie înregistrată în interval de un an după ce asemenea revendicare sau punere sub acuzare a fost inițiată, altfel va fi prescrisă definitiv.<br><br>Titlurile secțiunilor din cadrul acestor TERMENI DE UTILIZARE au caracter convenabil și nu au efect legal sau contractual."
     profile:
+      blank slate:
+        heading: "Mergi mai departe, nu este nimic de văzut aici (încă)"
+        description: "Începe să citești Biblia sau să comunici cu prietenii tăi. Pagina aceasta afișeasză istoricul activităților tale. "
+      visit friend: "Vizitează profilul lui %{friend}"
+      tab activity: "Activitate"
+      tab friends: "Prieteni"
+      tab notes: "Notițe"
+      tab bookmarks: "Marcaje"
+      tab highlights: "Evidențieri"
+      tab badges: "Insigne"
       first name: "Prenume"
       last name: "Nume de familie"
       email: "Adresă e-mail"
@@ -392,6 +497,9 @@ ro:
       reading_plans: "Înștiințează-mă despre informații pentru planurile de citire pe care le-am început."
       publishing partners: "Ține-mă la curent cu noutățile partenerilor YouVersion."
       update: "Actualizează notificările"
+      friendships: "Anunță-mă despre cererile de prietenie"
+      moments: "Anunță-mă despre activitatea prietenilor"
+      comments: "Anunță-mă despre comentarii asupra activității mele"
   bookmarks:
     new: "Marcaj nou"
     edit: "Modifică"
@@ -405,9 +513,10 @@ ro:
     not found: "Marcajele sunt un bun îndrumător către pasajele tale favorite sau către ultimul capitol pe care l-ai citit dintr-o carte. Pentru a adăuga un marcaj, selectează versetul și apoi apasă butonul de adăugare marcaj."
     other user not found: "%{username} nu a salvat încă niciun marcaj."
     creation form errors: "Următoarele erori au împiedicat crearea unui marcaj:"
-    successfully created: "Marcaj adăugat"
-    successfully deleted: "Marcaj șters"
-    successfully updated: "Marcaj actualizat"
+    create success: "Marcaj salvat"
+    destroy success: "Marcaj șters"
+    destroy failure: "S-a produs o eroare la ștergerea marcajului"
+    update success: "Marcaj actualizat"
     labels placeholder: "Separă etichetele între ele cu virgule."
     save: "Salvează marcaj"
     confirm delete: "Sunt sigur"
@@ -418,16 +527,30 @@ ro:
     update: "Actualizare"
     color: "Culoare:"
     version field: "Versiune:"
+    none user: "%{username} nu are marcaje"
+    blank slate:
+      heading: "Marchează versetele semnificative"
+      description: "În timpul citirii Bibliei, selectează un verset și marchează-l. Întoarce-te aici pentru a vizualiza, pentru a edita sau pentru a șterge marcajele."
+    form:
+      title field: "Titlu:"
+      reference field: "Referință:"
+      labels field: "Etichete (separate de virgulă):"
+      colors field: "Culoare:"
+      update button: "Actualizează marcaj"
+      save button: "Salvează marcaj"
   badges:
     earned a badge: "Am câștigat o insignă"
     user badges: "Insignele lui %{user}"
+    earned date: "Primită de către %{username} cu %{ago} în urmă"
+    none me: "Încă nu ai primit nici o insignă."
+    none user: "%{username} nu a primit nici o insignă încă."
   plans:
     title: "Planuri de citire"
     browse by category: "Răsfoiește după categorie"
-    browse plans: "Răsfoiește toate %{category}"
+    browse plans: "Răfoieşte planurile din %{category}"
     swap list localization: "(<a href='%{swap_link}'>Vezi în %{swap_locale}</a>)"
     showing language filtered: "Se afișează doar planurile disponibile în %{lang_name}"
-    all: "planurile"
+    all: "în toate"
     all plans: "Toate planurile"
     all category plans: "Toate planurile din %{category}"
     my plans: "Planurile mele"
@@ -454,7 +577,7 @@ ro:
     plan settings: "Setările Planului"
     settings: "Setări"
     search: "Caută"
-    search placeholder: "Caută planurile din %{category}"
+    search placeholder: "Caută %{category}"
     subscribe to plan: "Începe acest plan"
     previous day: "Ziua anterioară"
     next day: "Ziua următoare"
@@ -565,7 +688,15 @@ ro:
     chapter only: "Ne pare rău, nu există material audio pentru versete. Accesează partea audio pentru întregul capitol în cititor."
     close player menu: "Închide"
   highlights:
+    blank slate:
+      heading: "Evidențiază versetele semnificative"
+      description: "În timpul citirii Bibliei, selectează un verset și evidențiază-l. Revino aici pentru a vizualiza, pentru a edita sau pentru a șterge evidențierile."
+    none user: "%{username} nu are evidențieri"
     choose color: "Alege culoare"
+    create success: "Evidențiere salvată"
+    create failure: "S-a produs o eroare la salvarea evidențierii"
+    destroy success: "Evidențiere ștearsă"
+    destroy failure: "S-a produs o eroare la ștergerea evidențierii"
     creation error: "Ne pare rău, nu se poate evidenția."
     delete error: "Ne pare rău, evidențierea nu poate fi eliminată."
   searching:
