--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -32,7 +32,12 @@ uk:
     users username not available: "Вказане Вами Ім'я користувача (логін) не доступне."
     users username or password invalid: "Ім'я користувача або пароль написані Вами є хибними."
     users username required: "Вам необхідно ввести своє ім'я користувача."
+    users first name required: "Вам необхідно ввести своє ім'я."
+    users last name required: "Вам необхідно ввести своє прізвище."
   meta:
+    kids_app:
+      title: "Програма Біблія для діточок"
+      description: "..."
     100million:
       title: "Розпочато з 100 мільйонів"
       description: "Програму Біблія вже встановлено майже 100 мільйонів разів - Неймовірне досягнення! Але ми тільки починаємо. Завантажте безкоштовну програму Біблія сьогодні, - і потім поділитися нею з друзями. Давайте творити історію разом."
@@ -42,6 +47,8 @@ uk:
     connections:
       index:
         title: "Приєднані профілі"
+  ui:
+    loading indicator text: "Завантажується..."
   now: "Зараз"
   celebrating 50MM: "Святкуємо 50 мільйонів встановлень!"
   link: "Посилання"
@@ -76,7 +83,7 @@ uk:
   badges title: "Значки"
   currently selected: "Поточний вибір:"
   read reference: "Прочитайте %{reference}"
-  compare all versions: "Порівняйте Всі Версії"
+  compare all versions: "Порівняйте Усі Версії"
   link will be added: "Буде Додано"
   my picture: "Оновити Моє Фото"
   my notifications: "Робочі сповіщення"
@@ -129,7 +136,6 @@ uk:
   chapter: "Розділ"
   bible: "Біблія"
   notes title: "Нотатки"
-  friends: "Друзі"
   groups: "Групи"
   mobile: "Мобільний"
   live: "Наживо/групи"
@@ -138,8 +144,8 @@ uk:
   next page: "Наступна сторінка"
   previous page: "Попередня сторінка"
   invalid username or password: "Хибні ім'я корисувача або пароль."
-  show all bookmarks: "Переглянути всі %{total} закладки"
-  show all notes: "Переглянути всі %{total} нотатки"
+  show all bookmarks: "Переглянути усі %{total} закладки"
+  show all notes: "Переглянути усі %{total} нотатки"
   recent bookmarks: "Останні Закладки"
   percentage display: "%{number}%"
   myself: "Я"
@@ -150,7 +156,91 @@ uk:
   or:
     lower: "або"
     upper: "АБО"
+  moments:
+    vod:
+      title: "Вірш дня"
+    friendship:
+      now friends: "Ви вже дружите з"
+    cta:
+      profile update text: "Допоможіть вашим друзям знайти вас."
+      profile update button: "Оновити ваш профіль"
+      sharing text: "Поширити вірші через соціальні мережі"
+      sharing button: "Увімкнути поширення"
+      friends text: "Подивіться віхи пізнання ваших друзів у Біблії."
+      friends button: "Знайти друзів"
+    action:
+      go to scripture: "Перейти до Письма"
+      load more: "Завантажити ще"
+      like: "Подобається"
+      like title: "На кшталт цього"
+      share: "Поділитись"
+      share title: "Поділитися цим з друзями або сім'єю"
+      comment: "Коментар"
+      comment title: "Подивитися усі коментарі"
+      edit: "Редагувати "
+      edit highlight title: "Редагувати цю підсвітку"
+      edit bookmark title: "Редагувати цю закладку"
+      edit note title: "Редагувати цю нотатку"
+      delete: "Видалити"
+      delete confirm: "Справді?"
+      delete highlight title: "Видалити цю підсвітку"
+      delete bookmark title: "Видалити цю закладку"
+      delete note title: "Видалити цю нотатку"
+  notifications:
+    title: "Сповіщення"
+    none: "У вас немає сповіщень"
+    no new: "Немає нових сповіщень"
+    view all: "Переглянути усі сповіщення"
+  comments:
+    post comment: "Опублікувати коментар"
+    create success: "Коментар опубліковано"
+    create failure: "Неможливо опублікувати коментар"
+    form:
+      save button: "Допис"
+  friends:
+    you have N friends: "У вас %{count} друзів"
+    none me: "Поширюйте віхи вашого пізнання Біблії на кшталт закладок, виділень та нотаток серед найближчих друзів та сім'ї…"
+    blank slate:
+      heading: "Наразі немає друзів"
+      description: "Ви мусите бути друзями з цією людиною, аби переглянути її друзів."
+    limit notice: "Ви можете мати щонайбільше 150 друзів"
+    limit description: "У програмі Біблія наявні обмеження  дружби з людьми, яких ви добре знаєте, створює умови для чесних розмов і спільного вивчення з близькими друзями."
+  friendships:
+    offer success: "Надіслано запит дружби"
+    offer failure: "Помилка надсилання запиту дружби"
+    create success: "Ви вже друзі"
+    create failure: "Помилка створення дружби"
+    destroy success: "Запит відхилено"
+    destroy failure: "Помилка відхилення запиту"
+    requests title: "Запити на дружбу"
+    requests view all: "Переглянути усі запити дружби"
+    requests none: "У вас немає жодних запитів дружби"
+    requests no new: "Немає нових запитів"
+    status:
+      pending: "Очікування запиту"
+      friends: "Друзі"
+    user wants friendship: "%{user} хоче бути вашим другом"
+    user wants friendship partial: "хоче бути вашим другом"
+    form:
+      remove friend button: "Вилучити друга"
+      remove friend button title: "Вилучити цю особу із вашого списку друзів"
+      add friend button: "Додати друга"
+      add friend button title: "Надіслати %{user} запит дружби"
+      accept button: "Прийняти"
+      accept request button: "Прийняти запит"
+      ignore button: "Нехтувати"
+      ignore request button: "Ігнорувати запит"
   notes:
+    none user: "%{username} ще не зробив жодних нотаток."
+    blank slate:
+      heading: "У вас ще немає жодної нотатки"
+      description: "Якщо під час читання Біблії Ви відчуєте серцем тихий та спокійний голос Бога, Ви можете невідкладно записати свої думки прямо тут. Ваші нотатки будуть позначені типово як <em>приватні</em>, але якщо Ви захочете їх розділити з друзями, просто відкрийте їх та змініть на <em>загальнодоступні</em>."
+    form:
+      title field: "Назва:"
+      content field: "Зміст:"
+      reference field: "Посилання:"
+      status field: "Стан:"
+      save button: "Зберегти"
     list title: "Нотатки"
     loading community: "Завантажуються нотатки спільноти…"
     no community notes: "До обраних віршів спільнота не написала ще жодної замітки. Для створення замітки виберіть вірш у вікні читання Біблії, а потім натисніть кнопку \"Обране\" у верхній частині вікна читання."
@@ -166,7 +256,7 @@ uk:
     save: "Зберегти"
     select from list: "--Вибір--"
     edit note: "Редагувати нотатку"
-    all notes: "Всі нотатки"
+    all notes: "Усі нотатки"
     community notes: "Нотатки спільноти"
     new note: "Нова нотатка"
     status field: "Без статусу:"
@@ -178,7 +268,10 @@ uk:
     cancel: "Відмінити"
     pop out: "Підказки"
     none found: "Нотатки не знайдено"
-    successfully deleted: "Нотатку видалено"
+    create success: "Нотатку збережено"
+    create failure: "Помилка збереження нотатки"
+    destroy success: "Нотатку видалено"
+    destroy failure: "Помилка вилучення нотатки"
   ref:
     loading secondary: "Завантажуються посилання у другій версії…"
     clear verses: "Очистити Обрані Вірші"
@@ -209,6 +302,8 @@ uk:
     profile form errors: "Наступна помилка(и) унеможливили оновлення вашого профілю:"
     email address: "Адреса ел.пошти"
     user name: "Ім'я користувача"
+    first name: "Ім’я"
+    last name: "Прізвище"
     agreement: "Я погоджуюсь з %{terms_link} YouVersion."
     terms and conditions: "умовами використання та політикою конфіденційності"
     facebook sign up success: "Чудово! Ви авторизувалися через Facebook. Оберіть ім'я користувача і пароль для YouVersion і продовжуйте."
@@ -238,7 +333,7 @@ uk:
     edit account_existence: "Видалити обліковий запис"
     delete account button: "Видалити  мій обліковий запис YouVersion"
     no devices: "Жодний пристрій не з'єднаний з вашим профілем YouVersion Account"
-    no devices download copy: "Заснована на онлайн Біблії YouVersion.com, програма Біблія є безкоштовною мобільною Біблією, яка може бути встановлена ​​практично на будь-який телефон. Програма Біблія дозволяє користувачам читати Біблію, ділитися віршами через соціальні мережі, додавати в закладки улюблені місця та багато іншого - і все це доступно в форматі, що йде в ногу з все більш мобільним способом життя сучасної людини. Відвідайте <a href='http://www.youversion.com/download'>youversion.com/download</a>  зі свого мобільного пристрою, щоб завантажити програму Біблія і підключити свій профіль!"
+    no devices download copy: "Заснована на онлайн Біблії YouVersion.com, програма Біблія є безкоштовною мобільною Біблією, яка може бути встановлена ​​практично на будь-який телефон. Програма Біблія дозволяє користувачам читати Біблію, ділитися віршами через соціальні мережі, додавати в закладки улюблені місця та багато іншого - і все це доступно в форматі, що йде в ногу з все більш мобільним способом життя сучасної людини. Відвідайте <a href='https://www.bible.com/app'>bible.com/app</a>   зі свого мобільного пристрою, щоб завантажити програму Біблія і підключити свій профіль!"
     yes delete: "Так, вилучити"
     account delete success: "Ваш профіль YouVersion був успішно видалений. Ми сподіваємося, що ви продовжите шукати шляхи взаємодії з Біблією. Деякі з цих програм можуть бути корисні в вашому просуванні: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Якщо ви видалите профіль, то повністю знищите всю інформацію про себе, історію використання YouVersion і персональні дані (замітки, закладки, виділення кольором і т. д.) на YouVersion.com і в додатку Біблія. Ця дія не може бути скасована вами або співробітниками нашої команди. Якщо ви впевнені, що хочете продовжити, то введіть пароль і натисніть кнопку нижче."
@@ -353,6 +448,16 @@ uk:
       general title: "Загальна інформація"
       general text: "Повна угода. Дані УМОВИ ОБСЛУГОВУВАННЯ є повною угодою між Вами та LifeChurch.tv і регламентують використання Вами YouVersion і замінюють собою всі попередні домовленості між Вами та LifeChurch.tv щодо YouVersion. Ви можете також підпадати під дію додаткових умов і положень. <br> <br> Вибір законодавства та юрисдикції. УМОВИ ОБСЛУГОВУВАННЯ і відносини між Вами та LifeChurch.tv регламентуються законами штату Оклахома, без урахування конфлікту норм права. Ви і LifeChurch.tv погоджуєтесь підкорятися персональній та виключній юрисдикції судів, розташованих в окрузі Оклахома штату Оклахома. <br> <br> Відмова від права вимоги і часткова недійсність положень УМОВ. Невикористання або неприведення у виконання LifeChurch.tv-якого з положень УМОВ або прав, що надаються справжніми УМОВАМИ, не означає відмови від права вимоги у зв'язку з даним правом або положенням. Якщо будь-яке положення УМОВ визнано судом компетентної юрисдикції недійсним, то сторони тим не менш згодні з тим, що суд повинен привести у виконання наміри сторін, відображені в цьому положенні, і що інші положення УМОВ продовжують діяти в повній мірі і в повну силу. <br> <br> Недійсність права успадкування та відсутність права передачі іншій особі. Ви згодні з тим, що Ваш обліковий запис LifeChurch.tv не може бути передана іншій особі і що всі права на Ваш Логін LifeChurch.tv або вміст Вашого облікового запису припиняються у разі Вашої смерті. Після отримання копії свідоцтва про Вашу смерть LifeChurch.tv може припинити дію Вашого облікового запису і назавжди стерти його вміст. <br> <br> Позовна давність. Ви розумієте і згодні з тим, що, незалежно від будь-яких постанов або законів, будь-яка вимога або позов, які пов'язані або виникли у зв'язку з використанням YouVersion або даними УМОВАМИ ОБСЛУГОВУВАННЯ, повинні бути розпочаті протягом одного (1) року з моменту виникнення вимоги або підстави для позову, або погашені назавжди. <br> <br> Заголовки пунктів в УМОВАХ ОБСЛУГОВУВАННЯ служать виключно для зручності і не мають юридичної чи контрактної сили."
     profile:
+      blank slate:
+        heading: "Рухаємося вперед, нема що бачити тут (поки що)"
+        description: "Почніть вивчати Біблією або зв'яжіться з вашими друзями. Ця сторінка відображатиме історію вчиненого вами."
+      visit friend: "Відвідати профіль %{friend}"
+      tab activity: "Активність"
+      tab friends: "Друзі"
+      tab notes: "Нотатки"
+      tab bookmarks: "Закладки"
+      tab highlights: "Позначення"
+      tab badges: "Значки"
       first name: "Ім'я"
       last name: "Прізвище"
       email: "Адреса ел.пошти"
@@ -392,6 +497,9 @@ uk:
       reading_plans: "Повідомте мені інформацію про початий мною план читання."
       publishing partners: "Тримати мене в курсі новин від партнерів YouVersion."
       update: "Оновити сповіщення"
+      friendships: "Сповіщати мене про запити дружби"
+      moments: "Сповіщати мене про діяльність друзів"
+      comments: "Сповіщати мене про коментарі про мою діяльність"
   bookmarks:
     new: "Нова закладка"
     edit: "Редагувати"
@@ -405,9 +513,10 @@ uk:
     not found: "Закладки допомагають швидко знайти улюблені уривки або останній розділ, який ви читаєте в конкретній книзі. Щоб створити закладку виділіть вірш у програмі читання Біблії і натисніть обрану кнопку вгорі. "
     other user not found: "%{username} поки що не зберіг жодної закладки."
     creation form errors: "При створенні закладки виникла така помилка(и):"
-    successfully created: "Закладку додано"
-    successfully deleted: " Закладка видалена"
-    successfully updated: "Закладку оновлено"
+    create success: "Закладку збережено"
+    destroy success: "Закладку вилучено"
+    destroy failure: "Помилка вилучення закладки"
+    update success: "Закладку оновлено"
     labels placeholder: "Відокремлюйте множинні мітки комами."
     save: "Зберегти закладку"
     confirm delete: "Так, впевнений(а)"
@@ -418,9 +527,23 @@ uk:
     update: "Оновити"
     color: "Колір"
     version field: "Версія"
+    none user: "%{username} не має закладок"
+    blank slate:
+      heading: "Закласти важливі вірші"
+      description: "Під час читання Біблії, обирайте вірші для додавання їх до закладок. Повертайтеся сюди для перегляду, редагування або видалення закладки."
+    form:
+      title field: "Назва:"
+      reference field: "Посилання:"
+      labels field: "Мітки (через кому):"
+      colors field: "Колір"
+      update button: "Оновити закладку"
+      save button: "Зберегти закладку"
   badges:
     earned a badge: "Зароблено значок"
     user badges: "%{user}'s Значки"
+    earned date: "Зароблені %{username} %{ago} тому"
+    none me: "Ви поки що не заробили жодного значка."
+    none user: "%{username} ще не заробив жодного значка."
   plans:
     title: "Плани читання"
     browse by category: "Пошук по категорії"
@@ -429,7 +552,7 @@ uk:
     showing language filtered: "Показувати лише плани на мові: %{lang_name}"
     all: "Всі"
     all plans: "Всі плани"
-    all category plans: "Всі %{category} Плани"
+    all category plans: "Усі плани з категорії %{category} "
     my plans: "Мої плани"
     none found: "Ми не змогли обрати план згідно ваших критеріїв. Спробуйте розширити пошук."
     about publisher: "Видавець ([Дивитись інформацію])"
@@ -454,7 +577,7 @@ uk:
     plan settings: "Налаштування плану"
     settings: "Налаштування"
     search: "Шукати"
-    search placeholder: "Пошук %{category} Планів"
+    search placeholder: "Шукати %{category} Плани"
     subscribe to plan: "Розпочати цей план"
     previous day: "Попередній день"
     next day: "Наступний день"
@@ -550,7 +673,7 @@ uk:
       email: "Введіть свою електронну пошту"
       username: "Введіть своє ім'я користувача"
       password: "Введіть свій пароль"
-    with email: "Зареєструйтеся через свою електронну пошту"
+    with email: "Зареєструватися через свою електронну пошту"
     with facebook: "Зареєструватися через Facebook"
     benefits title: "Отримайте Усі можливості"
     benefits blurb: "Створення облікового запису дає вам доступ до інших засобів таких як закладки і нотатки. Вони будуть доступні на будь-якому пристрої, де ви увійшли у свій профіль. Обліковий запис спрощує вам спілкування з друзями стосовно Біблії, отже, приділіть хвилинку і зареєструйтеся!"
@@ -565,7 +688,15 @@ uk:
     chapter only: "На жаль, звук не доступний для віршів. Подивитися в читанці звуковий супровід до глави ."
     close player menu: "Закрити"
   highlights:
+    blank slate:
+      heading: "Підсвітити важливі вірші"
+      description: "Під час читання Біблії обирайте вірші для їхнього підсвічування. Повертайтеся сюди для перегляду, редагування або видалення підсвітки."
+    none user: "%{username} немає підсвіток"
     choose color: "Вибрати колір"
+    create success: "Підсвітку збережено"
+    create failure: "Помилка збереження підсвітки"
+    destroy success: "Підсвітку вилучено"
+    destroy failure: "Помилка вилучення підсвітки"
     creation error: "Вибачте, неможливо виділити."
     delete error: "Вибачте, неможливо видалити виділення."
   searching:
