--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1,11 +1,10 @@
 cs:
   social:
-
     share: "Sdílet"
     my connections: "Připojené účty"
     connected as: "Jste připojen/a ke službě %{connection} jako %{username}"
-    remove connection: "Odstranit"
-    connection friends: "Zde jsou někteří YouVersion uživatelé, s kterými jste spojen/a na %{connection}u:"
+    remove connection: "Odstranit toto propojení"
+    connection friends: "Zde jsou někteří YouVersion uživatelé, se kterými jste ve spojení přes %{connection}:"
     errors:
       no friends: "Žádný z vašich %{connection} přátel ještě není zaregistrovaný na YouVersion."
       reset connection: "Promiňte, vyskytla se chyba. Prosím deaktivujte toto připojení a znovu ho připojte."
@@ -15,7 +14,6 @@ cs:
       name: "Twitter"
     facebook:
       name: "Facebook"
-
       errors:
         expired access: "Vaše přihlášení přes Facebook vypršelo. Prosím odstraňte připojení a připojte se znovu na Facebook."
   api:
@@ -34,7 +32,12 @@ cs:
     users username not available: "Zadané uživatelské jméno není k dispozici."
     users username or password invalid: "Uživatelské jméno nebo heslo, které jste napsali, není správně."
     users username required: "Zde musíte zadat uživatelské jméno. "
+    users first name required: "Musíte zadat křestní jméno.\x04\x04"
+    users last name required: "Musíte zadat příjmení."
   meta:
+    kids_app:
+      title: "Aplikace Bible pro děti"
+      description: "..."
     100million:
       title: "Začíná to se 100 milióny"
       description: "Aplikace Bible byla již nainstalována skoro 100 milionkrát -  je to neuvěřitelný historický milník. A to jsme ještě ani pořádně nezačali. Již dnes si stáhněte aplikaci Bible, která je zdarma - a pak sdílejte aplikaci se svými přáteli. Začněme společné tvořit dějiny. "
@@ -44,6 +47,8 @@ cs:
     connections:
       index:
         title: "Připojené účty"
+  ui:
+    loading indicator text: "Načítání..."
   now: "Aktuálně"
   celebrating 50MM: "Oslavujeme 50 milionů instalací aplikace!"
   link: "Odkaz"
@@ -131,7 +136,6 @@ cs:
   chapter: "Kapitola"
   bible: "Bible"
   notes title: "Poznámky"
-  friends: "Přátelé"
   groups: "Skupiny"
   mobile: "Mobil"
   live: "Živě/Skupiny"
@@ -152,7 +156,91 @@ cs:
   or:
     lower: "nebo"
     upper: "NEBO"
+  moments:
+    vod:
+      title: "Verš dne"
+    friendship:
+      now friends: "Nyní se přátelíte s"
+    cta:
+      profile update text: "Pomozte svým přátelům vás najít."
+      profile update button: "Aktualizovat profil"
+      sharing text: "Sdílet verše na sociálních sítích"
+      sharing button: "Zapnout sdílení"
+      friends text: "Přečíst si v Bibli momenty vašich přátel"
+      friends button: "Najít přátelé"
+    action:
+      go to scripture: "Přejít k Písmu"
+      load more: "Načíst více"
+      like: "Líbí se"
+      like title: "Líbí se mi"
+      share: "Sdílet"
+      share title: "Sdílet s přáteli nebo rodinou"
+      comment: "Komentovat"
+      comment title: "Zobrazit komentáře"
+      edit: "Upravit"
+      edit highlight title: "Upravit zvýraznění"
+      edit bookmark title: "Upravit záložku"
+      edit note title: "Upravit poznámku"
+      delete: "Odstranit"
+      delete confirm: "Jste si jistí?"
+      delete highlight title: "Smazat zvýraznění"
+      delete bookmark title: "Smazat záložku"
+      delete note title: "Smazat poznámku"
+  notifications:
+    title: "Oznámení"
+    none: "Nemáte žádná oznámení"
+    no new: "Žádná nová oznámení"
+    view all: "Vidět všechna oznámení"
+  comments:
+    post comment: "Zveřejnit komentář"
+    create success: "Komentář zveřejněn"
+    create failure: "Komentář nelze zveřejnit"
+    form:
+      save button: "Příspěvek"
+  friends:
+    you have N friends: "Máte %{count} přátel"
+    none me: "Sdílejte vaše chvíle nad Biblí prostřednictvím záložek, zvýraznění a poznámek s vašimi nejbližšími přáteli a rodinou."
+    blank slate:
+      heading: "Zatím nejste přátelé"
+      description: "Pro zobrazení přátel tohoto uživatele se musíte nejprve stát jeho přítelem."
+    limit notice: "Můžete mít nanejvýš 150 přátel"
+    limit description: "Omezení vašich přátelství v aplikaci Bible na lidi, které znáte, vytváří prostředí pro upřímné konverzace a společné objevování s blízkými přáteli."
+  friendships:
+    offer success: "Odeslána žádost o přátelství"
+    offer failure: "Nepodařilo se odeslat žádost o přátelství"
+    create success: "Nyní jste přátelé"
+    create failure: "Chyba při vytváření přátelství"
+    destroy success: "Žádost byla odmítnuta"
+    destroy failure: "Chyba při rušení žádosti"
+    requests title: "Žádosti přátel"
+    requests view all: "Všechny žádosti o přátelství"
+    requests none: "Nemáte žádnou žádost o přátelství"
+    requests no new: "Žádné nové žádosti"
+    status:
+      pending: "Čekající žádost"
+      friends: "Přátelé"
+    user wants friendship: "%{user} chce být váš přítel"
+    user wants friendship partial: "chce být vašim přítelem"
+    form:
+      remove friend button: "Odstranit přítele"
+      remove friend button title: "Odstranit tuto osobu ze seznamu přátel"
+      add friend button: "Přidat přítele"
+      add friend button title: "Poslat uživateli %{user} žádost o přátelství"
+      accept button: "Přijmout"
+      accept request button: "Přijmout žádost"
+      ignore button: "Ignorovat"
+      ignore request button: "Ignorovat žádost"
   notes:
+    none user: "%{username} zatím neudělal žádnou poznámku."
+    blank slate:
+      heading: "Nemáte zatím žádné poznámky"
+      description: "Během čtení Bible je možné, že uslyšíte tichý Boží hlas, který k vám mluví. Své myšlenky si zde můžete rychle napsat. Vaše poznámky jsou automaticky označeny jako <em>soukromé</em>. Pokud byste je chtěli sdílet s přáteli, jednoduše stačí otevřít a změnit nastavení na <em>veřejné</em>."
+    form:
+      title field: "Nadpis:"
+      content field: "Obsah:"
+      reference field: "Odkaz(y):"
+      status field: "Status:"
+      save button: "Uložit"
     list title: "Poznámky"
     loading community: "Načítání poznámek komunity..."
     no community notes: "Nenašly se žádné poznámky odkazující na vybrané verše. Abyste mohli vytvořit poznámku, tak vyberte verš v Bibli a pak zmáčkněte tlačítko \"Vybrané\", které je nahoře nad textem."
@@ -180,7 +268,10 @@ cs:
     cancel: "Zrušit"
     pop out: "Vyskočit"
     none found: "Žádné poznámky nenalezeny..."
-    successfully deleted: "Poznámka odstraněna"
+    create success: "Poznámka byla uložena"
+    create failure: "Chyba při ukládání poznámky"
+    destroy success: "Poznámka smazána"
+    destroy failure: "Chyba během mazání poznámky"
   ref:
     loading secondary: "Načítají se odkazy v sekundárním překladu..."
     clear verses: "Zrušit označení veršů"
@@ -211,6 +302,8 @@ cs:
     profile form errors: "Následující chyba zabránila aktualizaci vašeho profilu:"
     email address: "E-mailová adresa"
     user name: "Uživatelské jméno"
+    first name: "Křestní jméno"
+    last name: "Příjmení"
     agreement: "Souhlasím s %{terms_link}."
     terms and conditions: "všeobecné podmínky"
     facebook sign up success: "Skvěle! Autorizovali jste se skrze Facebook. Nyní si zvolte YouVersion uživatelské jméno a heslo pro pokračování."
@@ -240,7 +333,7 @@ cs:
     edit account_existence: "Smazat účet"
     delete account button: "Smazat můj YouVersion účet"
     no devices: "K vašemu YouVersion účtu nejsou připojená žádná zařízení"
-    no devices download copy: "Aplikace Bible je zcela zdarma, je založená na on-line Bibli YouVersion a je ji možno nainstalovat skoro na jakýkoli mobilní telefon. Aplikace Bible umožňuje svým uživatelům číst Bibli, sdílet verše na sociální sítě, vytvářet si záložky ze svých oblíbených pasáží a více&mdash;vše ve formátu, který drží krok s narůstajícím mobilním způsobem života. Navštivte <a href='http://www.youversion.com/download'>youversion.com/download</a> přímo z vašeho mobilního zařízení, stáhněte si aplikaci Bible a připojte si svůj uživatelský účet!"
+    no devices download copy: "Založeno na online Bibli YouVersion, aplikace Bible je zdarma pro mobily a může být instalována na téměř všechny mobilní telefony. Aplikace Bible umožňuje uživatelům číst Bibli, sdílet verše na sociálních sítích, zvýrazňovat oblíbené pasáže a více&mdash;vše ve formátu, který jde ruku v ruce s životním stylem uživatelů mobilních zařízení. Navštivte <a href='https://www.bible.com/app'>bible.com/app</a> z vašeho mobilního zařízení, stáhněte si aplikaci a připojte se k vašemu účtu!"
     yes delete: "Ano, smazat můj účet"
     account delete success: "Váš YouVersion účet byl úspěšně vymazán. Doufáme, že budete mít stále další způsoby, jak přijít do kontaktu s Biblí. Některé z těchto aplikacích vám mohou pomoci, až budete pokračovat: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Pokud si smažete váš účet, ztratíte veškeré své informace, historii a údaje (jako poznámky, záložky, zvýraznění atd.) z YouVersion a aplikace Bible. Tento krok již nemůžete vzít zpět. Pokud si jste jistí, pokračujte níže."
@@ -355,6 +448,16 @@ cs:
       general title: "do not translate"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Pokračuj, není tu nic k vidění (zatím)"
+        description: "Začněte pracovat s Biblí, anebo komunikovat s přáteli a na této stránce se vám zobrazí historie toho, co již máte za sebou."
+      visit friend: "Navštivit profil uživatele %{friend}"
+      tab activity: "Aktivita"
+      tab friends: "Přátelé"
+      tab notes: "Poznámky"
+      tab bookmarks: "Záložky"
+      tab highlights: "Zvýraznění"
+      tab badges: "Odznaky"
       first name: "Křestní jméno"
       last name: "Příjmení"
       email: "E-mailová adresa"
@@ -394,6 +497,9 @@ cs:
       reading_plans: "Upozorňovat mě na informace pro plány čtení, které jsem začal/a."
       publishing partners: "Informujte mě o novinkách od partnerů obsahu YouVersion."
       update: "Upozornění na aktualizace"
+      friendships: "Chci oznámit žádosti přátel"
+      moments: "Chci oznámení o aktivitě přátel"
+      comments: "Chci oznámení komentářů mých aktivit"
   bookmarks:
     new: "Nová záložka"
     edit: "Upravit"
@@ -407,9 +513,10 @@ cs:
     not found: "Záložky vám dají rychlý přehled vašich oblíbených pasáží nebo poslední kapitolu, kterou jste četli v dané knize. Pro přidání záložky zvolte verš v prohlížení Bible a klikněte na tlačítko v horní části prohlížeče."
     other user not found: "Uživatel %{username} zatím neuložil žádné záložky."
     creation form errors: "Následující chyby neumožnily vytvořit záložku:"
-    successfully created: "Přidána záložka"
-    successfully deleted: "Záložka byla odstraněna"
-    successfully updated: "Záložka aktualizována"
+    create success: "Záložka byla uložena"
+    destroy success: "Záložka odstraněna"
+    destroy failure: "Chyba při odstraňování záložky"
+    update success: "Záložka aktualizována"
     labels placeholder: "Více štítků oddělte čárkami."
     save: "Uložit záložku"
     confirm delete: "Ano, jsem si jistý/á"
@@ -420,9 +527,23 @@ cs:
     update: "Aktualizovat"
     color: "Barva:"
     version field: "Překlad:"
+    none user: "%{username} nemá záložky"
+    blank slate:
+      heading: "Založit významné verše"
+      description: "Během čtení Bible si zvolte verše do záložek. Zpět sem můžete kdykoliv prohlížet, měnit nebo mazat záložky."
+    form:
+      title field: "Nadpis:"
+      reference field: "Odkaz:"
+      labels field: "Štítky (oddělené čárkou):"
+      colors field: "Barva:"
+      update button: "Aktualizovat záložku"
+      save button: "Uložit záložku"
   badges:
     earned a badge: "Získán odznak"
     user badges: "Odznaky uživatele %{user}"
+    earned date: "Získáno uživatelem %{username} před %{ago}"
+    none me: "Zatím jste nezískali žádné odznaky."
+    none user: "%{username} zatím nezískal žádné odznaky."
   plans:
     title: "Plány čtení"
     browse by category: "Prohlížet podle kategorie"
@@ -567,7 +688,15 @@ cs:
     chapter only: "Omlouváme se, ale audio funkce není dostupná pro jednotlivé verše. Začněte číst kapitolu od začátku a tato funkce vám bude nabídnuta. "
     close player menu: "Zavřít"
   highlights:
+    blank slate:
+      heading: "Zvýraznit významné verše"
+      description: "Během čtení Bible si můžete vybrané verše zvýraznit. Zde můžete svá zvýraznění kdykoliv prohlížet, editovat nebo mazat."
+    none user: "%{username} nemá žádné zvýraznění"
     choose color: "Vyberte barvu"
+    create success: "Zvýraznění uloženo"
+    create failure: "Chyba při ukládání zvýraznění"
+    destroy success: "Zvýraznění smazáno"
+    destroy failure: "Chyba při odstraňování zvýraznění"
     creation error: "Omlouváme se, nepodařilo se zvýraznění."
     delete error: "Omlouváme se, nepodařilo se odstranit zvýraznění."
   searching:
