--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -32,7 +32,12 @@ km:
     users username not available: "ឈ្មោះ​ដែល​លោក​អ្នក​បាន​ផ្ដល់​មិន​មាន​ទេ"
     users username or password invalid: "ឈ្មោះអ្នកប្រើប្រាស់ រឺអក្សរសំងាត់ដែលអ្នកបានផ្ដល់ឱ្យ​ អស់សុពលភាព​ហើយ​ ។"
     users username required: "លោកអ្នកត្រូវតែបញ្ចូលឈ្មោះអ្នកប្រើប្រាស់ ។"
+    users first name required: "អ្នក​ត្រូវ​បញ្ចូល​កោត្ត​នាម"
+    users last name required: "អ្នក​ត្រូវ​បញ្ចូល​នាម"
   meta:
+    kids_app:
+      title: "កម្ម​វិធី​ព្រះ​គម្ពីរ​សម្រាប់​កុមារ"
+      description: "..."
     100million:
       title: "វាចាប់ផ្ដើមជាមួយ ១០០ លាន"
       description: "កម្មវិធីព្រះគម្ពីរត្រូវបានតម្លើងជាង ១០០ លាន​ដងហើយ ដែលជាព្រឹត្តិការណ៍ដ័មិនគួរឱ្យជឿ! តែយើងទើបតែចាប់​ផ្ដើមទេ ។​ សូមដោនឡូដកម្មវិធីព្រះគម្ពីរ​ឥតគិតថ្លៃនៅថ្ងៃនេះ​- ហើយចែកចាយ​ពី​កម្មវិធីនេះទៅ​មិត្តភក្ដិរបស់អ្នក​ ។ តោះ យើងបង្កើតប្រវតិ្តសាស្ដ្រជាមួយគ្នា ។​"
@@ -42,6 +47,8 @@ km:
     connections:
       index:
         title: "បាន​ភ្ជាប់​ទៅ​គណនី"
+  ui:
+    loading indicator text: "កំពុង​ទាញ ..."
   now: "ឥឡូវ"
   celebrating 50MM: "អប​អរសាទការ​តម្លើងកម្មវិធី 50លាន​ដង!"
   link: "តំណ​ភ្ជាប់"
@@ -129,7 +136,6 @@ km:
   chapter: "ជំពូក"
   bible: "ព្រះគម្ពីរ"
   notes title: "កំណត់​ត្រា"
-  friends: "មិត្ត​ភក្ដិ"
   groups: "ក្រុម"
   mobile: "ទូរសព្ទ័ចល័ត"
   live: "ផ្ទាល់/ក្រុម"
@@ -150,7 +156,91 @@ km:
   or:
     lower: "ឬ"
     upper: "រឺ"
+  moments:
+    vod:
+      title: "ខគម្ពីរ​ប្រចាំ​ថ្ងៃ"
+    friendship:
+      now friends: "ឥឡូវ​អ្នក​ជា​មិត្ត​ជាមួយ​នឹង"
+    cta:
+      profile update text: "ជួយ​មិត្ត​របស់​អ្នក​រក​អ្នក"
+      profile update button: "អាប់ឌែត​ទម្រង់​របស់​អ្ន"
+      sharing text: "ចែក​រំលែក​ខគម្ពីឬ​ជាមួយ​នឹង​បណ្ដាញ​សង្គម"
+      sharing button: "តំណើរ​ការ ចែក​រំលែក"
+      friends text: "មើលការ​ប៉ះពាល់​ចិត្ត​របស់​មិត្ត​អ្នកក្នុង​ព្រះ​គម្ពីរ"
+      friends button: "រក​មិត្ត​ភក្តិ"
+    action:
+      go to scripture: "ទៅ​កាន់​បទ​គម្ពីរ"
+      load more: "ទាញ​យក ថែម​ទៀត"
+      like: "ចូល​ចិត្ត"
+      like title: "ចូល​ចិត្ត​ នេះ"
+      share: "ចែក​រំលែក"
+      share title: "ចែក​រំលែក​នេះ​ជាមួយ​មិត្ត ឬ​គ្រួសារ"
+      comment: "មតិ"
+      comment title: "មើល​មតិ​ទាំង​អស់"
+      edit: "កែរ"
+      edit highlight title: "កែរ​គំនូស​ពណ៌​នេះ"
+      edit bookmark title: "កែរ​កំណត់​ចំណាំ"
+      edit note title: "កែរ​កំណត់​ត្រា"
+      delete: "លុប"
+      delete confirm: "តើ​អ្នក​ប្រាកដ​ទេ?"
+      delete highlight title: "លុប​គំនូស​ពណ៌​នេះ"
+      delete bookmark title: "លុប​កំណត់​ចំណាំ​នេះ"
+      delete note title: "លុប​កំណត់​ត្រា​នេះ"
+  notifications:
+    title: "ការ​តឿន​រំលឹក"
+    none: "អ្នក​មិន​មាន​ការ​តឿន​រំលឹក​ទេ"
+    no new: "មិន​មាន​សារ​តឿន​ថ្មី"
+    view all: "មើល​ការ​តឿន​ទាំង​អស់"
+  comments:
+    post comment: "ផ្សាយ​មតិ"
+    create success: "មតិ​បាន​ផ្សាយ"
+    create failure: "មតិ​មិន​អាច​ផ្សាយ​បាន​ទេ"
+    form:
+      save button: "ផ្សាយ"
+  friends:
+    you have N friends: "អ្នក​មានមិត្ត %{count} នាក់"
+    none me: "ចែក​រំលែក​មតិ​របស់​អ្នក​ក្នុងព្រះ​គម្ពីរ​ដូចជា កំណត់​ចំណាំ, គំនូស​ពណ៌, និង​កំណត់​ត្រា​ជាមួយ​មិត្ត​ជិត​ស្និទ្ធ និង​គ្រួសារ​របស់​អ្នក​"
+    blank slate:
+      heading: "មិន​មាន​មិត្ត​ថ្មី​នេះ"
+      description: "អ្នក​ត្រូវធ្វើ​ជាមិត្ត​របស់​បុគ្គល​នេះ ដើម្បី​អាច​មើល​មិត្ត​របស់​គាត់​បាន។"
+    limit notice: "អ្នក​អាច​មាន​មិត្ត​ច្រើន​ដូច​ជា​150"
+    limit description: "ការ​កំណត់​មិត្ត​លើ​កម្ម​វិធី​ព្រះ​គម្ពីរ​គឺ​ដើម្បី​អោយ​មនុស្ស​ស្គាល់​និងបង្កើត​នូវ​បរិយាកាស​នៃ​ភាព​ស្មោះត្រង់​ក្នុង​ការ​សន្ទនា​និង​ចែក​រំលែក​នូវ​អ្វី​ដែល​បាន​រក​ឃើញ​ជាមួយ​មិត្ត​ជិតស្និទ្ធ​របស់​គេ។"
+  friendships:
+    offer success: "សំណើរ​ជា​មិត្ត​បាន​ផ្ញើរ"
+    offer failure: "បញ្ហា​ ក្នុង​ការ​ផ្ញើរ​សំណើរ​ជា​មិត្ត"
+    create success: "ឥឡូវ​អ្នក​ជា​មិត្ត​នឹង​គ្នា"
+    create failure: "បញ្ហា បង្កើត​មិត្ត​ភាព"
+    destroy success: "សំណើរ​ត្រូវ​បដិសេធ"
+    destroy failure: "បញ្ហា បដិសេធ​សំណើរ"
+    requests title: "រក​សំណើរ"
+    requests view all: "មើល​សំណើរ​មិត្ត​ទាំង​អស់"
+    requests none: "អ្នក​មិន​មាន​សំណើរ​ជា​មិត្ត​ទេ"
+    requests no new: "មិន​មាន​សំណើរ​ថ្មី"
+    status:
+      pending: "សំណើរ​កំពុង​រង់ចាំ"
+      friends: "មិត្ត​ភក្តិ"
+    user wants friendship: "%{user} ចង់​ធ្វើ​ជា​មិត្ត​អ្នក"
+    user wants friendship partial: "ចងធ្វើ​ជា​មិត្ត​អ្ន"
+    form:
+      remove friend button: "ដក​មិត្ត​ចេញ"
+      remove friend button title: "ដក​បុគ្គល​នេះ​ចេញ​ពី​បញ្ជីរ​មិត្ត​របស់​អ្ន"
+      add friend button: "បន្ថែម​មិត្ត"
+      add friend button title: "ផ្ញើរ %{user} សំណើរ​មិត្ត​ភាព"
+      accept button: "ទទួល"
+      accept request button: "ទទួល​យក​សំណើរ"
+      ignore button: "បដិសេធ"
+      ignore request button: "បដិសេធ​សំណើរ"
   notes:
+    none user: "%{username} មិន​ទាន់​មាន​កំណត់​ត្រា​នៅ​ឡើយ​ទេ"
+    blank slate:
+      heading: "អ្នក​មិន​ទាន​មាន​កំណត់​ត្រា​ទេ"
+      description: "ពេល​ដែល​អ្នក​កំពុង​អាន​ព្រះ​គម្ពីរ ហើយ​ពេល​អ្នក​មាន​អារម្មណ៍​ថា​ព្រះ​កំពុង​មាន​បន្ទូល​មក​កាន់​អ្នក លោក​អ្នក​អាច​បន្ថែម​គំនិត​ទាំង​នោះ​នៅ​ទី​នេះ។ កំណត់​ត្រា​របស់​អ្នក​នឹង​កំណត់​ជា <em>ឯកជន</em> តែម្ដង. ប្រសិន​បើ​អ្នក​ចង់​ចែក​រំលែក​កំណត់​ត្រា​នេះ​ជាមួយ​មិត្ត​របស់​អ្នក ងាយ​ស្រួល​បំផុត​ដោយ​គ្រាន់​តែ​បើ​ក​វា​ហើយ​ប្ដូរ​ទៅ​ជា<em>សាធារណះ</em>."
+    form:
+      title field: "ចំណង​ជើង"
+      content field: "មាតិការ"
+      reference field: "សេចក្ដី​យោង"
+      status field: "ស្ថាន​ភាពៈ"
+      save button: "រក្សា​ទុក"
     list title: "កំណត់​ត្រា"
     loading community: "កំពុង​ទាញ​យក​កំណត់​ត្រា​សហគមន៍"
     no community notes: "រកឃើញមិន​មាន​កំណត់​ត្រា​សហគមន៍​យោង​ទៅ​លើ​ខគម្ពីរ​ដែល​បាន​ជ្រើស​រើសទេ។ ដើម្បី​បង្កើត​កំណត់​ត្រា, ជ្រើស​រើស​ខ​គម្ពីរ​ ហើយ​ចុច​លើប៊ូតុង​ជ្រើស​រើស​នៅ​ខាង​ផ្នែក​កម្ម​វិធីអាន​គម្ពីរ។"
@@ -178,7 +268,10 @@ km:
     cancel: "បោះ​បង់"
     pop out: "លេច​ចេញ​មក"
     none found: "មិន​មាន​កំណត់​ត្រា​ត្រូវ​បាន​រក​ឃើញ​ឡើយ..."
-    successfully deleted: "កំណត់​ត្រា ត្រូវ​បាន​ដក​ចេញ"
+    create success: "មិន​បាន​រក្សា​ទុក"
+    create failure: "មាន​បញ្ហា​ពេលរក្សា​កំណត់​ត្រា"
+    destroy success: "កំណត់​ត្រា​បាន​លុបចេញ"
+    destroy failure: "បញ្ហា ពេល​លុប​កំណត់​ត្រា"
   ref:
     loading secondary: "ទាញយកអំណៈអំណាង​ពី​ជំនាន់​ទី២..."
     clear verses: "សំអាតខ​ដែល​បាន​ជ្រើស​រើស"
@@ -209,6 +302,8 @@ km:
     profile form errors: "កំហុស​មួយ​នេះ(ច្រើន) រារាំង​អ្នក​ក្នុង​ការ​បន្ទាន់​សម័យ​លើ​ទម្រង់​របស់​អ្នកៈ"
     email address: "អាស័យ​ដ្ឋាន​អ៊ី​ម៉ែល"
     user name: "ឈ្មោះ​ប្រើ​ប្រាស់"
+    first name: "នាម"
+    last name: "កោត្ត​នាម"
     agreement: "ខ្ញុំ​យល់​ព្រម​ទៅ​នឹង YouVersion %{terms_link}"
     terms and conditions: "ច្បាប់ និងលក្ខខន្តិកៈ"
     facebook sign up success: "ល្អ​ណាស់! អ្នក​ត្រូវ​បាន​អនុញ្ញាត​ជាមួយនឹង​ហ្វេសប៊ុក។ រើស​យកឈ្មោះ​ប្រើ​ប្រាស់ និង​ ពាក្យ​សម្ងាត់ YouVersion រួច​បន្ត។"
@@ -238,7 +333,7 @@ km:
     edit account_existence: "លុប​គណនី"
     delete account button: "លុប​គណនី​ YouVersion របស់​ខ្ញុំ"
     no devices: "មិន​មាន​ឧបករណ៍​បាន​ភ្ជាប់​មក​កាន់​គណនី YouVersion​ របស់​អ្នក​ទេ"
-    no devices download copy: "អាស្រ័យ​ទៅ​លើ​ព្រះ​គម្ពីរ​លើ​បណ្ដាញ, YouVersion.com, Bible App ជា​កម្ម​វិធី​ព្រះ​គម្ពីរ​លើ​ឧបករណ៍​ចល័ត​ដែល​អាច​ប្រើ​ប្រាស់​លើ​សឹង​តែ​គ្រប់​ឧបករណ៍​ចល័ត​ទាំង​អស់។ Bible App អនុញ្ញាត្តិ​អោយ​អ្នក​ប្រើ​ប្រាស់​ អាន​ព្រះ​គម្ពីរ, ចែក​រំលែក​ខ​ព្រះ​គម្ពីរ, និង more&mdash; ទាំង​អស់​នៅ​លើ​ទម្រង់​មួយ​ដែល​អាច​អោយ​អ្នក​បន្តប្រើ​លើ​ឧបករណ៍​ចល័ត​បាន​យ៉ាង​ល្អ។ ចូល​មក​កាន់ <a href='http://www.youversion.com/download'>youversion.com/download</a> ពី​ឧបករណ៍​ចល័ត​របស់​អ្នកដើម្បី​ដោនឡូដ Bible App ហើយ​ភ្ជាប់​មក​កាន់​គណនី​របស់​អ្នក"
+    no devices download copy: "អាស្រ័យ​ទៅ​លើ​ព្រះ​គម្ពីរ​លើ​បណ្ដាញ, YouVersion.com, Bible App ជា​កម្ម​វិធី​ព្រះ​គម្ពីរ​លើ​ឧបករណ៍​ចល័ត​ដែល​អាច​ប្រើ​ប្រាស់​លើ​សឹង​តែ​គ្រប់​ឧបករណ៍​ចល័ត​ទាំង​អស់។ Bible App អនុញ្ញាត្តិ​អោយ​អ្នក​ប្រើ​ប្រាស់​ អាន​ព្រះ​គម្ពីរ, ចែក​រំលែក​ខ​ព្រះ​គម្ពីរ, និង more&mdash; ទាំង​អស់​នៅ​លើ​ទម្រង់​មួយ​ដែល​អាច​អោយ​អ្នក​បន្តប្រើ​លើ​ឧបករណ៍​ចល័ត​បាន​យ៉ាង​ល្អ។ ចូល​មក​កាន់  <a href='https://www.bible.com/app'>bible.com/app</a> ពី​ឧបករណ៍​ចល័ត​របស់​អ្នកដើម្បី​ដោនឡូដ Bible App ហើយ​ភ្ជាប់​មក​កាន់​គណនី​របស់​អ្នក"
     yes delete: "បាទ/ចា៎ លុប​គណនី​របស់ខ្ញុំ"
     account delete success: "គណនី​ YouVersion ត្រូវ​បាន​លុប​ចេញ​ជា​ស្ថាពរ។ យើង​សង្ឃឹម​ថា​លោក​អ្នក​នឹង​បន្ត​រក​វិធី​ដ៏​មានន័យ​ផ្សេង​ៗ​ក្នុង​ការ​ផ្សារ​ភ្ជាប់​ជាមួយ​ព្រះ​គម្ពីរ។ កម្ម​វិធី​ផ្សេង​ៗ​ទៀត​នឹង​ជួយ​លោក​អ្នក​ក្នុង​ការ​អាន​ព្រះ​គម្ពីរៈ <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "ប្រសិន​បើ​អ្នក​លុប​គណនី​របស់​អ្នក នោះ​អ្នក​នឹង​ត្រូវ​បាន​ដកចេញ​នូវ ព័ត៌មាន, ប្រវត្ត, និង​ការ​រៀប​ចំរបស់​អ្នក​ជា​រៀង​រហូត (ដូច​ជា​កំណត់​ត្រា, កំណត់​ចំណាំ, ការគូស​ពណ៌​ចំណាំ, ។ល។) ដែល​មាន​នៅ​ក្នុង YouVersion.com ហើយនិង Bible App។ ទាំង​នេះ​នឹង​មិន​អាច​ទាញ​ត្រឡប់​មក​វិញ​ដោយ​ខ្លួន​អ្នក ឬ​ក្រុម​របស់​យើង​បាន​ឡើយ។ ប្រសិនបើ​អ្នក​ពិត​ជា​ចង់​មែន​សូម​បន្ត ដំណើរការ​ខាងក្រោម។"
@@ -353,6 +448,16 @@ km:
       general title: "ព័ត៌មាន​ទូទៅ"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "ទៅ​មុខ​ទៀត គ្មាន​អ្វី​មើល​ទេ​នៅទីនេះ (មិនទាន់មាន)"
+        description: "ចាប់​ផ្ដើម​ប្រាស្រ័យ​ជាមួយ​ព្រះគម្ពីរ ឬ​មិត្ត​របស់​អ្នក ហើយ​ទំព័រ​នេះ​នឹង​បង្ហាញ​ពី​ប្រវត្ត​នៃ​កិច្ច​ការ​របស់​អ្នក។"
+      visit friend: "មើល​ទំម្រង់ %{friend}"
+      tab activity: "សកម្ម​ភាព"
+      tab friends: "មិត្ត​ភក្តិ"
+      tab notes: "កំណត់​ត្រា"
+      tab bookmarks: "កំណត់​ចំណាំ​ច្រើន"
+      tab highlights: "គូស​ចំណាំៈ"
+      tab badges: "ផ្លាក​សញ្ញា"
       first name: "នាម"
       last name: "កោត្ត​នាម"
       email: "អាស័ដ្ឋាន​អ៊ីម៉ែល"
@@ -392,6 +497,9 @@ km:
       reading_plans: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពី​ព័ត៌មាន​សំរាប់​គំរោង​អាន​ដែល​ខ្ញុំ​បាន​ចាប់​ផ្ដើម។"
       publishing partners: "ជួយ​ប្រាប់​តំណឹង​ដល់​ខ្ញុំ​ពេល​មាន​ការ​អាប់ឌែតពី មាតិការ​ដៃ​គូរ​របស់ YouVersion"
       update: "អាប់ឌែត​ការ​ប្រាប់​ដំណឹង"
+      friendships: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​សំណើរ​ពី​មិត្ត​ភក្តិ"
+      moments: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​អំពី​សកម្ម​ភាព​របស់​មិត្ត"
+      comments: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពី​មតិ​លើ​សកម្ម​ភាព​របស់​ខ្ញុំ"
   bookmarks:
     new: "កំណត់​ចំណាំ​ថ្មី"
     edit: "កែសម្រួល"
@@ -405,9 +513,10 @@ km:
     not found: "កំណត់​ចំណាំ​នឹង​ផ្ដល់​នូវ​សេចក្ដី​យោង​ដោយ​មាន​ភាព​រហ័សទៅកាន់​អ្វី​ដែល​អ្នក​ចូល​ចិត្តឬ​ជំពូក​ចុង​ក្រោយ​ដែល​អ្នក​បាន​អាន​នៅ​ក្នុង​សៀវ​ភៅ។ ដើម្បី​បញ្ចូល​កំណត់​ចំណាំ ជ្រើស​រើស​ខព្រះគម្ពីរ​ក្នុង​កម្ម​វិធី​អានព្រះគម្ពីរ ហើយ​ចុច​លើ​ប៊ូតុង​ជ្រើស​រើស​នៅ​ខាង​លើ​នៃ​កម្ម​វិធី​អាន។"
     other user not found: "%{username} មិន​ទាន់​បាន​រក្សាទុក​នូវ​កំណត់​ចំណាំ​ទេ"
     creation form errors: "មាន​កំហុស​ (ច្រើន)​កើត​មាន​ឡើង ក្នុង​ការ​បង្កើត​នូវ​កំណត់​ចំណាំ​របស់​លោក​អ្នក៖"
-    successfully created: "កំណត់​ចំណាំ​ត្រូវ​បាន​បន្ថែម"
-    successfully deleted: "ដក​កំណត់​ចំណាំ​ចេញ"
-    successfully updated: "អាប់​ឌែត​កំណត់​ចំណាំ"
+    create success: "កំណត់​ចំណាំ​បាន​រក្សា​ទុក"
+    destroy success: "កំណត់​ចំណាំ​បាន​ដក​ចេញ"
+    destroy failure: "មាន​បញ្ហា​ពេល​លុប​កំណត់​ចំណាំ"
+    update success: "កំណត់​ចំណាំ​បាន​អាប់​ឌែត"
     labels placeholder: "ចែក​ពហុ​ផ្លាកដោយ​ប្រើ​ក្បៀស"
     save: "រក្សា​កំណត់​ចំណាំ"
     confirm delete: "បាទ/ចា៎ ខ្ញុំ​ច្បាស់​ហើយ"
@@ -418,9 +527,23 @@ km:
     update: "អាប់ឌែត"
     color: "ពណ៌ៈ"
     version field: "ជំនាន់ៈ"
+    none user: "%{username} មិន​មាន​កំណត់​ចំណាំ"
+    blank slate:
+      heading: "កំណត់​ចំណាំ​ខគម្ពីរ​ដែល​មានន័យ"
+      description: "ពេល​អាន​ព្រះ​គម្ពីរ ជ្រើស​រើស​យក​ខគម្ពីរ​ហើយ​កត់​ចំណាំ​វា។ ត្រប់​មក​ទីនេះ ដើម្បី មើល កែសម្រួល ឬ​លុប​កំណត់​ចំណាំ​របស់​អ្នក"
+    form:
+      title field: "ចំណង​ជើង"
+      reference field: "សេច​ក្ដីព្រាងៈ"
+      labels field: "ផ្លាក (ផ្ដាច់​ដោយ​ប្រើ​សញ្ញា​ក្បៀស)"
+      colors field: "ពណ៌ៈ"
+      update button: "អាប់​ឌែត​កំណត់​ចំណាំ"
+      save button: "រក្សា​កំណត់​ចំណាំ"
   badges:
     earned a badge: "ទទួល​បាន​ផ្លាកសញ្ញា"
     user badges: "ផ្លាក​សញ្ញា​របស់​ %{user}"
+    earned date: "ទទួល​បាន​ដោយ %{username} %{ago} កន្លង​ទៅ"
+    none me: "លោក​អ្នក​មិន​ទទួល​បាន ផ្លាក់​សញ្ញា​ អី​នៅ​ឡើយ​ទេ"
+    none user: "%{username} មិន​ទាន់​ទទួល​បាន ផ្លាក​សញ្ញា អី​នៅ​ឡើយ​ទេ"
   plans:
     title: "គំរោង​អាន​"
     browse by category: "រុក​រក​តាម​ប្រភេទ"
@@ -565,7 +688,15 @@ km:
     chapter only: "សូម​ទោស មិន​មាន​ខគម្ពីរ​ជា​សំលេង​ទេ។ សូមមើល​នៅ​ក្នុង​កម្ម​វិធី​អាន​គម្ពីរ​សំរាប់​ខគម្ពីរ​ជា​សំលេង"
     close player menu: "បិទ"
   highlights:
+    blank slate:
+      heading: "គូស​លើ​ខគម្ពីរ​ដែល​មានន័យ"
+      description: "ពេល​អាន​ព្រះ​គម្ពីរ ជ្រើស​រើស​យក​ខគម្ពីរ​ហើយ​គួស​ពណ៌វា។ ត្រប់​មក​ទីនេះ ដើម្បី មើល កែសម្រួល ឬ​លុប​កំណត់​ចំណាំ​របស់​អ្នក"
+    none user: "%{username} មិន​មាន​គំនូស​ពណ៌"
     choose color: "ជ្រើស​រើស​ពណ៌"
+    create success: "គំនូស​ពណ៌​បាន​រក្សា​ទុក"
+    create failure: "មាន​បញ្ហា​លើ​រក្សា​ទុក​គំនូស​ពណ៌"
+    destroy success: "គំនូស​ពណ៌​បាន​លុប"
+    destroy failure: "មាន​បញ្ហា​ពេល​លុប​គំនូស​ពណ៌"
     creation error: "សូម​ទោស! មិន​អាច​គូស​ចំណាំ​ទេ"
     delete error: "សូម​ទោស មិន​អាចលុប​ការគូស​ចំណាំ​ទេ"
   searching:
