--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -3,7 +3,7 @@ nl:
     share: "Deel"
     my connections: "Verbonden Accounts"
     connected as: "Je bent verbonden met %{connection} als %{username}."
-    remove connection: "Verwijderen"
+    remove connection: "Verwijder deze connectie"
     connection friends: "Dit zijn enkele YouVersion gebruikers waarmee je verbonden bent op %{connection}:"
     errors:
       no friends: "Geen van je %{connection} vrienden lijken YouVersion te gebruiken."
@@ -32,7 +32,12 @@ nl:
     users username not available: "De gebruikersnaam die je hebt ingevoerd is niet beschikbaar."
     users username or password invalid: "De gebruikersnaam of het wachtwoord is ongeldig."
     users username required: "Je moet een gebruikersnaam invoeren."
+    users first name required: "Je moet een voornaam invoeren."
+    users last name required: "Je moet een achternaam invoeren."
   meta:
+    kids_app:
+      title: "De Bijbel App voor kinderen"
+      description: "..."
     100million:
       title: "Het begint met 100 miljoen"
       description: "De Bijbel App is al bijna 100 miljoen keer geïnstalleerd - een geweldige mijlpaal! Maar we zijn pas begonnen. Download vandaag de gratis Bijbel App nog -en deel de app met jouw vrienden. Laten we samen geschiedenis maken."
@@ -42,6 +47,8 @@ nl:
     connections:
       index:
         title: "Verbonden Accounts"
+  ui:
+    loading indicator text: "Laden..."
   now: "Nu"
   celebrating 50MM: "We vieren de 50 miljoenste installatie!"
   link: "Link"
@@ -129,7 +136,6 @@ nl:
   chapter: "Hoofdstuk"
   bible: "Bijbel"
   notes title: "Notities"
-  friends: "Vrienden"
   groups: "Groepen"
   mobile: "Mobiel"
   live: "Live/Groepen"
@@ -150,7 +156,91 @@ nl:
   or:
     lower: "of"
     upper: "OF"
+  moments:
+    vod:
+      title: "Vers van de dag"
+    friendship:
+      now friends: "Je bent nu vrienden met"
+    cta:
+      profile update text: "Zorg dat jouw vrienden jou kunnen vinden"
+      profile update button: "Update jouw profiel"
+      sharing text: "Deel verzen met sociale media"
+      sharing button: "Maak delen mogelijk"
+      friends text: "Bekijk Bijbel momenten van je vrienden."
+      friends button: "Vrienden vinden"
+    action:
+      go to scripture: "Ga naar tekst"
+      load more: "Meer laden"
+      like: "Vind ik leuk"
+      like title: "Vind ik leuk"
+      share: "Deel"
+      share title: "Deel dit met vrienden of familie"
+      comment: "Reactie"
+      comment title: "Bekijk alle reacties"
+      edit: "Bewerken"
+      edit highlight title: "Bewerk deze markering"
+      edit bookmark title: "Bewerk deze bladwijzer"
+      edit note title: "Bewerk deze notitie"
+      delete: "Verwijderen"
+      delete confirm: "Weet je het zeker?"
+      delete highlight title: "Verwijder deze markering"
+      delete bookmark title: "Deze bladwijzer verwijderen"
+      delete note title: "Deze notitie verwijderen"
+  notifications:
+    title: "Meldingen"
+    none: "Je hebt geen meldingen"
+    no new: "Geen nieuwe meldingen"
+    view all: "Bekijk alle meldingen"
+  comments:
+    post comment: "Plaats een reactie"
+    create success: "Reactie geplaatst"
+    create failure: "Reactie kon niet worden geplaatst"
+    form:
+      save button: "Plaatsen"
+  friends:
+    you have N friends: "Je hebt %{count} vrienden"
+    none me: "Deel van jouw Bijbelmomenten, bijvoorbeeld bladwijzers, markeringen en notities met goede vrienden en familie."
+    blank slate:
+      heading: "Op dit moment geen vrienden"
+      description: "Om de vrienden van deze persoon te kunnen zien moet je bevriend zijn."
+    limit notice: "Je kunt maximaal 150 vrienden hebben"
+    limit description: "Het beperken van jouw Bijbel App vriendschappen met mensen die jij goed kennen creëert een omgeving voor eerlijke gesprekken en geeft ruimte om ideeën uit te wisselen met trouwe vrienden."
+  friendships:
+    offer success: "Vriendschapsverzoek verstuurd"
+    offer failure: "Fout bij het versturen van vriendschapsverzoek"
+    create success: "Jullie zijn nu vrienden"
+    create failure: "Fout bij het maken van een vriendschap"
+    destroy success: "Verzoek afgewezen"
+    destroy failure: "Fout bij het afwijzen van het verzoek"
+    requests title: "Vriendschapsverzoeken"
+    requests view all: "Bekijk alle vriendschapsverzoeken"
+    requests none: "Je hebt geen vriendschapsverzoeken"
+    requests no new: "Geen nieuwe verzoeken"
+    status:
+      pending: "Verzoek in afwachting van reactie"
+      friends: "Vrienden"
+    user wants friendship: "%{user} wil jouw vriend worden"
+    user wants friendship partial: "wil jouw vriend worden"
+    form:
+      remove friend button: "Verwijder vriend"
+      remove friend button title: "Verwijder deze persoon van jouw vriendenlijst"
+      add friend button: "Voeg Vriend toe"
+      add friend button title: "Stuur %{user} een vriendschapsverzoek"
+      accept button: "Accepteer"
+      accept request button: "Accepteer verzoek"
+      ignore button: "Negeer"
+      ignore request button: "Negeer verzoek"
   notes:
+    none user: "%{username} heeft nog geen notities gemaakt."
+    blank slate:
+      heading: "Jij hebt nog geen notities gemaakt."
+      description: "Wanneer jij in je Bijbel leest, en je voelt Gods zachte stem tot je spreken kun je op dat moment deze woorden en gedachten hier noteren. Jouw notities worden automatisch als <em>privé</em> opgeslagen. Wanneer jij een notitie wilt delen met jouw vrienden kun je de notitie openen en veranderen naar <em>openbaar</em>."
+    form:
+      title field: "Titel:"
+      content field: "Inhoud:"
+      reference field: "Verwijzing(en):"
+      status field: "Status:"
+      save button: "Opslaan"
     list title: "Notities"
     loading community: "Notities uit de gemeenschap worden geladen…"
     no community notes: "Er zijn geen notities uit de gemeenschap gevonden die gekoppeld zijn aan deze verzen. Om een notitie aan te maken selecteer je een vers in het Bijbelleesvenster en klik je op de knop Geselecteerd bovenin het leesvenster."
@@ -178,7 +268,10 @@ nl:
     cancel: "Annuleren"
     pop out: "Uitklappen"
     none found: "Er zijn geen notities gevonden…"
-    successfully deleted: "Notitie verwijderd"
+    create success: "Notitie opgeslagen"
+    create failure: "Fout bij het opslaan van de notitie"
+    destroy success: "Notitie verwijderd"
+    destroy failure: "Fout bij het verwijderen van notitie"
   ref:
     loading secondary: "Verwijzingen in tweede vertaling aan het laden…"
     clear verses: "Verzen deselecteren"
@@ -209,6 +302,8 @@ nl:
     profile form errors: "De volgende fout(en) zorgden ervoor dat je jouw profiel niet kon updaten:"
     email address: "E-mailadres"
     user name: "Gebruikersnaam"
+    first name: "Voornaam"
+    last name: "Achternaam"
     agreement: "Ik ga akkoord met de %{terms_link} van YouVersion."
     terms and conditions: "Algemene voorwaarden"
     facebook sign up success: "Super! Je bent aangemeld via Facebook. Kies een YouVersion-gebruikersnaam en wachtwoord om verder te gaan."
@@ -238,7 +333,7 @@ nl:
     edit account_existence: "Account verwijderen"
     delete account button: "Mijn YouVersion-account verwijderen"
     no devices: "Er zijn geen apparaten gekoppeld aan je YouVersion-account."
-    no devices download copy: "Gebaseerd op de online Bijbel, YouVersion.com, is de Bijbel App een gratis mobiele Bijbel die kan worden geïnstalleerd op bijna elk mobiel apparaat. De Bijbel App stelt gebruikers in staat om te lezen in de Bijbel, verzen te delen met sociale netwerken, bladwijzers te plaatsen bij  favoriete passages en nog veel meer&mdash;in een formaat dat past bij de steeds mobielere levensstijl. Bezoek <a href='http://www.youversion.com/download'>youversion.com/download</a> vanaf je mobiele apparaat om de Bijbel App te downloaden en meld je aan voor een account!"
+    no devices download copy: "Gebaseerd op de online Bijbel, YouVersion, is de Bijbel App een gratis mobiele Bijbel die op bijna alle mobiele apparaten kan worden geïnstalleerd. De Bijbel App maakt het mogelijk voor gebruikers om in de Bijbel te lezen, verzen te delen op sociale media, bladwijzers te maken van hun favoriete gedeeltes en meer&mdash;allemaal op een manier die past bij het steeds mobielere leven. Ga naar <a href='https://www.bible.com/app'>bible.com/app</a> vanaf jouw apparaat en download de Bijbel App en koppel jouw account!"
     yes delete: "Ja, verwijder mijn account"
     account delete success: "Je YouVersion-account is succesvol verwijderd. We hopen dat je nog steeds op waardevolle wijze interactie beleefd met de Bijbel. Enkele van deze apps zouden je kunnen helpen om voort te gaan: <a href= 'http://www.youversion.com/free-bible-apps'>http://www.youversion.com/free-bible-apps</a>."
     delete account description: "Wanneer je je account verwijdert, verwijder je blijvend al je informatie, geschiedenis en personalisatie (zoals notities, bladwijzers, markeringen etc.) op YouVersion.com en in de Bijbel App. Deze handeling kan niet ongedaan worden gemaakt door jou of door ons team. Als je er zeker van bent dat je wil doorgaan, ga dan onderaan verder."
@@ -353,6 +448,16 @@ nl:
       general title: "Algemene informatie"
       general text: "Volledige overeenkomst. Deze GEBRUIKERSVOORWAARDEN vormen de gehele overeenkomst tussen jou en LifeChurch.tv en bepalen het gebruik van YouVersion en vervangen tevens alle voorgaande overeenkomsten tussen jou en LifeChurch.tv met betrekking tot YouVersion. Je kunt ook onderworpen zijn aan aanvullende bepalingen en voorwaarden.<br><br>Keuze van wetgeving en forum. De GEBRUIKERSVOORWAARDEN en de relatie tussen jou en LifeChurch.tv worden bepaald door de wetten van de staat Oklahoma, zonder verwijzing naar zijn conflict van wettelijke bepalingen. Jij en LifeChurch.tv stemmen in met de persoonlijke en exclusieve jurisdictie van de rechtbanken in het graafschap van Oklahoma County, Oklahoma.<br><br>Vrijstelling en afstandneming van voorwaarden. Het falen van LifeChurch.tv om uit te oefenen of af te dwingen enig recht of bepaling van deze GEBRUIKERSVOORWAARDEN doet geen afstand van dit recht of deze bepaling. Indien enige bepaling van deze GEBRUIKERSVOORWAARDEN ongeldig wordt gevonden door een bevoegde rechtbank, dan stemmende partijen ermee in dat de rechtbank moet proberen uitvoering te geven aan de bedoelingen van de partijen zoals aangegeven in de bepaling; en de andere bepalingen van deze GEBRUIKERSVOORWAARDEN blijven onverkort van kracht.<br><br>Geen recht op overleving en Niet-overdraagbaarheid. Je stemt ermee in dat jouw LifeChurch.tv-account niet overdraagbaar is, en alle rechten op je LifeChurch.tv-ID of de inhoud in jouw account wegvallen als je overlijdt. Na ontvangst van een kopie van een overlijdensakte, kan LifeChurch.tv je account opzeggen en permanent daarmee alle inhoud verwijderen.<br><br>Statuut van beperkingen. Je begrijpt en stemt ermee in dat onafhankelijk van enige wet of verordening van het tegendeel, elke claim of rechtszaak die voortvloeit uit of verband houdende met het gebruik van YouVersion of deze GEBRUIKERSVOORWAARDEN moet worden ingediend binnen één (1) jaar nadat deze claim of actie is ontstaan ​​of anders voorgoed wordt uitgesloten.<br><br>De deeltitels binnen deze GEBRUIKERSVOORWAARDEN zijn voor de duidelijkheid en hebben geen wettelijke of contractuele invloed."
     profile:
+      blank slate:
+        heading: "Ga  verder, er is hier (nog) niets te zien"
+        description: "Begin bezig te zijn met de Bijbel, of met jouw vrienden, en deze pagina zal een geschiedenis laten zien van wat jij hebt gedaan."
+      visit friend: "Bezoek %{friend}'s profiel"
+      tab activity: "Activiteit"
+      tab friends: "Vrienden"
+      tab notes: "Notities"
+      tab bookmarks: "Bladwijzers"
+      tab highlights: "Markeringen"
+      tab badges: "Medailles"
       first name: "Voornaam"
       last name: "Achternaam"
       email: "E-mailadres"
@@ -392,6 +497,9 @@ nl:
       reading_plans: "Laat het me weten als er informatie is over de leesplannen waaraan ik begonnen ben."
       publishing partners: "Hou me op de hoogte van nieuws over YouVersion's inhoudelijke partners."
       update: "Meldingen bijwerken"
+      friendships: "Breng me op de hoogte van vriendschapsverzoeken"
+      moments: "Breng me op de hoogte van activiteit van vrienden"
+      comments: "Breng mij op de hoogte van reacties op mijn activiteiten"
   bookmarks:
     new: "Nieuwe bladwijzer"
     edit: "Bewerken"
@@ -405,9 +513,10 @@ nl:
     not found: "Bladwijzers geven je een snelle verwijzing naar je favoriete passages of naar het laatste hoofdstuk dat je gelezen hebt in een bepaald boek. Om een bladwijzer toe te voegen, selecteer je een vers in het Bijbelleesvenster en klik je vervolgens op de Geselecteerd-knop aan de bovenkant van het leesvenster."
     other user not found: "%{username} heeft nog geen bladwijzers geplaatst."
     creation form errors: "De volgende fout(en) zorgden ervoor dat je bladwijzer niet werd aangemaakt:"
-    successfully created: "Bladwijzer geplaatst"
-    successfully deleted: "Bladwijzer verwijderd"
-    successfully updated: "Bladwijzer bijgewerkt"
+    create success: "Bladwijzer opgeslagen"
+    destroy success: "Bladwijzer verwijderd"
+    destroy failure: "Fout bij het verwijderen van bladwijzer"
+    update success: "Bladwijzer bijgewerkt"
     labels placeholder: "Scheid meerdere labels met komma's."
     save: "Bladwijzer opslaan"
     confirm delete: "Ja, ik weet het zeker"
@@ -418,9 +527,23 @@ nl:
     update: "Bijwerken"
     color: "Kleur:"
     version field: "Vertaling:"
+    none user: "%{username} heeft geen bladwijzers"
+    blank slate:
+      heading: "Bladwijzers toevoegen aan waardevolle verzen"
+      description: "Terwijl jij in de Bijbel leest, kun je een vers selecteren en er een bladwijzer op plaatsen. Kom hier terug om jouw bladwijzer te bekijken, bewerken, of verwijderen."
+    form:
+      title field: "Titel:"
+      reference field: "Verwijzing:"
+      labels field: "Labels (gescheiden door komma):"
+      colors field: "Kleur:"
+      update button: "Werk Bladwijzer bij"
+      save button: "Bladwijzer opslaan"
   badges:
     earned a badge: "Medaille verdiend"
     user badges: "Medailles van %{user}"
+    earned date: "Door %{username} verdiend %{ago} geleden"
+    none me: "Je hebt nog geen medaille verdiend."
+    none user: "%{username} heeft nog geen medaille verdiend."
   plans:
     title: "Leesplannen"
     browse by category: "Per categorie bladeren"
@@ -565,7 +688,15 @@ nl:
     chapter only: "Sorry, de audiofunctie is niet beschikbaar voor verzen. Kijk in het leesvenster voor audio per hoofdstuk."
     close player menu: "Sluiten"
   highlights:
+    blank slate:
+      heading: "Markeer waardevolle verzen"
+      description: "Terwijl jij in de Bijbel leest, kun je een vers selecteren en het markeren. Kom hier terug om jouw markering te bekijken, bewerken, of verwijderen."
+    none user: "%{username} heeft geen markeringen"
     choose color: "Kleur kiezen"
+    create success: "Markering opgeslagen"
+    create failure: "Fout bij het opslaan van markering"
+    destroy success: "Markering verwijderd"
+    destroy failure: "Fout bij het verwijderen van markering"
     creation error: "Sorry, er kon geen markering gemaakt worden."
     delete error: "Sorry, de markering kon niet verwijderd worden."
   searching:
