--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -7,7 +7,7 @@ pt-BR:
     connection friends: "Aqui estão alguns usuários YouVersion aos quais você está conectado %{connection}:"
     errors:
       no friends: "Nenhum dos seus amigos do %{connection} parecem fazer parte do YouVersion ainda."
-      reset connection: "Desculpe, ocorreu um erro. Por favor desconecte a conexão e tente novamente. "
+      reset connection: "Desculpe, ocorreu um erro. Por favor remova e então refaça esta conexão. "
     email:
       name: "E-mail"
     twitter:
@@ -32,7 +32,12 @@ pt-BR:
     users username not available: "O nome de usuário informado não está disponível."
     users username or password invalid: "O nome de usuário ou senha que você forneceu é inválido. "
     users username required: "Você deve inserir um usuário."
+    users first name required: "Você deve digitar um primeiro nome."
+    users last name required: "Você deve digitar um sobrenome."
   meta:
+    kids_app:
+      title: "O App da Bíblia para Crianças"
+      description: "..."
     100million:
       title: "Começa com 100 Milhões"
       description: "O App da Bíblia foi instalado quase 100 milhões de vezes - um marco incrível! Mas estamos apenas começando. Faça o download do aplicativo gratuito da Bíblia hoje - e, em seguida, compartilhe o aplicativo com seus amigos. Juntos vamos fazer história."
@@ -42,6 +47,8 @@ pt-BR:
     connections:
       index:
         title: "Contas Conectadas"
+  ui:
+    loading indicator text: "Carregando..."
   now: "Agora"
   celebrating 50MM: "Comemorando 50 milhões de instalações!"
   link: "Link"
@@ -129,7 +136,6 @@ pt-BR:
   chapter: "Capítulo"
   bible: "Bíblia"
   notes title: "Anotações"
-  friends: "Amigos"
   groups: "Grupos"
   mobile: "Celular"
   live: "Ao Vivo/Grupos"
@@ -150,7 +156,91 @@ pt-BR:
   or:
     lower: "ou"
     upper: "OU"
+  moments:
+    vod:
+      title: "Versículo do dia"
+    friendship:
+      now friends: "Vocês agora são amigos de"
+    cta:
+      profile update text: "Ajude seus amigos a te encontrar."
+      profile update button: "Atualize o seu perfil"
+      sharing text: "Compartilhe versículos nas redes sociais"
+      sharing button: "Ativar o compartilhamento"
+      friends text: "Veja os momentos de seus amigos na Bíblia."
+      friends button: "Encontre Amigos"
+    action:
+      go to scripture: "Vá para a Bíblia"
+      load more: "Carregar mais"
+      like: "Curtir"
+      like title: "Curta isso"
+      share: "Compartilhar"
+      share title: "Compartilhe isso com a família ou amigos"
+      comment: "Comentário"
+      comment title: "Ver todos os comentários"
+      edit: "Editar"
+      edit highlight title: "Editar esse destaque"
+      edit bookmark title: "Editar esse marcador"
+      edit note title: "Editar essa anotação"
+      delete: "Apagar"
+      delete confirm: "Você tem certeza?"
+      delete highlight title: "Apagar esse destaque"
+      delete bookmark title: "Apagar esse marcador"
+      delete note title: "Apagar essa anotação"
+  notifications:
+    title: "Notificações"
+    none: "Você não possui notificações"
+    no new: "Sem novas notificações"
+    view all: "Visualizar todas a Notificações"
+  comments:
+    post comment: "Publicar um comentário"
+    create success: "Comentário publicado"
+    create failure: "O comentário não pode ser publicado"
+    form:
+      save button: "Publicação"
+  friends:
+    you have N friends: "Você tem %{count} amigos"
+    none me: "Compartilhe seus momentos na Bíblia como marcadores, destaques e anotações com seus amigos mais próximos e familiares."
+    blank slate:
+      heading: "Ainda não são amigos"
+      description: "Você deve ser amigo dessa pessoa para visualizar os seus amigos."
+    limit notice: "Você pode ter no máximo 150 amigos"
+    limit description: "Limitar suas amizades no App da Bíblia às pessoas que você conhece bem cria um ambiente para conversas honestas e descobertas compartilhadas com amigos confiáveis."
+  friendships:
+    offer success: "Pedido de amizade enviado"
+    offer failure: "Erro ao enviar o pedido de amizade"
+    create success: "Vocês agora são amigos"
+    create failure: "Erro ao começar amizade"
+    destroy success: "Pedido rejeitado"
+    destroy failure: "Erro ao rejeitar o pedido"
+    requests title: "Pedidos de amizade"
+    requests view all: "Ver todos os pedidos de amizade"
+    requests none: "Você não tem nenhum pedido de amigo"
+    requests no new: "Sem novos pedidos"
+    status:
+      pending: "Pedido pendente"
+      friends: "Amigos"
+    user wants friendship: "%{user} quer ser seu amigo"
+    user wants friendship partial: "quer ser seu amigo"
+    form:
+      remove friend button: "Excluir amigo"
+      remove friend button title: "Excluir essa pessoa da sua lista de amigos"
+      add friend button: "Adicionar amigo"
+      add friend button title: "Enviar ao %{user} um pedido de amizade"
+      accept button: "Aceitar"
+      accept request button: "Aceitar pedido"
+      ignore button: "Ignorar"
+      ignore request button: "Ignorar pedido"
   notes:
+    none user: "%{username} ainda não fez nenhuma anotação."
+    blank slate:
+      heading: "Você ainda não possui nenhuma anotação"
+      description: "Enquanto você estiver lendo a Bíblia, quando sentir a voz de Deus falando baixinho, você pode escrever rapidamente esses pensamentos aqui. Suas anotações serão marcadas como <em>privadas</em> por padrão. Se você desejar compartilhá-las com seus amigos, simplesmente abra-as e mude-as para <em>públicas</em>."
+    form:
+      title field: "Título:"
+      content field: "Conteúdo:"
+      reference field: "Referência(s):"
+      status field: "Status:"
+      save button: "Salvar"
     list title: "Anotações"
     loading community: "Carregando anotações da comunidade..."
     no community notes: "Não foram encontradas anotações comunitárias com referência aos versículos selecionados. Para criar uma anotação, selecione um versículo no leitor da Bíblia e então clique no botão selecionado no topo do leitor. "
@@ -178,7 +268,10 @@ pt-BR:
     cancel: "Cancelar"
     pop out: "Relocar"
     none found: "Nenhuma anotação encontrada..."
-    successfully deleted: "Anotação removida"
+    create success: "Anotação salva"
+    create failure: "Erro em salvar a anotação"
+    destroy success: "Anotação apagada."
+    destroy failure: "Erro na exclusão da anotação"
   ref:
     loading secondary: "Carregando Referência em Versão Secundária..."
     clear verses: "Apagar Versículos Selecionados"
@@ -209,6 +302,8 @@ pt-BR:
     profile form errors: "O(s) seguinte(s) erro(s) impediu(ram) a atualização do seu perfil:"
     email address: "Endereço de e-mail"
     user name: "Nome de Usuário"
+    first name: "Primeiro nome"
+    last name: "Sobrenome"
     agreement: "Eu concordo com os %{terms_link} do YouVersion."
     terms and conditions: "termos e condições"
     facebook sign up success: "Ótimo! Você se vinculou com o Facebook. Escolha um nome de usuário e senha no YouVersion para continuar."
@@ -238,7 +333,7 @@ pt-BR:
     edit account_existence: "Deletar Conta"
     delete account button: "Deletar Minha Conta YouVersion"
     no devices: "Não há dispositivos conectados à sua Conta YouVersion"
-    no devices download copy: "Baseado na Bíblia online, YouVersion.com, o App da Bíblia é uma Bíblia móvel gratuita que pode ser instalada em quase todos os dispositivos móveis. O App da Bíblia permite que usuários leiam a Bíblia, compartilhem versículos nas mídias sociais, marquem suas passagens favoritas e mais&mdash;tudo em um formato que se encaixa em um estilo de vida cada vez mais móvel. Visite <a href='http://www.youversion.com/pt-BR/mobile'>youversion.com/pt-BR/mobile</a> do seu dispositivo móvel para baixar o App da Bíblia e conectar sua conta! "
+    no devices download copy: "Baseado na Bíblia online, YouVersion o aplicativo, é uma Bíblia móvel gratuita que pode ser instalada em quase todos os aparelhos móveis. O App da Bíblia permite os usuários lerem a Bíblia, compartilhar versículos nas suas redes sociais, marcar suas passagens favoritas e mais&mdash;tudo no formato que acompanha seu estilo de vida móvel. Visite <a href='https://www.bible.com/app'>bible.com/app</a> do seu aparelho móvel para baixar o App da Bíblia e conecte sua conta!"
     yes delete: "Sim, Delete Minha Conta"
     account delete success: "Sua conta YouVersion foi deletada com sucesso. Nós esperamos que você continue encontrando outras maneiras de interagir com a Bíblia. Alguns destes apps podem ser úteis nos seus passos daqui pra frente: <a href= http://pt.a.youversion.com/free-bible-apps> http://pt.a.youversion.com/free-bible-apps</a>"
     delete account description: "Se você deletar sua conta, todas as suas informações, histórico e personalização serão eliminados (como anotações, marcadores, destaques, etc.) dentro do YouVersion.com e o App da Bíblia. Essa ação não pode ser revertida por você ou sua equipe. Se você está certo de que quer prosseguir, siga abaixo. "
@@ -353,6 +448,16 @@ pt-BR:
       general title: "Informações Gerais"
       general text: "Acordo Integral. Estes TERMOS DE USO constitui o acordo integral entre você e a LifeChurch.tv e rege o seu uso do YouVersion, substituindo quaisquer acordos anteriores entre você e a LifeChurch.tv relacionado ao YouVersion. Você também poderá estar sujeito a termos e condições adicionais.%{line_break}Escolha da Lei e Fórum. Os TERMOS DE USO e a relação entre você e a LifeChurch.tv serão regidos pelas leis do Estado de Oklahoma, sem consideração do seu conflito às disposições da lei. Você e a LifeChurch.tv concordam em submeter à jurisdição pessoal e exclusiva dos tribunais localizados no condado de Oklahoma County, Oklahoma.%{line_break}Renúncia e Autonomia dos Termos. A incapacidade da LifeChurch.tv em exercer ou executar qualquer direito ou disposição destes TERMOS DE USO não constituirá uma renúncia de tal direito ou disposição. Se qualquer disposição destes TERMOS DE USO for considerada por um tribunal de jurisdição competente como inválida, as partes concordam que o tribunal deverá tentar dar efeito às intenções das partes como refletido na disposição, e as demais disposições destes TERMOS DE USO permanecerão em pleno vigor e efeito.%{line_break}Sem Direito de Sobrevivência e Não-Transferibilidade. Você concorda que sua conta LifeChurch.tv é intransferível, e quaisquer direitos sobre o seu ID LifeChurch.tv ou conteúdo de sua conta termina após sua morte. Após o recebimento de uma cópia de uma certidão de óbito, a LifeChurch.tv pode encerrar sua conta e excluir permanentemente todos os conteúdos dela.%{line_break}Estatuto de Limitações. Você compreende e concorda que, independentemente de qualquer estatuto ou lei em contrário, qualquer reivindicação ou causa de ação decorrente de ou relacionado ao uso do YouVersion ou estes TERMOS DE USO deve ser apresentado no prazo de um (1) ano após tal reclamação ou causa de ação, ou ser barrado para sempre.%{line_break}Os títulos das seções dentro destes TERMOS DE USO são apenas para conveniência e não têm efeito legal ou contratual."
     profile:
+      blank slate:
+        heading: "Prossiga, não há nada para ver aqui (ainda)"
+        description: "Comece a se envolver com a Bíblia ou seus amigos, e esta página irá mostrar o histórico do que você tem feito."
+      visit friend: "Visite o perfil de %{friend}"
+      tab activity: "Atividade Recente"
+      tab friends: "Amigos"
+      tab notes: "Anotações"
+      tab bookmarks: "Marcadores"
+      tab highlights: "Destaques"
+      tab badges: "Medalhas"
       first name: "Primeiro Nome"
       last name: "Sobrenome"
       email: "Endereço de E-mail"
@@ -392,6 +497,9 @@ pt-BR:
       reading_plans: "Notifique-me sobre informações dos planos de leitura que eu iniciei."
       publishing partners: "Me mantenha informado das novidades dos parceiros de conteúdo do YouVersion."
       update: "Atualizar Notificações"
+      friendships: "Notifique-me a respeito de solicitações de amizade"
+      moments: "Me avise sobre a atividade dos amigos"
+      comments: "Me avise sobre comentários nas minhas atividades"
   bookmarks:
     new: "Novo Marcador "
     edit: "Editar"
@@ -405,9 +513,10 @@ pt-BR:
     not found: "Os marcadores são um guia de referência rápido para suas passagens favoritas ou para o último capítulo que você leu em determinado livro. Para adicionar um marcador, selecione um versículo no leitor da Bíblia e selecione o botão Selecionado na parte superior do leitor."
     other user not found: "%{username} não salvou nenhum marcador ainda."
     creation form errors: "O(s) seguinte(s) erro(s) impediu(ram) a criação de seu marcador: "
-    successfully created: "Marcador Adicionado"
-    successfully deleted: "Marcador Removido"
-    successfully updated: "Marcador Atualizado "
+    create success: "Marcador salvo"
+    destroy success: "Marcador excluído"
+    destroy failure: "Erro ao apagar marcador"
+    update success: "Marcador atualizado"
     labels placeholder: "Separar várias etiquetas com vírgulas"
     save: "Salvar Marcador"
     confirm delete: "Sim, tenho certeza"
@@ -418,9 +527,23 @@ pt-BR:
     update: "Atualizar"
     color: "Cor:"
     version field: "Versão:"
+    none user: "%{username} não tem marcadores"
+    blank slate:
+      heading: "Marque versículos significativos"
+      description: "Enquanto estiver lendo a Bíblia, selecione um versículo e marque-o. Volte aqui para ver, editar ou apagar seu marcador."
+    form:
+      title field: "Título:"
+      reference field: "Referência:"
+      labels field: "Etiquetas (separadas por vírgulas):"
+      colors field: "Cor:"
+      update button: "Atualizar Marcador"
+      save button: "Salvar Marcador"
   badges:
     earned a badge: "Ganhou uma Medalha"
     user badges: "Medalhas de %{user}"
+    earned date: "Ganha pelo %{username} há %{ago} atrás"
+    none me: "Você ainda não ganhou nenhuma medalha."
+    none user: "%{username} ainda não ganhou nenhuma medalha."
   plans:
     title: "Planos de Leitura"
     browse by category: "Buscar por Categoria"
@@ -565,7 +688,15 @@ pt-BR:
     chapter only: "Desculpe, o áudio não está disponível para versículos. Ver no leitor o áudio do capítulo."
     close player menu: "Fechar"
   highlights:
+    blank slate:
+      heading: "Destaque versículos significativos"
+      description: "Enquanto estiver lendo a Bíblia, selecione um versículo e destaque-o. Volte aqui para ver, editar ou apagar seu destaque."
+    none user: "%{username} não tem destaques"
     choose color: "Escolha a cor "
+    create success: "Destaque salvo"
+    create failure: "Erro ao salvar destaque"
+    destroy success: "Destaque apagado"
+    destroy failure: "Erro ao apagar destaque"
     creation error: "Desculpe, não foi possível destacar."
     delete error: "Desculpe, não foi possível remover o destaque."
   searching:
