--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -32,7 +32,12 @@ sq:
     users username not available: "Emri i përdoruesit që dhatë nuk është i disponueshëm."
     users username or password invalid: "Emri i përdoruesit ose fjalëkalimi që dhatë është i pavlefshëm."
     users username required: "Ju duhet të shkruani një emër përdoruesi."
+    users first name required: "Ju duhet të futni emrin tuaj"
+    users last name required: "Ju duhet të futni mbiemrin tuaj"
   meta:
+    kids_app:
+      title: "Programi i Biblës për Fëmijët"
+      description: "..."
     100million:
       title: "Fillon me 100 milionë"
       description: "Programi i Biblës është instaluar pothuaj 100 milionë herë - një gur kilometrik i pabesueshëm! Por ne vetëm sapo fillojmë. Shkarko falas Programin e Biblës sot - dhe pastaj ndaje programin me miqtë e tu. Le të bëjmë histori së bashku."
@@ -42,6 +47,8 @@ sq:
     connections:
       index:
         title: "Llogaritë e lidhura"
+  ui:
+    loading indicator text: "Duke vendosur..."
   now: "Tani"
   celebrating 50MM: "Duke festuar 50 milion instalime të programit!"
   link: "Lidhje"
@@ -129,9 +136,8 @@ sq:
   chapter: "Kapitulli"
   bible: "Bibla"
   notes title: "Shënimet"
-  friends: "Miqtë"
   groups: "Grupet"
-  mobile: "Celular"
+  mobile: "Pajisje e lëvizshme"
   live: "Live/Grupet"
   first page: "Faqja e parë"
   last page: "Faqja e fundit"
@@ -150,7 +156,91 @@ sq:
   or:
     lower: "ose"
     upper: "OSE"
+  moments:
+    vod:
+      title: "Vargu i ditës"
+    friendship:
+      now friends: "Tani ju jeni mik me"
+    cta:
+      profile update text: "Ndihmoji miqtë tuaj të të gjejnë."
+      profile update button: "Përditëso profilin tënd"
+      sharing text: "Ndaj vargje me rrjetet sociale"
+      sharing button: "Aftëso ndarjen"
+      friends text: "Shiko çastet e miqve me Biblën."
+      friends button: "Gjej miq"
+    action:
+      go to scripture: "Shko te shkrimi"
+      load more: "Vendos më shumë"
+      like: "Pëlqej"
+      like title: "Pëlqeje"
+      share: "Ndaje"
+      share title: "Ndaje këtë me miqtë ose familjen"
+      comment: "Komento"
+      comment title: "Shiko të gjitha komentet"
+      edit: "Ndrysho"
+      edit highlight title: "Përpunoje këtë theksim"
+      edit bookmark title: "Përpunoje këtë shenjues"
+      edit note title: "Përpunoje këtë shënim"
+      delete: "Fshij"
+      delete confirm: "A jeni të sigurt?"
+      delete highlight title: "Fshije këtë theksim"
+      delete bookmark title: "Fshije këtë shenjues"
+      delete note title: "Fshije këtë shënim"
+  notifications:
+    title: "Njoftime"
+    none: "Ju nuk keni asnjë njoftim"
+    no new: "Asnjë njoftim i ri"
+    view all: "Shiko të gjitha njoftimet"
+  comments:
+    post comment: "Posto një koment"
+    create success: "Komenti u postua"
+    create failure: "Komenti nuk mund të postohej"
+    form:
+      save button: "Posto"
+  friends:
+    you have N friends: "Ju keni %{count} miq"
+    none me: "Ndani çastet tuaja me Biblën si shenjuesit, theksimet dhe shënimet me familjen dhe miqtë më të ngushtë."
+    blank slate:
+      heading: "Aktualisht s'jeni miq"
+      description: "Ju duhet të jeni miq me këtë njeri për të parë miqtë e tyre."
+    limit notice: "Ju mund të keni deri në 150 miq"
+    limit description: "Kufizimi i miqësisë në Programin e Biblës për ata njerëz që i njeh mirë krijon një mjedis për bashkëbisedime të sinqerta dhe zbulime të ndara me miq të besueshëm."
+  friendships:
+    offer success: "Kërkesa për miqësi u dërgua"
+    offer failure: "Gabim në dërgimin e kërkesës për miqësi"
+    create success: "Ju jeni tani miq"
+    create failure: "Gabim në krijimin e miqësisë"
+    destroy success: "Kërkesa u refuzua"
+    destroy failure: "Gabim në refuzimin e kërkesës"
+    requests title: "Kërkesa miqësie"
+    requests view all: "Shiko të gjitha kërkesat e miqësisë"
+    requests none: "Ju nuk keni asnjë kërkesë miqësie"
+    requests no new: "Asnjë kërkesë e re"
+    status:
+      pending: "Kërkesa në pritje"
+      friends: "Miqtë"
+    user wants friendship: "%{user} dëshiron të jetë miku juaj"
+    user wants friendship partial: "dëshiron të jetë miku juaj"
+    form:
+      remove friend button: "Hiqe mikun"
+      remove friend button title: "Hiqe këtë njeri nga lista e miqve tuaj"
+      add friend button: "Shto mik"
+      add friend button title: "Dërgoji %{user} një kërkesë miqësie"
+      accept button: "Prano"
+      accept request button: "Pranoje kërkesën"
+      ignore button: "Refuzo"
+      ignore request button: "Injoroje kërkesën"
   notes:
+    none user: "%{username} nuk ka krijuar asnjë shënim akoma."
+    blank slate:
+      heading: "Ju nuk keni asnjë shënim akoma"
+      description: "Ndërsa e lexoni Biblën, kur të ndieni zërin e ulët, të butë të Perëndisë duke të folur, mund t'i shtoni kollaj këto mendime këtu. Shënimet tuaja do të shënohen automatikisht si <em>private</em>. Nëse doni të ndani një shënim me miqtë tuaj, thjesht hapeni dhe ndryshojeni në <em>publike</em>."
+    form:
+      title field: "Titulli:"
+      content field: "Përmbajtja:"
+      reference field: "Referenca(t):"
+      status field: "Statusi:"
+      save button: "Ruaje"
     list title: "Shënime"
     loading community: "Duke hapur shënimet e komunitetit..."
     no community notes: "Nuk u gjet asnjë shënim komuniteti referuar vargjeve të përzgjedhuara. Për të krijuar një shënim, përzgjidh një varg në lexuesin e Biblës dhe më pas kliko butonin Përzgjedhës në krye të lexuesit."
@@ -178,7 +268,10 @@ sq:
     cancel: "Anulo"
     pop out: "Shfaqet befas"
     none found: "Nuk u gjet asnjë shënim..."
-    successfully deleted: "Shënimi u fshi"
+    create success: "Shënimi u ruajt"
+    create failure: "Gabim në ruajtjen e shënimit"
+    destroy success: "Shënimi u fshi"
+    destroy failure: "Gabim me fshirjen e shënimit"
   ref:
     loading secondary: "Duke vendosur referimin në versionin e dytë..."
     clear verses: "Pastro vargjet e përzgjedhura"
@@ -209,6 +302,8 @@ sq:
     profile form errors: "Gabimi(et) më poshtë ndaloi(uan) përditësimin e profilit tuaj:"
     email address: "Adresa elektronike"
     user name: "Emri i përdoruesit"
+    first name: "Emri"
+    last name: "Mbiemri"
     agreement: "Pajtohem me %{terms_link} e YouVersion."
     terms and conditions: "kushtet dhe përcaktimet"
     facebook sign up success: "Shkëlqyeshëm! Ju jeni autorizuar me Facebook. Zgjidhni një emër përdoruesi dhe fjalëkalim të YouVersion për të vazhduar."
@@ -238,7 +333,7 @@ sq:
     edit account_existence: "Fshij llogarinë"
     delete account button: "Fshije llogarinë time YouVersion"
     no devices: "Asnjë pajisje nuk është e lidhur me llogarinë tuaj YouVersion"
-    no devices download copy: "Bazuar në Biblën online, YouVersion.com, Programi i Biblës është një Bibël falas lëvizëse që mund të instalohet pothuaj në çdo aparat celular. Programi i Biblës u jep mundësi përdoruesve të lexojnë Biblën, të ndajnë vargje me rrjetet e tyre sociale, të shënojnë pjesët e tyre të preferuara dhe më tepër&mdash;të gjitha në një format që ecën bashkë me mënyrën e tyre lëvizëse të jetës. Vizitoni <a href='http://www.youversion.com/download'>youversion.com/download</a> nga aparati tuaj i celularit për të shkarkuar Programin e Biblës dhe për të lidhur llogarinë tuaj!"
+    no devices download copy: "Bazuar në Biblën online, YouVersion, Programi i Biblës ëhstë një Bibël falas e lëvizshme që mund të instalohet në pothuaj çdo pajisje të lëvizshme. Programi i Biblës u mundëson përdoruesve të lexojnë Biblën, të ndajnë vargje në rrjetet e tyre sociale, të shënojnë pjesët e preferuara dhe shumë më tepër&mdash;të gjitha në një format që ruan mënyrën e tyre në rritje lëvizëve. Vizitoni <a href='https://www.bible.com/app'>bible.com/app</a> nga pajisja juaj e lëvizshme për të shkarkuar Programin e Biblën dhe për të lidhur llogarinë tuaj!"
     yes delete: "Po, fshije llogarinë time"
     account delete success: "Llogaria juaj YouVersion është fshirë në mënyrë të suksesshme. Ne shpresojmë që ju do të vazhdoni të gjeni mënyra domethënëse për të ndërvepruar me Biblën. Disa nga këto programe mund të jenë ndihmuese ndërsa ecni përpara: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Nëse e fshini llogarinë tuaj, ju do të eleminoni përgjithmonë të gjithë informacionin tuaj, historinë dhe personalizimet (si p.sh, shënimet, shenjuesit, theksimet etj.) brenda YouVersion.com dhe Programit të Biblës. Ky veprim nuk mund të kthehet mbrapsht nga ju apo ekipi ynë. Nëse jeni të sigurtë të ecni përpara, vazhdoni më poshtë."
@@ -353,6 +448,16 @@ sq:
       general title: "Informacion i përgjithshëm"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Vazhdo, asgjë për të parë këtu (akoma)"
+        description: "Fillo të lidhesh me Biblën, ose me miqtë tuaj, dhe kjo faqe do të shfaq historikun e bashkëveprimeve të bëra."
+      visit friend: "Vizito profilin për %{friend}"
+      tab activity: "Aktiviteti"
+      tab friends: "Miqtë"
+      tab notes: "Shënime"
+      tab bookmarks: "Shenjuesit"
+      tab highlights: "Theksime"
+      tab badges: "Emblemat"
       first name: "Emri"
       last name: "Mbiemri"
       email: "Adresa elektronike"
@@ -392,6 +497,9 @@ sq:
       reading_plans: "Më njofto rreth informacionit për planet e leximit që kam filluar."
       publishing partners: "Më mbaj të përditësuar për lajmet rreth përmbajtjes së partnerëve të YouVersion."
       update: "Përditëso njoftimet"
+      friendships: "Më njofto rreth kërkesave të miqësisë"
+      moments: "Më njofto rreth aktivitetit të miqve"
+      comments: "Më njofto rreth komenteve për aktivitetin tim"
   bookmarks:
     new: "Shenjues i ri"
     edit: "Redakto"
@@ -405,9 +513,10 @@ sq:
     not found: "Shenjuesit ju japin ju një referencë udhërrëfyese të shpejtë për pasazhet tuaja të preferuara apo për kapitullin e fundit që lexoni në një libër të caktuar. Për të shtuar një shenjues, përzgjidhni një varg në lexuesin e Biblës dhe më pas klikoni butonin Përzgjedhës në krye të lexuesit."
     other user not found: "Përdoruesi %{username} nuk ka ruajtur ende asnjë shenjues."
     creation form errors: "Gabimi(et) më poshtë e kanë penguar krijimin e shenjuesit tuaj:"
-    successfully created: "Shenjuesi u shtua"
-    successfully deleted: "Shenjuesi u fshi"
-    successfully updated: "Shenjuesi u përditësua"
+    create success: "Shënjuesi u ruajt"
+    destroy success: "Shenjuesi u hoq"
+    destroy failure: "Gabim me fshirjen e shenjuesit"
+    update success: "Shenjuesi u përditësua"
     labels placeholder: "Ndaji etiketat e shumta me një presje."
     save: "Ruaj shenjuesin"
     confirm delete: "Po, jam i/e sigurt"
@@ -418,9 +527,23 @@ sq:
     update: "Përditësim"
     color: "Ngjyra:"
     version field: "Versioni:"
+    none user: "%{username} nuk ka asnjë shenjues"
+    blank slate:
+      heading: "Shëno vargje domethënëse"
+      description: "Ndërsa e lexoni Biblën, zgjidhni një varg dhe shënojeni atë. Kthehuni këtu për të parë, ndryshuar apo fshirë shenjuesit tuaj."
+    form:
+      title field: "Titulli:"
+      reference field: "Referenca:"
+      labels field: "Etiketat (të ndara me presje):"
+      colors field: "Ngjyra:"
+      update button: "Përditëso Shenjuesin"
+      save button: "Ruaj shenjuesin"
   badges:
     earned a badge: "Fituat një emblemë"
     user badges: "Emblemat e përdoruesit %{user}"
+    earned date: "Fituar nga përdoruesi %{username} %{ago} më parë"
+    none me: "Ju nuk keni fituar akoma ndonjë emblemë."
+    none user: "Përdoruesi %{username} nuk ka fituar akoma ndonjë emblemë."
   plans:
     title: "Planet e leximit"
     browse by category: "Shfletoni sipas kategorisë"
@@ -565,7 +688,15 @@ sq:
     chapter only: "Më vjen keq, audio nuk është e disponueshme për vargjet. Shihni te lexuesi për kapitujt me audio."
     close player menu: "Mbyll"
   highlights:
+    blank slate:
+      heading: "Thekso vargje domethënëse"
+      description: "Ndërsa e lexoni Biblën, zgjidhni një varg dhe theksoheni atë. Kthehuni këtu për të parë, ndryshuar apo fshirë theksimet tuaja."
+    none user: "%{username} nuk ka asnjë theksim"
     choose color: "Zgjidhni ngjyrën"
+    create success: "Theksimi u ruajt"
+    create failure: "Gabim me ruajtjen e theksimit"
+    destroy success: "Theksimi u fshi"
+    destroy failure: "Gabim me fshirjen e theksimit"
     creation error: "Na falni, theksimi nuk mund të kryhet."
     delete error: "Më vjen keq, nuk mund të heq theksimin."
   searching:
@@ -579,7 +710,7 @@ sq:
   donate:
     donate now: "Dhuro tani"
     donate now intl: "ose dhuroni ndërkombëtarisht"
-    promo 1: "Për çdo 1$ që ju jepni, 10 njerëz më shumë mund të përdorin Biblën në telefonat e tyre celularë. "
+    promo 1: "Për çdo 1$ që ju jepni, 10 njerëz më shumë mund të përdorin Biblën në pajisjet e tyre të lëvizshme."
     promo 2: "Me YouVersion, Bibla është gjithmonë pranë. Shikoni videon tonë."
     promo 3: "Këtë vit, më shumë se 5 miliardë njerëz do të përdorin një telefon celular. Dhuroni tani."
     headline: "Gjithësecili ka nevojë për Fjalën e Perëndisë."
@@ -654,9 +785,9 @@ sq:
     h2: "Fjala e Zotit është me ty."
     h3: "YouVersion është Global"
     h3 sub: "E disponueshme në më shumë se 100 gjuhë në mbarë botën."
-    main: "Dhjetëra miliona njerëz po përdorin Programin e Biblës&trade; për ta bërë Fjalën e Perëndisë pjesë të jetës së tyre të përditshme. Shkarko programin falas dhe përdor shenjuesit e tu, shënimet dhe planet e leximit kudo. Shijo qindra versione, duke përfshirë ato audio, në aparatin tuaj celular."
+    main: "Dhjetëra miliona njerëz po përdorin Programin e Biblës&trade; për ta bërë Fjalën e Perëndisë pjesë të jetës së tyre të përditshme. Shkarko programin falas dhe përdor shenjuesit e tu, shënimet dhe planet e leximit kudo. Shijo qindra versione, duke përfshirë ato audio, në pajisjen tuaj të lëvizshme."
     button h4: "Shko te Bible.com/app"
-    button h4 sub: "Në telefonin tuaj celular"
+    button h4 sub: "Në Pajisjen Tuaj të Lëvizshme"
     download now: "Shkarko Programin e Biblës tani"
     what people: "Çfarë njerëzit janë duke thënë rreth programit falas të Biblës..."
     t1: "Unë e kam gjithnmonë Fjalën."
