--- a/config/locales/sw.yml
+++ b/config/locales/sw.yml
@@ -32,7 +32,12 @@ sw:
     users username not available: "Jina la matumizi uliyopeana inatumiwa kwingine "
     users username or password invalid: "Jina la matumizi na neno la siri uliyopeana si sawa "
     users username required: "Lazima uweke jina la matumizi "
+    users first name required: "Lazima uingize jina la kwanza."
+    users last name required: "Lazima uingize jina la mwisho."
   meta:
+    kids_app:
+      title: "Apu ya Biblia kwa ajili ya watoto"
+      description: "..."
     100million:
       title: "Inaanza na milioni 100"
       description: "App ya Biblia imewekwa karibia mara milioni 100 - ni hatua ua ajabu! Lakini ndio kwanza tumeanza. Download bure App yaBiblia leo -  na washirikisha marafiki zako. Tutengeneze ukumbusho pamoja."
@@ -42,6 +47,8 @@ sw:
     connections:
       index:
         title: "akaunti zilizounganishwa"
+  ui:
+    loading indicator text: "inatafuta.."
   now: "saa hii"
   celebrating 50MM: "Tunasherehekea ufunguaji wa App milioni 50!"
   link: "Kiungo"
@@ -129,7 +136,6 @@ sw:
   chapter: "Sura"
   bible: "Bibilia"
   notes title: "maelezo"
-  friends: "marafiki"
   groups: "makundi"
   mobile: "rununu"
   live: "Maisha/Makundi"
@@ -150,7 +156,91 @@ sw:
   or:
     lower: "au"
     upper: "AU"
+  moments:
+    vod:
+      title: "Fungu la siku"
+    friendship:
+      now friends: "Wewe sasa ni marafiki na"
+    cta:
+      profile update text: "Saidia marafiki zako kukupata"
+      profile update button: "wezesha profaili yako"
+      sharing text: "Shirikisha mafungu na mitandao ya kijamii"
+      sharing button: "wezesha kushirikiana"
+      friends text: "Angalia mambo yanayomjiri rafiki yako katika Biblia."
+      friends button: "Tafuta marafiki"
+    action:
+      go to scripture: "Nenda kwenye maandiko"
+      load more: "ongeza zaidi"
+      like: "penda"
+      like title: "penda hii"
+      share: "husisha wengine/jumuisha"
+      share title: "shirikisha hiki kwa marafiki au familia"
+      comment: "maoni"
+      comment title: "angalia maoni yote"
+      edit: "Hariri"
+      edit highlight title: "Hariri onyesho hili"
+      edit bookmark title: "Hariri alamisho hili"
+      edit note title: "Hariri elezo hili"
+      delete: "Ondoa"
+      delete confirm: "Unahuakika?"
+      delete highlight title: "Futa onyesho hili"
+      delete bookmark title: "Futa alamamisho hili"
+      delete note title: "futa elezo hili"
+  notifications:
+    title: "Taarifa"
+    none: "Huna taarifa yoyote"
+    no new: "Hakuna taarifa mpya"
+    view all: "Onyesha taarifa zote"
+  comments:
+    post comment: "Andika maoni"
+    create success: "Maoni yametumwa"
+    create failure: "Maoni haya kuweza kutumwa"
+    form:
+      save button: "Tuma"
+  friends:
+    you have N friends: "unamarafiki %{count}"
+    none me: "Shirikisha wakati wako katika Biblia kama vile maalamisho, mambo muhimu, na maelezo kwa marafiki zako wa karibu na familia."
+    blank slate:
+      heading: "Kwa sasa sio marafiki"
+      description: "Lazima uwe rafiki na mtu huyu ili kuona marafiki zao."
+    limit notice: "Unaweza kawa na marafiki wengi kama 150"
+    limit description: "Kuwa na kiwango cha marafiki kwenye Apu ya Biblia kwa watu unaowajua vizuri inajenga mazingira yenye mazungumzo waaminifu na uvumbuzi pamoja na marafiki unaowaamini."
+  friendships:
+    offer success: "Ombi la urafiki limetumwa"
+    offer failure: "Hitilafu wakati wa kutuma ombi la urafiki"
+    create success: "Sasa ni marafiki"
+    create failure: "Hitilafu kujenga urafiki"
+    destroy success: "Ombi limekataliwa"
+    destroy failure: "Hitilafu kukanusha urafiki"
+    requests title: "Maombi ya urafiki"
+    requests view all: "Onyesha maombi yote ya urafiki"
+    requests none: "Huna ombi lolote la urafiki"
+    requests no new: "Hana maombi mapya"
+    status:
+      pending: "Ombi linasubiri jibu"
+      friends: "Marafiki"
+    user wants friendship: "%{user} anataka kuwa rafiki yako"
+    user wants friendship partial: "anataka kuwa rafiki yako"
+    form:
+      remove friend button: "Ondoa rafiki"
+      remove friend button title: "Muondoe huyu mtu kwenye orodha yangu ya marafiki"
+      add friend button: "Ongeza rafiki"
+      add friend button title: "Tuma %{user} ombi la urafiki"
+      accept button: "Kubali"
+      accept request button: "Kubali ombi"
+      ignore button: "Puuzia"
+      ignore request button: "Puuzia ombi"
   notes:
+    none user: "%{username} hana maelezo yoyote."
+    blank slate:
+      heading: "Huna maelezo yoyote"
+      description: "Unaposoma Biblia, wakati unaposikia sauti ndogo , ya Mungu akizungumza unaweza kwa haraka kuongeza mawazo hayo hapa. Maelezo yako yata alamamishwa kama <em> binafsi </ em> na default. Kama ukipenda kushirikisha maelezo yako kwa marafiki zako,  kufungua na badili kwa <em> jamii </ em>."
+    form:
+      title field: "kichwa cha habari:"
+      content field: "maudhui:"
+      reference field: "kumbukumbu"
+      status field: "Hali:"
+      save button: "hifadhi/okoa"
     list title: "maelezo"
     loading community: "Inafungua dondoo zako za jumuia"
     no community notes: "Hakuna vidokezo vya jamii zilizorejea mistari ulizochagua. Kutengeneza dokezo , chagua mstari katika Biblia  na kisha bonyeza kitufe kilicho juu."
@@ -178,7 +268,10 @@ sw:
     cancel: "Ondoa"
     pop out: "toa nje"
     none found: "Hakuna dondoo zilizopatikana"
-    successfully deleted: "dondoo ilitolewa"
+    create success: "Elezo limetunzwa"
+    create failure: "Hitilafu katika utunzaji wa elezo"
+    destroy success: "Elezo limeondolewa"
+    destroy failure: "Hitilafu kuondoa elezo"
   ref:
     loading secondary: " Marejeo yanatolewa katika Toleo Sekondari ..."
     clear verses: "Ondoa mistari iliyochaguliwa"
@@ -209,6 +302,8 @@ sw:
     profile form errors: "kosa/makosa yafuatayo yamezuia uwezeshaji wa utambulisho wako:"
     email address: "barua pepe"
     user name: "jina la mtumiaji"
+    first name: "Jina la kwanza"
+    last name: "Jina la mwisho"
     agreement: "Nakubaliana na YouVersion %{terms_link}."
     terms and conditions: "masharti na sheria"
     facebook sign up success: "Vizuri! umeidhinishwa na facebook. chagua jina la mtumiaji na kitambulisho cha siri ili kuendelea."
@@ -238,7 +333,7 @@ sw:
     edit account_existence: "Futa akaunti"
     delete account button: "Futa akaunti yangu ya YouVersion"
     no devices: "Hakuna kifaa chenye uhusiano na akauti yako ya YouVersion."
-    no devices download copy: "Kulingana na Biblia iliyo kwenye mtandao, YouVersion.com, App ya Biblia ni bure kwenye simu Biblia inayoweza kuwa imewekwa kwenye kifaa karibu yoyote ya simu. App ya Biblia inaruhusu watumiaji kusoma Biblia ,kueneza mistari  kwenye mitandao yao ya kijamii, kuweka alama kwenye  vifungu wanavyopenda, yote kwenye njia inayoendanisha  na mitindo ya rununu zao. Tembelea  <a href='https://www.bible.com/download'>bible.com/download</a>kutoka simu yako ya kifaa kupakua App ya Biblia na kuunganisha akaunti yako!"
+    no devices download copy: "Kulingana na Biblia ya hewani, YouVersion, App ya Biblia ni Biblia ya bure ya simu ambayo inaweza kuwekwa kwenye simu ya mkononi karibu yoyote. Apu ya Biblia inaruhusu watumiaji kusoma Biblia,  kushiriki mafungu na mitandao yao ya kijamii, kualamamisha mafungu uyapendao, na zaidi-yote katika mfumo unaoendena na ongezeko wa utumiaji wa simu za mkononi. Ziara ya <a href='https://www.bible.com/app'> bible.com / programu </ a> kutoka kwa kifaa yako ya simu kushusha App Biblia na kuungana akaunti yako!"
     yes delete: "Ndio, Futa akaunti yangu"
     account delete success: "Akaunti yako ya YouVersion imetolewa. Tunatumaini kuwa utaendelea kutafuta njia ya maana kujijulisha mambo ya bibilia. Vitumizi hivi vinaweza kukusaidia unaposonga mbele:<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Ukifuta akaunti yako utatapoteza habari zako,historia yako, na ubinafsishaji (kama vile maelezo, maalamisho, mambo muhimu, nk) zilizondani ya YouVersion.com na apu ya Bibilia. Tendo hili haliwezi kurekebishwa na wewe au mtu wa timu yako. Ikiwa unauhakika ungependa kuendelea endelea hapa chini"
@@ -353,6 +448,16 @@ sw:
       general title: "habari kwa ujumla"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Endelea kwenda, hakuna chochote cha kuona hapa (bado)"
+        description: "Anza kujihusisha na Biblia, au marafiki zako, na ukurasa huu utaonyesha historia ya kinachoendelea."
+      visit friend: "Tembelea profaili ya ma %{friend}"
+      tab activity: "Shughuli"
+      tab friends: "Marafiki"
+      tab notes: "maelezo"
+      tab bookmarks: "Malamisho"
+      tab highlights: "Mambo muhimu:"
+      tab badges: "Nishani"
       first name: "jina la kwanza"
       last name: "jina la mwisho"
       email: "barua pepe"
@@ -392,6 +497,9 @@ sw:
       reading_plans: "nijulishe kuhusu taarifa ya mpango wangu wa usomaji nilioanza."
       publishing partners: "Nipe ujumbe kutoka kwa washirika wa YouVersion"
       update: "Wezesha taarifa."
+      friendships: "Nijulishe kuhusu maombi ya urafiki"
+      moments: "Nijulishe kuhusu shughuli za marafiki"
+      comments: "Nijulishe kuhusu maoni juu ya shughuli zangu"
   bookmarks:
     new: " Alamisho mpya"
     edit: "Hariri"
@@ -405,9 +513,10 @@ sw:
     not found: "Alama kukupa mwongonzo wa haraka wa kurejea kwa vifungu vyako unavyopenda au sura ya mwisho uliyosoma katika kitabu maalum. Kuongeza alama, chagua mstari katika Biblia na kisha bofya batani iliyochaguliwa juu ya kifaa cha kusomea."
     other user not found: "%{username} bado hajahifadhi alama zozote."
     creation form errors: "Makosa  yafuatayo(s) yalikuzuia kutengeneza alama"
-    successfully created: "alama imeongezwa"
-    successfully deleted: "alama imetolewa"
-    successfully updated: "alama Imesharekibishwa"
+    create success: "Alama ya kumbukumbu imehifadhiwa"
+    destroy success: "Alama imetolewa"
+    destroy failure: "Hitilafu katika kuondoa alama"
+    update success: "Alamamisho limekuwa updated"
     labels placeholder: "Gawa maandiko tofauti na alama za mkato."
     save: "Hifadhi alama"
     confirm delete: "Ndio, ninahuakika"
@@ -418,9 +527,23 @@ sw:
     update: "Wezesha"
     color: "Rangi:"
     version field: "Toleo:"
+    none user: "%{username} hana maalamisho"
+    blank slate:
+      heading: "Alamamisha mafungu yenye maana"
+      description: "Wakati wa kusoma Biblia, kuchagua fungu na lialamishe. Rudi hapa kuona, hariri, au kufuta alama yako."
+    form:
+      title field: "kichwa cha habari:"
+      reference field: "rejea"
+      labels field: "Lebo(koma_tenganisha):"
+      colors field: "Rangi:"
+      update button: "Alamisha upya"
+      save button: "Hifadhi alama"
   badges:
     earned a badge: "beji ulizopata"
     user badges: "%{user} beji"
+    earned date: "Zimepatwa na %{username} %{ago} mda uliyopita"
+    none me: "Haujapata beji zozote."
+    none user: "%{username} hajapata beji zozote."
   plans:
     title: "Mipango ya usomaji"
     browse by category: "Tafuta kwa Jamii"
@@ -565,7 +688,15 @@ sw:
     chapter only: "Samahani, sauti haipo kwenye mistari hii. Soma kwa msomo ili upate sauti ya mlango."
     close player menu: "funga"
   highlights:
+    blank slate:
+      heading: "Onyesha mafungu yenye maana"
+      description: "Wakati wa kusoma Biblia, kuchagua fungu na lionyeshe kwa rangi. Rudi hapa kuona, hariri, au kufuta onyesha lako."
+    none user: "%{username} hana maonyesho"
     choose color: "Chagua rangi"
+    create success: "Onyesho limetunzwa"
+    create failure: "Hitilafu katika kutunza onyesho"
+    destroy success: "Onyesho limefutwa"
+    destroy failure: "Hitilafu katika kufuta onyesho"
     creation error: "Samahani, haikuwezekana kubainisha maandishi hayo."
     delete error: "Samahani, haikuwezekana kuondoa ubainisho huo"
   searching:
