--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -37,6 +37,7 @@ ta:
       title: "இது தொடங்குவது 100 மில்லியனில் "
       description: "ஏறக்குறைய 10 கோடி முறை பைபிள் App நிறுவப்பட்டுள்ளது - இது ஒரு வியத்தகு மைல்கல்! ஆனால் நாம் இப்பொழுதே ஆரம்பித்துள்ளோம். இன்றே இலவச பைபிள் App ஐ பதிவிறக்கம் செய்யுங்கள் - அதன்பின் அதை உங்கள் நண்பர்களுடன் பகிர்ந்து கொள்ளுங்கள். நாம் இணைந்து வரலாறு படைப்போம்."
     mobile:
+      title: "வேதாகம பயன்பாடு"
       description: "தேவனின் வசனத்தை தங்களது அன்றாட வாழ்வில் ஒரு பகுதியாக செய்ய பல லட்சக்கணக்கான மக்கள் பைபிள் App ஐ பயன்படுத்தி கொண்டிருக்கிறார்கள்.  இலவச பயன்பாட்டை பதிவிறக்கி உங்கள் புக்மார்க்குகள், குறிப்புகள், மற்றும் வாசிப்பு திட்டங்களை எங்கிருந்தும்  அணுகுங்கள். உங்கள் மொபைல் சாதனத்தில் ஆடியோ உட்பட ல் நூற்றுக்கணக்கான பதிப்புகளை கண்டுமகிழலாம்."
     connections:
       index:
@@ -128,8 +129,6 @@ ta:
   chapter: "அதிகாரம்"
   bible: "வேதாகமம்"
   notes title: "குறிப்புகள்"
-  videos: "வீடியோக்கள்"
-  friends: "நண்பர்கள்"
   groups: "குழுக்கள்"
   mobile: "மொபைல்"
   live: "நேரடி/குழுக்கள்"
@@ -150,7 +149,20 @@ ta:
   or:
     lower: "அல்லது"
     upper: "அல்லது"
+  moments:
+    action:
+      like: "விரும்பு"
+      share: "பகிர்"
+      edit: "திருத்து"
+  friendships:
+    status:
+      friends: "நண்பர்கள்"
   notes:
+    form:
+      title field: "தலைப்பு:"
+      content field: "உள்ளடக்கம்:"
+      reference field: "மேற்கோள்(கள்)"
+      save button: "சேமி"
     list title: "குறிப்புகள்"
     loading community: "சமூக குறிப்புகள் ஏற்றபட்டு கொண்டிருக்கிறது......"
     no community notes: "தேர்வு செய்யப்பட்டுள்ள வசனங்களோடு தொடர்புள்ள  சமூக குறிப்புகள் எதுவும் காணப்படவில்லை. குறிப்பு உருவாக்க, பைபிள் ரீடரில்  ஒரு வசனத்தை தேர்ந்தெடுத்த பின் ரீடரின் மேலே உள்ள Selected பொத்தானை கிளிக் செய்யவும்."
@@ -178,7 +190,6 @@ ta:
     cancel: "ரத்துசெய்"
     pop out: "குதித்து  வந்தவை  "
     none found: "குறிப்புகள் காணவில்லை"
-    successfully deleted: "குறிப்பு அகற்றப்பட்டது "
   ref:
     loading secondary: "இரண்டாம்நிலை பதிப்பில் மேற்கோளை  ஏற்றிக் கொண்டிருக்கிறது ... "
     clear verses: "தேர்ந்தெடுக்கப்பட்ட வசனங்களை நீக்கவும் "
@@ -238,7 +249,6 @@ ta:
     edit account_existence: "கணக்கை நீக்கி விடவும்"
     delete account button: "எனது YouVersion கணக்கை நீக்கி விடவும்"
     no devices: "சாதனங்கள் ஒன்றும் உங்கள் YouVersion Account  -டுடன் இணைக்க பட்டிருக்கவில்லை. "
-    no devices download copy: "ஆன்லைன் பைபிளின்  அடிப்படையில், YouVersion.com , பைபிள் பயன்பாடு எந்த மொபைல் சாதனத்திலும் நிறுவ கூடிய ஒரு இலவச மொபைல் பைபிள் ஆகும். பைபிளை வாசிக்கவும், தங்கள் சமூக வலைப்பின்னல்களில் வேத வசனங்களை  பகிர்ந்து கொள்ளவும், அவர்களுக்கு  பிடித்த பத்திகளை புக்மார்க் செய்து கொள்ளவும் மேலும் பலவற்றை செய்ய இந்த பைபிள் பயன்பாடு, பயனர்களை  அனுமதிக்கிறது.இவை எல்லாம் அவர்களில் அதிகமாகி வரும் மொபைல் வாழ்க்கை முறையோடு ஒத்து போகும் ஒரு வடிவத்தில் உள்ளது.உங்கள் மொபைல் சாதனத்தில் இந்த பைபிள் பயன்பாட்டினை  பதிவிறக்கம் செய்யவும் மற்றும் உங்கள் கணக்கை இணைக்க<a href='http://www.youversion.com/download'>youversion.com/download</a> \nவருக."
     yes delete: "ஆம், எனது கணக்கை நீக்கி விடவும்"
     account delete success: "உங்கள் YouVersion கணக்கு நீக்கப்பட்டுவிட்டது. நீங்கள் தொடர்ந்து பைபிளோடு ஊடாட அர்த்தமுள்ள வழிகளை கண்டுபிடிப்பீர்கள் என்று நம்புகிறோம். நீங்கள் முன்னோக்கி செல்லும்போது இந்த பயன்பாடுகளில் சில பயனுள்ளதாக இருக்கலாம்.<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "நீங்கள் உங்கள் கணக்கை நீக்கினீர்கள் என்றால், YouVersion.com மற்றும் பைபிள் பயன்பாடு இவைக்கு உள்ளில் உள்ள உங்களின் எல்லா தகவல், வரலாறு, மற்றும் தனிப்பயனாக்கம் (இந்த குறிப்புகள், புக்மார்க்குகள், சிறப்பு, போன்றவை)   அனைத்தும் நிரந்தரமாக அழிக்கப்பட்டுவிடும். உங்களாலோ அல்லது எங்கள் குழுவினாலோ இந்த நடவடிக்கையை மாற்ற இயலாது. நீங்கள் உறுதியாகவே  இதை செய்ய விரும்புகிறீர்கள் என்றால், கீழே செல்லுங்கள்."
@@ -294,6 +304,7 @@ ta:
       information use title: "உங்கள் தகவலை நாங்கள் எப்படி பயன்படுத்துகிறோம்?"
       information use text: "நீங்கள் பதிவு செய்தல் தேவையுள்ள  ஒரு குறிப்பிட்ட சேவைக்கு  பதிவுபெறும் போது, நாங்கள் தனிப்பட்ட தகவல்களை தரும்படி உங்களை கேட்கிறோம். எந்த நோக்கத்திற்காக சேகரிக்கப்பட்டதோ அதிலிருந்து வேறுபட்ட வகையில்  இந்த தகவலை பயன்படுத்த LifeChurch.tv விரும்பினால், அப்படி பயன்படுத்துவதற்கு முன்னர் நாங்கள் உங்களிடம்  அனுமதி கேட்போம். எங்களின்  சேவைகளில் எதற்கா வது உங்களின் தனிப்பட்ட தகவலை சமர்ப்பிக்க மறுக்கும்பட்சம் உங்களுக்கு அந்த சேவைகளை எங்களால் வழங்க முடியாது."
       information security title: "எப்படி உங்கள் தகவலை நாங்கள் பாதுகாக்கிறோம்?"
+      information security text: "Lifechurch.tv உங்கள் தனிப்பட்ட விவரங்களை உங்களின் பிரத்தியேக அனுமதியின்றி Lifechurch.tv க்கு வெளிப்பட்ட பிற நிறுவனங்களுடன் பகிர்ந்து கொள்ளாது. உங்கள் தனிப்பட்ட விவரங்களை அணுகுதல், பயன்படுத்துதல், பாதுகாத்தல் அல்லது வெளிப்படுத்துதல் கீழ்காண்பவற்றிற்கு தேவைப்படும் பட்சத்தில், Lifechurch.tv அவற்றைப் பகிர்ந்து கொள்ளக்கூடும். (அ) நடைமுறைப்படுத்தக்கூடிய சட்டம், வரைமுறை, சட்ட முறைமை அல்லது அமலாக்கப்படத்தக்க அரசாங்க விண்ணப்பம், (ஆ) பயன்பாட்டு விதிமுறைகளை அமல்படுத்த, விதிமீறல்களை ஆய்வுசெய்ய, (இ) மோசடி, பாதுகாப்பு மற்றும் தொழில்நுட்ப பிரச்சினைகளைக் கண்டுபிடிக்க, தடுக்க அல்லது எதிர்கொள்ள, மற்றும் (ஈ) சட்டரீதியாக அல்லது சட்டத்திற்குட்பட்டு, Lifechurch.tv, அதின் பயனாளர்கள் அல்லது பொதுமக்களின் உரிமைகள், சொத்து மற்றும் பாதுகாப்பிற்கு பங்கம் விளைவிப்பதிலிருந்து பாதுகாக்க. அங்கீகரிக்கப்படாத அணுகல் அல்லது அங்கீகரிக்கப்படாத மாற்றம், தரவை வெளிப்படுத்துதல் அல்லது அழித்தல் போன்றவற்றிலிருந்து பாதுகாக்க, Lifechurch.tv, தக்க பாதுகாப்பு நடவடிக்கைகளை எடுக்கிறது. இது எம்முடைய தரவு தொகுப்புகளின் மறுஆய்வு, சேமிப்பு மற்றும் செயலாக்க நடைமுறைகள் மற்றும் பாதுகாப்பு நடைமுறைகள், மற்றும் தனிப்பட்ட தரவுகளை நாங்கள் சேமிக்கும் அமைப்புகளுக்கு அங்கீகரிக்கப்படாத அணுகல்களைத் தடுக்க ஆள்ரீதியான பாதுகாப்பு ஏற்பாடுகளையும் உள்ளடக்கும்.  தனது ஊழியர்களோ, ஒப்பந்ததாரர்களோ அல்லது முகவர்களோ உங்களின் பிரத்தியேக அனுமதியின்றி, தனிப்பட்ட தகவல்களை அணுகுவதை Lifechurch.tv தடுக்கிறது. இவர்களுக்கு இத்தகவல்கள் எங்கள் சேவைகளை செயலாக்க, அபிவிருத்தி செய்ய அல்லது முன்னேற்ற தேவைப்படுகிறது. இத்தனிநபர்கள் இரகசியத்தன்மைகளுக்குரிய கடமைகளுக்கு கட்டுப்பட்டிருப்பதால் அக்கடமைகளைச் செய்யத் தவறும்போது வேலைநீக்கம் மற்றும் குற்றவியல் வழக்கு போன்றவற்றை உள்ளடக்கிய ஒழுங்குமுறை நடவடிக்கைகளுக்கு உட்படுத்தப்படுவர்."
       data integrity title: "do not translate"
       data integrity text: "do not translate"
       information access title: "do not translate"
@@ -352,6 +363,10 @@ ta:
       general title: "பொதுவான தகவல்கள்"
       general text: "முழு ஒப்பந்தம். இந்த உபயோக விதிமுறைகள், உங்களுக்கும்  LifeChurch.tv -க்கு மிடையேயான  முழு உடன்பாடாய் அமைந்து   உங்கள் YouVersion பயன்பாட்டை கட்டுப்படுத்தவும், YouVersion சம்பந்தமாக உங்களுக்கும் LifeChurch.tv -க்குமிடையே உள்ள எந்த முன் ஒப்பந்தங்களையும்  தள்ளி வைக்கவும் செய்கிறது. நீங்கள் கூடுதல் விதிமுறைகள் மற்றும் நிபந்தனைகளுக்கு உட்பட்டு இருக்கலாம்.  சட்டம் மற்றும் மன்றத்தின் தேர்ந்தெடுப்பு.உபயோக விதிமுறைகள் மற்றும் உங்களுக்கும்   LifeChurch.tv -க்கும் இடையே உள்ள உறவு சட்ட, விதி முரண்பாடுகளை சாராமல் ஓக்லஹோமா மாநில சட்டங்கள் மூலம் நிர்வகிக்கப்படுகிறது.நீங்களும் LifeChurch.tv -யும் ஓக்லஹோமா, ஓக்லஹோமா மாவட்டத்தில் அமைந்துள்ள நீதிமன்றங்களின் தனிப்பட்ட மற்றும் பிரத்தியேக அதிகார வரம்பிற்குள் சமர்ப்பிக்க சம்மதிக்கிறோம். <br><br> விலக்கு அளித்தலும் விதிகளின் தீவிரமும்.இந்த விதிமுறைகளில் எதையாவது செயல்படுத்தவோ அமல்படுத்தவோ LifeChurch.tv தவறி விடுவது அப்படிப்பட்ட எந்த உரிமை அல்லது கட்டுப்பாட்டு விதிகளை பின்பற்றுவதிலிருந்து விலக்கு அளித்தலாக அமையாது. (1) "
     profile:
+      tab friends: "நண்பர்கள்"
+      tab notes: "குறிப்புகள்"
+      tab bookmarks: "புத்தகக்குறிகள்"
+      tab badges: "Badges"
       first name: "முதல் பெயர்"
       last name: "கடைசிப் பெயர்"
       email: "மின்னஞ்சல் முகவரி"
@@ -404,9 +419,7 @@ ta:
     not found: "புத்தகக்குறிகள், உங்களுக்கு பிடித்தமான வேத பகுதிகளையோ அல்லது கடைசியாக நீங்கள் வாசித்த குறிப்பிட்ட புத்தகத்தில் உள்ள அதிகாரத்தையோ விரைவாக எடுக்க உதவுகிறது.  புத்தகக்குறியிட, ஒரு வேதவசனத்தை தெரிந்தெடுத்து, Bible readerல் மேலே தெரிந்தெடுக்கப்பட்ட பொத்தானை அமுக்கவும்.  "
     other user not found: "%{username} எந்த புக்மார்க்குகளையும் இதுவரை சேமிக்கவில்லை."
     creation form errors: "பின்வரும் பிழை (கள்) உங்கள் புக்மார்க் உருவாக்கத்தை தடுத்தது:"
-    successfully created: "புத்தகக்குறி சேர்க்கப்பட்டது"
-    successfully deleted: "புக்மார்க் அகற்றப்பட்டது "
-    successfully updated: "புக்மார்க் புதுப்பிக்கப்பட்டது"
+    create success: "புக்மார்க் சேமிக்கப்பட்டது"
     labels placeholder: "ஒன்றுக்கும் மேட்பட்ட label களை, காற்புள்ளியால் பிரிக்கவும்."
     save: "புத்தகக்குறியை சேமிக்கவும்"
     confirm delete: "ஆம், நான் சொல்வது நிச்சயமே"
@@ -417,9 +430,18 @@ ta:
     update: "புதுப்பிப்பு "
     color: "நிறம்:"
     version field: "பதிப்பு:"
+    form:
+      title field: "தலைப்பு:"
+      reference field: "குறிப்புதவி:"
+      labels field: "அடையாளச் சீட்டு (comma-separated):"
+      colors field: "நிறம்:"
+      save button: "புத்தகக்குறியை சேமிக்கவும்"
   badges:
     earned a badge: "ஒரு அடையாள வில்லையை சம்பாதித்துள்ளீர்கள்"
     user badges: "%{user} -ன் அடையாள வில்லைகள்"
+    earned date: "%{username} %{ago} முன்பு பெறப்பட்டது."
+    none me: "நீங்கள் இன்னும் எந்த badges-யும் பெற வில்லை."
+    none user: "%{username} இன்னும் எந்த badges-யும் பெற வில்லை."
   plans:
     title: "வாசிப்பு திட்டங்கள்"
     browse by category: "வகை வாரியாக உலவ "
